英語ローカライゼーション追加

--- a/localisation/english/countries_africa/geacps_EGY_l_english.yml
+++ b/localisation/english/countries_africa/geacps_EGY_l_english.yml
@@ -1,110 +1,108 @@
 ﻿l_english:
-#国家方針
- EGY_focus_tree:0 "[ROOT.GetName]の国家方針"
- EGY_survival_of_monarchy:0 "王政の存続"
- EGY_royal_foundation:0 "王室財団"
- EGY_cairo_national_museum:0 "カイロ国立博物館"
- EGY_hold_a_parliamentary_session:0 "議会を開く"
- EGY_lifting_ban_on_strikes:0 "ストライキの解禁"
- EGY_development_of_insurance_system:0 "保険制度の整備"
- EGY_democratic_constitutional_reform:0 "民主的改憲"
- EGY_utilization_GBR_connections:0 "[GBR.GetAdjective]のコネクションを利用"
- EGY_revolution_made:0 "革命はなされた！"
- EGY_new_constitution:0 "新たな憲法"
- EGY_utilization_of_royal_property:0 "王室財産の活用"
- EGY_free_officers_movement:0 "自由将校団"
- EGY_nasser_guidance:0 "ナセルの指導"
- EGY_weapons_from_CZE:0 "[CZE.GetAdjective]からの武器"
- EGY_socialist_division:0 "社会主義者の分断"
- EGY_incite_nationalism:0 "民族主義を焚きつける"
- EGY_communist_party:0 "共産党"
- EGY_faction_integration:0 "派閥の統合"
- EGY_penetration_to_workers:0 "労働者への浸透"
- EGY_grasp_of_military:0 "軍人の掌握"
- EGY_diplomacy_diversion:0 "外交転換"
- EGY_to_western_bloc:0 "西側へ"
- EGY_talks_with_ISR:0 "[ISR.GetAdjective]との会談"
- EGY_settlement:0 "和解"
- EGY_join_western_bloc:0 "西側陣営へ"
- EGY_from_the_arab_to_world:0 "アラブ世界から"
- EGY_independence_of_arab_world:0 "アラブ世界の独立"
- EGY_overthrow:0 "打倒"
- EGY_leader_of_middle_east:0 "中東の盟主"
- EGY_cairo_conference:0 "カイロ会談"
- EGY_to_eastern_bloc:0 "東側へ"
- EGY_certain_distance:0 "一定の距離"
- EGY_nonmilitary_exchange:0 "非軍事的交流"
- EGY_as_nonaligned_nation:0 "非同盟国家として"
- EGY_railroad_from_HUN:0 "$HUN_ADJ$からの鉄道"
- EGY_friendship_with_YUG:0 "[YUG.GetAdjective]との交流"
- EGY_arab_socialism:0 "アラブ式社会主義へ"
- EGY_joining_baath_party:0 "バアス党との合流"
- EGY_request_to_PER:0 "[PER.GetAdjective]への要求"
- EGY_arab_recovery:0 "アラブの回収"
- EGY_end_of_war_economy:0 "戦争景気の終了"
- EGY_support_for_misr_group:0 "ミスル・グループへの支援"
- EGY_nationalization_of_industry:0 "産業の国有化"
- EGY_economic_management_agency:0 "経済管理庁"
- EGY_steering_toward_liberalization:0 "自由化への舵取り"
- EGY_support_for_company_start_up:0 "企業立ち上げの支援"
- EGY_achieve_increase_in_domestic_demand:0 "内需増加を達成"
- EGY_egyptian_economic_independence_plan:0 "エジプト経済の独立計画"
- EGY_establishment_of_modern_banks:0 "近代式銀行の設立"
- EGY_subsidies_for_islamic_banks:0 "イスラム銀行への補助"
- EGY_promoting_entrepreneurship_to_wealthy:0 "国内産業の起業を促進"
- EGY_regulation_of_foreigninvested_enterprises:0 "外資企業の規制"
- EGY_investment_in_cotton_industry:0 "綿花産業への投資"
- EGY_modernization_of_agriculture:0 "農業の近代化"
- EGY_construction_of_nile_dam:0 "ナイルダムの建造"
- EGY_the_second_plan:0 "第二の計画"
- EGY_suez_canal:0 "スエズ運河"
- EGY_nationalization_of_canal:0 "運河の国有化"
- EGY_monopoly_on_stocks:0 "株の独占"
- EGY_suez_management_agency:0 "スエズ管理庁"
- EGY_tourism_industry:0 "観光産業"
- EGY_cairo_airport:0 "カイロ空港"
- EGY_reminder_to_GBR_FRA:0 "英仏への督促"
- EGY_assiut_agreement:0 "アシュート協定"
- EGY_development_of_red_sea_coast:0 "紅海沿岸の開発"
- EGY_overseas_worker:0 "在外労働者"
- EGY_gather_immigrants:0 "移民を集う"
- EGY_promote_influx:0 "流入を促進"
- EGY_simplification_of_passport_applications:0 "パスワード申請の簡略化"
- EGY_encourage_job_growth:0 "雇用増加を促進"
- EGY_expansion_of_public_works:0 "公共事業の拡大"
- EGY_measures_for_overcrowded_cities:0 "過密都市への対策"
- EGY_arab_league_conception:0 "アラブ連盟構想"
- EGY_loose_cooperation:0 "緩やかな協力を"
- EGY_joint_defence_council:0 "共同防衛理事会"
- EGY_red_sea_free_agreement:0 "紅海自由協定"
- EGY_islamic_countries_defense_pact:0 "イスラム諸国防衛協定"
- EGY_strong_coalition_concept:0 "強力な連合構想"
- EGY_pressure_on_LEB:0 "[LEB.GetAdjective]への圧力"
- EGY_national_unity_with_SYR:0 "[SYR.GetAdjective]との国家合同？"
- EGY_support_PAL:0 "パレスチナ支持を表明"
- EGY_middle_east_war:0 "中東戦争？"
- EGY_arab_union:0 "アラブ連合"
- EGY_military_preparation:0 "エジプトの軍備"
- EGY_army_reorganization:0 "陸軍再編"
- EGY_desert_tank:0 "砂漠の戦車"
- EGY_formulation_of_doctrine:0 "ドクトリンの策定"
- EGY_egyptan_fire_powar_warfare:0 "エジプト式火力戦"
- EGY_buy_from_GBR:0 "[GBR.GetAdjective]からの購入"
- EGY_contract_with_FRA:0 "[FRA.GetAdjective]との契約"
- EGY_reform_of_national_military_academy:0 "国立士官学校の改革"
- EGY_establishment_of_special_forces:0 "特殊部隊の設立"
- EGY_weapons_from_eastern_bloc:0 "東側からの武器"
- EGY_naval_reorganization:0 "海軍再編"
- EGY_buy_GBR_ships:0 "[GBR.GetAdjective]艦の購入"
- EGY_socotra_joint_exercise:0 "ソコトラ合同演習"
- EGY_buy_JAP_ships:0 "$JAP_ADJ$艦の購入"
- EGY_exchange_student_agreements:0 "交換留学協定"
- EGY_alexandria_military_port:0 "アレクサンドリア軍港"
- EGY_development_of_air_force:0 "空軍の開発"
- EGY_training_of_pilots:0 "パイロットの育成"
- EGY_western_bloc:0 "西側から"
- EGY_eastern_bloc:0 "東側から"
- EGY_cairo_air_base:0 "カイロ空軍基地"
- EGY_air_defence_network_for_whole_country:0 "全土の防空網"
- EGY_buy_radar:0 "レーダーの購入"
- 
+ EGY_survival_of_monarchy:0 "Royal Government Survives"
+ EGY_royal_foundation:0 "Royal Foundation"
+ EGY_cairo_national_museum:0 "Cairo National Museum"
+ EGY_hold_a_parliamentary_session:0 "Convene Parliament"
+ EGY_lifting_ban_on_strikes:0 "Lift Ban on Strikes"
+ EGY_development_of_insurance_system:0 "Develop an Insurance System"
+ EGY_democratic_constitutional_reform:0 "Democratic Amendment"
+ EGY_utilization_GBR_connections:0 "Use our [GBR.GetAdjective] Connections"
+ EGY_revolution_made:0 "The Revolution Triumphant!"
+ EGY_new_constitution:0 "New Constitution"
+ EGY_utilization_of_royal_property:0 "Use Royal Properties"
+ EGY_free_officers_movement:0 "The Free Officers"
+ EGY_nasser_guidance:0 "Nasser's Guidance"
+ EGY_weapons_from_CZE:0 "Weapons from the [CZE.GetAdjective]"
+ EGY_socialist_division:0 "Socialist Split"
+ EGY_incite_nationalism:0 "Incite Nationalism"
+ EGY_communist_party:0 "The Communist Party"
+ EGY_faction_integration:0 "Integrate the Factions"
+ EGY_penetration_to_workers:0 "Infiltrate the Workers"
+ EGY_grasp_of_military:0 "Control the Military"
+ EGY_diplomacy_diversion:0 "Diplomatic Direction"
+ EGY_to_western_bloc:0 "The Western Bloc"
+ EGY_talks_with_ISR:0 "Meet with the [ISR.GetAdjective]s"
+ EGY_settlement:0 "Compromise"
+ EGY_join_western_bloc:0 "Join the Western Bloc"
+ EGY_from_the_arab_to_world:0 "From the Arab World"
+ EGY_independence_of_arab_world:0 "Independent Arab World"
+ EGY_overthrow:0 "Overthrow"
+ EGY_leader_of_middle_east:0 "Head of the Middle East"
+ EGY_cairo_conference:0 "The Cairo Conference"
+ EGY_to_eastern_bloc:0 "The Eastern Bloc"
+ EGY_certain_distance:0 "A Certain Distance"
+ EGY_nonmilitary_exchange:0 "Non-Military Exchanges"
+ EGY_as_nonaligned_nation:0 "As a Non-Aligned Country"
+ EGY_railroad_from_HUN:0 "A $HUN_ADJ$ Railway"
+ EGY_friendship_with_YUG:0 "Mingle with the [YUG.GetAdjective]s"
+ EGY_arab_socialism:0 "Arab-style Socialism"
+ EGY_joining_baath_party:0 "Merge with the Ba'ath Party"
+ EGY_request_to_PER:0 "A Request for the [PER.GetAdjective]s"
+ EGY_arab_recovery:0 "Arab Recovery"
+ EGY_end_of_war_economy:0 "End the War Economy"
+ EGY_support_for_misr_group:0 "Support the Misr Groups"
+ EGY_nationalization_of_industry:0 "Nationalize the Industry"
+ EGY_economic_management_agency:0 "Economic Management Agency"
+ EGY_steering_toward_liberalization:0 "Steer towards Liberalization"
+ EGY_support_for_company_start_up:0 "Support Start-Up Companies"
+ EGY_achieve_increase_in_domestic_demand:0 "Meet the Increasing Domestic Demand"
+ EGY_egyptian_economic_independence_plan:0 "Egyptian Economic Independence Plan"
+ EGY_establishment_of_modern_banks:0 "Establish Modern Banks"
+ EGY_subsidies_for_islamic_banks:0 "Subsidize the Islamic Banks"
+ EGY_promoting_entrepreneurship_to_wealthy:0 "Promote the Start of a Domestic Industry"
+ EGY_regulation_of_foreigninvested_enterprises:0 "Regulate Foreign Companies"
+ EGY_investment_in_cotton_industry:0 "Invest in the Cotton Industry"
+ EGY_modernization_of_agriculture:0 "Agricultural Modernization"
+ EGY_construction_of_nile_dam:0 "Build the Nile Dam"
+ EGY_the_second_plan:0 "The Second Plan"
+ EGY_suez_canal:0 "The Suez Canal"
+ EGY_nationalization_of_canal:0 "Nationalize the Canal"
+ EGY_monopoly_on_stocks:0 "Monopoly on Shares"
+ EGY_suez_management_agency:0 "Suez Management Agency"
+ EGY_tourism_industry:0 "The Tourism Industry"
+ EGY_cairo_airport:0 "Cairo Airport"
+ EGY_reminder_to_GBR_FRA:0 "A Demand to England and France"
+ EGY_assiut_agreement:0 "The Asyut Accords"
+ EGY_development_of_red_sea_coast:0 "Develop the Red Sea Coast"
+ EGY_overseas_worker:0 "Overseas Workers"
+ EGY_gather_immigrants:0 "Attract Immigrants"
+ EGY_promote_influx:0 "Promote the Influx"
+ EGY_simplification_of_passport_applications:0 "Simplifed Passport Applications"
+ EGY_encourage_job_growth:0 "Encourage an Increase in Jobs"
+ EGY_expansion_of_public_works:0 "Expanded Public Works"
+ EGY_measures_for_overcrowded_cities:0 "Overcrowded Cities Countermeasures"
+ EGY_arab_league_conception:0 "The Arab League Concept"
+ EGY_loose_cooperation:0 "Loose Cooperation"
+ EGY_joint_defence_council:0 "Joint Defense Council"
+ EGY_red_sea_free_agreement:0 "Free Red Sea Agreement"
+ EGY_islamic_countries_defense_pact:0 "Islamic Defensive Pact"
+ EGY_strong_coalition_concept:0 "Strong Union Concept"
+ EGY_pressure_on_LEB:0 "Pressure the [LEB.GetAdjective]"
+ EGY_national_unity_with_SYR:0 "Unification with the [SYR.GetAdjective]s?"
+ EGY_support_PAL:0 "Affirm Support for Palestine"
+ EGY_middle_east_war:0 "Middle Eastern War?"
+ EGY_arab_union:0 "Arab Union"
+ EGY_military_preparation:0 "Egyptian Military Preparations"
+ EGY_army_reorganization:0 "Army Reorganization"
+ EGY_desert_tank:0 "Desert Tanks"
+ EGY_formulation_of_doctrine:0 "Formulate a Doctrine"
+ EGY_egyptan_fire_powar_warfare:0 "Egyptian Firepower"
+ EGY_buy_from_GBR:0 "Buy from the [GBR.GetAdjective]"
+ EGY_contract_with_FRA:0 "Agreement with the [FRA.GetAdjective]"
+ EGY_reform_of_national_military_academy:0 "Reform the National Military Academy"
+ EGY_establishment_of_special_forces:0 "Set Up the Special Forces"
+ EGY_weapons_from_eastern_bloc:0 "Weapons from the East"
+ EGY_naval_reorganization:0 "Navy Reorganization"
+ EGY_buy_GBR_ships:0 "Buy [GBR.GetAdjective] Ships"
+ EGY_socotra_joint_exercise:0 "Joint Exercise in Socotra"
+ EGY_buy_JAP_ships:0 "Buy $JAP_ADJ$ Ships"
+ EGY_exchange_student_agreements:0 "Student Exchange Programs"
+ EGY_alexandria_military_port:0 "Alexandria Military Harbor"
+ EGY_development_of_air_force:0 "Develop an Air Force"
+ EGY_training_of_pilots:0 "Train Pilots"
+ EGY_western_bloc:0 "From the West"
+ EGY_eastern_bloc:0 "From the East"
+ EGY_cairo_air_base:0 "Cairo Air Base"
+ EGY_air_defence_network_for_whole_country:0 "Nationwide Air Defense Network"
+ EGY_buy_radar:0 "Buy Radars"
+ EGY_focus_tree:0 "[ROOT.GetName] focus tree"
