--- a/localisation/english/countries_asia/geacps_AFG_l_english.yml
+++ b/localisation/english/countries_asia/geacps_AFG_l_english.yml
@@ -1,11 +1,2 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- AFG_graveyard_of_empires:0 "帝国の墓場"
-
-#ディシジョン
- 
-
-#イベント
+ AFG_graveyard_of_empires:0 "Graveyard of Empires"
