--- a/localisation/english/countries_asia/geacps_JOR_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JOR_l_english.yml
@@ -1,23 +1,14 @@
 ﻿l_english:
-#国家方針
- JOR_focus_tree:0 "[ROOT.GetName]の国家方針"
- JOR_signing_london_treaty:0 "ロンドン条約の締結"
-
-#国民精神
- 
-
-#ディシジョン
- 
-
-#イベント
- JOR.0.t:0 "ロンドン条約締結"
- JOR.0.d:0 "本日ロンドンにてイギリス、トランスヨルダン間で条約が締結された。\n条約の内容はトランスヨルダンの独立であったが完全な独立とは言えない内容である。"
- JOR.0.0:0 "ようやく独立だな。"
- JOR.0.1:0 "本当に独立なのか？"
- JOR.1.t:0 "トランスヨルダンの王"
- JOR.1.d:0 "トランスヨルダン議会は独立に際して首長から王に称号を変更を行った。\n変更に伴い国名の政体も変更となるがどのようにすべきだろうか？"
- JOR.1.0:0 "トランスヨルダン王国としよう"
- JOR.1.1:0 "トランスヨルダン・ハシミテ王国としよう"
- JOR.2.t:0 "ロンドン条約施行"
- JOR.2.d:0 "本日ロンドン条約が施行されトランスヨルダンはイギリスからの独立を達成した。未だ主権制限は存在するものの一応の独立国としてはなったのだ。"
- JOR.2.0:0 "完全な独立はいつになるかな？"
+ JOR_signing_london_treaty:0 "Conclude the London Treaty"
+ JOR.0.t:0 "Signing the London Treaty"
+ JOR.0.d:0 "Today, in London, a treaty was signed between Great Britain and Transjordan.\nAlthough its contents will regulate Transjordanian independence, the region won't be completely autonomous from the English just yet."
+ JOR.0.0:0 "Finally free."
+ JOR.0.1:0 "Are they really independent?"
+ JOR.1.t:0 "The King of Transjordan"
+ JOR.1.d:0 "Upon independence, the Transjordani Parliament also ratified the change of title of the Head of State from Chief to King.\nWith this change, the name of the country will also be modified. What should we do?"
+ JOR.1.0:0 "Go with Kingdom of Transjordan"
+ JOR.1.1:0 "Go with Hashemite Kingdom of Transjordan"
+ JOR.2.t:0 "Enforcing the London Treaty"
+ JOR.2.d:0 "The London Treaty came into effect today, and Transjordan achieved independence from the United Kingdom. Although there are still restrictions on its sovereignty, this will work as a first try at independence for the country."
+ JOR.2.0:0 "When will total independence come?"
+ JOR_focus_tree:0 "[ROOT.GetName] focus tree"
