--- a/localisation/english/countries_europe/geacps_ALB_l_english.yml
+++ b/localisation/english/countries_europe/geacps_ALB_l_english.yml
@@ -1,11 +1,2 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- ALB_directorate_of_state_security:0 "シグリミ"
-
-#ディシジョン
- 
-
-#イベント
+ ALB_directorate_of_state_security:0 "Sigurimi"
