--- a/localisation/english/countries_europe/geacps_BEL_l_english.yml
+++ b/localisation/english/countries_europe/geacps_BEL_l_english.yml
@@ -1,15 +1,5 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- 
-
-#ディシジョン
- 
-
-#イベント
- BEL.0.t:0 "汎ベルギー主義"
+ BEL.0.t:0 "Pan Beligiumnism"
  BEL.0.d:0 "A"
- BEL.0.0:0 "現状維持"
- BEL.0.1:0 "自然国境"
+ BEL.0.0:0 "Status Quo"
+ BEL.0.1:0 "Natural border"
