--- a/localisation/english/countries_europe/geacps_BUL_l_english.yml
+++ b/localisation/english/countries_europe/geacps_BUL_l_english.yml
@@ -1,12 +1,3 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
  BUL_committee_for_state_security:0 "DS"
- BUL_Simeon_Saxe_Coburg_Gotha_In_Exile:0 "シメオン2世の亡命"
-
-#ディシジョン
- 
-
-#イベント
+ BUL_Simeon_Saxe_Coburg_Gotha_In_Exile:0 "Simeon II in Exile"
