--- a/localisation/english/countries_europe/geacps_HUN_l_english.yml
+++ b/localisation/english/countries_europe/geacps_HUN_l_english.yml
@@ -1,17 +1,8 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
+ HUN.0.t:0 "The Danube Federal Initiative"
+ HUN.0.d:0 "Event text here"
  HUN_state_protection_authority:0 "PRO"
- HUN_Miklos_Horthy_In_Exile:0 "”ヴィテーズ”の亡命"
-
-#ディシジョン
- 
-
-#イベント
- HUN.0.t:0 "ドナウ連邦構想"
- HUN.0.d:0 "A"
- HUN.0.0:0 "一度こわしたら二度ともとに戻ることはない..."
- HUN.0.1:0 "中欧諸国の経済力は脆弱なため、社会民主的経済共同体を作るべきである。"
- HUN.0.2:0 "中欧諸国の経済力は脆弱なため、権威民主的経済共同体を作るべきである。"
+ HUN_Miklos_Horthy_In_Exile:0 "The \"Vitéz\" in Exile"
+ HUN.0.0:0 "Once broken, it can never be restored..."
+ HUN.0.1:0 "Since Central Europe's economic power is weak, a social-democratic economic community should be created."
+ HUN.0.2:0 "Since Central Europe's economic power is weak, an authoritarian-democratic economic community should be created."
