--- a/localisation/english/countries_europe/geacps_ROM_l_english.yml
+++ b/localisation/english/countries_europe/geacps_ROM_l_english.yml
@@ -1,16 +1,7 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- ROM_department_of_state_security:0 "セクリターテ"
- ROM_Michael_I_In_Exile:0 "ミハイ1世の亡命"
-
-#ディシジョン
- 
-
-#イベント
- ROM.1.t:0 "12月革命"
+ ROM_department_of_state_security:0 "Securitate"
+ ROM_Michael_I_In_Exile:0 "Michael I in Exile"
+ ROM.1.t:0 "The December Revolution"
  ROM.1.d:0 "A"
- ROM.1.0:0 "全ての権力を共産党に..."
- ROM.1.1:0 "王に力を"
+ ROM.1.0:0 "All power to the Communists..."
+ ROM.1.1:0 "Give power to the King"
