--- a/localisation/english/countries_europe/geacps_SPR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SPR_l_english.yml
@@ -1,16 +1,7 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- SPR_recovery_from_civil_war:0 "内戦からの復興"
+ SPR_recovery_from_civil_war:0 "Recovery From Civil War"
  SPR_recovery_from_civil_war_desc:0 "3年間続いた内戦はスペインを徹底的に破壊した、我々は勝利したが、その祝勝をあげることなく瓦礫を片付け、廃墟に集って再建計画を練る必要があった。そして未だに復興は終わっていない。"
- SPR_aftermath_of_the_franco_dictatorship:0 "フランコ独裁の余波"
+ SPR_aftermath_of_the_franco_dictatorship:0 "The Aftermath of the Franco Dictatorship"
  SPR_aftermath_of_the_franco_dictatorship_desc:0 "カウディーリョたるフランシスコ・フランコ将軍は、スペインの絶対的支配者である。彼は先の大戦において卓越した外交センスで中立を維持し、祖国を破滅から救った英雄であるが、彼の独裁政治によって自由が制限され、民衆が抑圧を受けているのは事実である。"
- SPR_destroyed_industrial_infrastructure:0 "破壊された産業基盤"
+ SPR_destroyed_industrial_infrastructure:0 "Destroyed Industrial Infrastructure"
  SPR_destroyed_industrial_infrastructure_desc:0 "内戦によってスペインの産業は跡形もなく破壊された、それに加え一部の人々がメキシコなどの新大陸諸国に渡ったことによって熟練技能者の絶対的な数も少なくなっている。"
- 
-#ディシジョン
- 
-
-#イベント
