--- a/localisation/english/countries_europe/geacps_WGR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_WGR_l_english.yml
@@ -1,12 +1,3 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- WGR_republic_of_Bonn:0 "ボン帝国"
- WGR_the_east-west_german_wall:0 "”東西ドイツ”の壁"
-
-#ディシジョン
- 
-
-#イベント
+ WGR_republic_of_Bonn:0 "Bonn Empire"
+ WGR_the_east-west_german_wall:0 "\"East-West Germany\" Wall"
