--- a/localisation/english/generic/geacps_calendar_era_l_english.yml
+++ b/localisation/english/generic/geacps_calendar_era_l_english.yml
@@ -1,61 +1,49 @@
 ﻿l_english:
- geacps_calendar_era_t:0 "[GetEraName]"
  geacps_calendar_era_t:0 "[GetEraDesc]"
  geacps_calendar_era_tt:0 "[GetEraNameValue]"
- 
- CALENDAR_JAP_imperial_year_t:0 "神武天皇即位紀元"
+ CALENDAR_JAP_imperial_year_t:0 "The Era after the Enthronement of Emperor Jimmu"
  CALENDAR_JAP_imperial_year_d:0 "神武天皇即位紀元は初代天皇である神武天皇が即位したとされる年を元年とする紀年法である。"
- CALENDAR_JAP_imperial_year_value:0 "皇紀[?global.CALENDAR_JAP_imperial_year|T0]年"
- 
- CALENDAR_buddhist_calendar_t:0 "仏滅紀元"
- CALENDAR_buddhist_calendar_d:0 "仏滅紀元"
- CALENDAR_buddhist_calendar_value:0 "仏暦[?global.CALENDAR_buddhist_calendar|T0]年"
- 
- CALENDAR_christian_era_t:0 "キリスト紀元"
- CALENDAR_christian_era_d:0 "キリスト紀元"
- CALENDAR_christian_era_value:0 "西暦[?global.year|T0]年"
- 
- CALENDAR_PER_year_value:0 "ペルシャ暦[?global.CALENDAR_PER_year|T0]年"
- 
- CALENDAR_minguo_calendar_t:0 "民国紀元"
- CALENDAR_minguo_calendar_d:0 "民国紀元"
- CALENDAR_minguo_calendar_value:0 "民国[?global.CALENDAR_minguo_calendar|T0]年"
- 
- CALENDAR_JAP_era_showa_t:0 "昭和"
- CALENDAR_JAP_era_showa_d:0 "昭和"
- CALENDAR_JAP_era_showa_value:0 "昭和[?global.CALENDAR_JAP_era|T0]年"
- CALENDAR_JAP_era_heisei_t:0 "平成"
- CALENDAR_JAP_era_heisei_d:0 "平成"
- CALENDAR_JAP_era_heisei_value:0 "平成[?global.CALENDAR_JAP_era|T0]年"
- CALENDAR_JAP_era_heisei_value_1:0 "平成元年"
- CALENDAR_JAP_era_reiwa_t:0 "令和"
- CALENDAR_JAP_era_reiwa_d:0 "令和"
- CALENDAR_JAP_era_reiwa_value:0 "令和[?global.CALENDAR_JAP_era|T0]年"
- CALENDAR_JAP_era_reiwa_value_1:0 "令和元年"
- 
- CALENDAR_MAN_era_kangde_t:0 "康徳"
- CALENDAR_MAN_era_kangde_d:0 "康徳"
- CALENDAR_MAN_era_kangde_value:0 "康徳[?global.CALENDAR_MAN_era|T0]年"
- 
- CALENDAR_VIN_era_baodai_t:0 "保大"
- CALENDAR_VIN_era_baodai_d:0 "保大"
- CALENDAR_VIN_era_baodai_value:0 "保大[?global.CALENDAR_VIN_era|T0]年"
- 
- CALENDAR_stems_and_branches_t:0 "干支"
- CALENDAR_stems_and_branches_d:0 "干支"
+ CALENDAR_JAP_imperial_year_value:0 "Kōki [?global.CALENDAR_JAP_imperial_year|T0]"
+ CALENDAR_buddhist_calendar_t:0 "The Buddhist Calendar"
+ CALENDAR_buddhist_calendar_d:0 "The Buddhist Calendar"
+ CALENDAR_buddhist_calendar_value:0 "[?global.CALENDAR_buddhist_calendar|T0] BE"
+ CALENDAR_christian_era_t:0 "The Christian Era"
+ CALENDAR_christian_era_d:0 "The Christian Era"
+ CALENDAR_christian_era_value:0 "[?global.year|T0] CE"
+ CALENDAR_PER_year_value:0 "[?global.CALENDAR_PER_year|T0] SH"
+ CALENDAR_minguo_calendar_t:0 "The Minguo Calendar"
+ CALENDAR_minguo_calendar_d:0 "The Minguo Calendar"
+ CALENDAR_minguo_calendar_value:0 "ROC [?global.CALENDAR_minguo_calendar|T0]"
+ CALENDAR_JAP_era_showa_t:0 "Shōwa"
+ CALENDAR_JAP_era_showa_d:0 "Shōwa"
+ CALENDAR_JAP_era_showa_value:0 "Shōwa [?global.CALENDAR_JAP_era|T0]"
+ CALENDAR_JAP_era_heisei_t:0 "Heisei"
+ CALENDAR_JAP_era_heisei_d:0 "Heisei"
+ CALENDAR_JAP_era_heisei_value:0 "Heisei [?global.CALENDAR_JAP_era|T0]"
+ CALENDAR_JAP_era_heisei_value_1:0 "Heisei 1"
+ CALENDAR_JAP_era_reiwa_t:0 "Reiwa"
+ CALENDAR_JAP_era_reiwa_d:0 "Reiwa"
+ CALENDAR_JAP_era_reiwa_value:0 "Reiwa [?global.CALENDAR_JAP_era|T0]"
+ CALENDAR_JAP_era_reiwa_value_1:0 "Reiwa 1"
+ CALENDAR_MAN_era_kangde_t:0 "Kangde"
+ CALENDAR_MAN_era_kangde_d:0 "Kangde"
+ CALENDAR_MAN_era_kangde_value:0 "Kangde [?global.CALENDAR_MAN_era|T0]"
+ CALENDAR_VIN_era_baodai_t:0 "Baodai"
+ CALENDAR_VIN_era_baodai_d:0 "Baodai"
+ CALENDAR_VIN_era_baodai_value:0 "Baodai [?global.CALENDAR_VIN_era|T0]"
+ CALENDAR_stems_and_branches_t:0 "Stems-and-Branches"
+ CALENDAR_stems_and_branches_d:0 "Stems-and-Branches"
  CALENDAR_stems_and_branches_value:0 "[GetHeavenlyStems][GetEarthlyBranches]"
- 
  CALENDAR_heavenly_stems_1:0 "甲"
  CALENDAR_heavenly_stems_2:0 "乙"
  CALENDAR_heavenly_stems_3:0 "丙"
  CALENDAR_heavenly_stems_4:0 "丁"
- CALENDAR_heavenly_stems_5:0 "戊"
+ CALENDAR_heavenly_stems_5:0 "戌"
  CALENDAR_heavenly_stems_6:0 "己"
  CALENDAR_heavenly_stems_7:0 "庚"
  CALENDAR_heavenly_stems_8:0 "辛"
  CALENDAR_heavenly_stems_9:0 "壬"
  CALENDAR_heavenly_stems_10:0 "癸"
- 
  CALENDAR_earthly_branches_1:0 "子"
  CALENDAR_earthly_branches_2:0 "丑"
  CALENDAR_earthly_branches_3:0 "寅"
