--- a/localisation/english/generic/geacps_ideologies_l_english.yml
+++ b/localisation/english/generic/geacps_ideologies_l_english.yml
@@ -1,84 +1,71 @@
 ﻿l_english:
-#Total Socialism
- total_socialism:0 "全体社会主義"
- total_socialism_noun:0 "全体社会主義"
- total_socialism_desc:0 "全体主義政権"
- total_socialism_drift:0 "日毎の全体的社会主義への支援"
- total_socialism_acceptance:0 "全体社会主義者との外交の容認"
- total_socialism_ideology:0 "全体社会主義"
+ total_socialism:0 "Totalitarian Socialist"
+ total_socialism_noun:0 "Totalitarian Socialism"
+ total_socialism_desc:0 "Totalitarian Regime"
+ radical_socialism:0 "Radical Socialist"
+ radical_socialism_noun:0 "Radical Socialism"
+ radical_socialism_desc:0 "Totalitarian Regime"
+ social_democracy:0 "Social Democratic"
+ social_democracy_noun:0 "Social Democracy"
+ social_democracy_desc:0 "Democratic Regime"
+ authoritative_democracy:0 "Authoritarian Democratic"
+ authoritative_democracy_noun:0 "Authoritarian Democracy"
+ authoritative_democracy_desc:0 "Democratic Regime"
+ national_populism:0 "National Populist"
+ national_populism_noun:0 "National Populism"
+ national_populism_desc:0 "Totalitarian Regime"
+ total_socialism_drift:0 "Daily Totalitarian Socialist support"
+ radical_socialism_drift:0 "Daily Radical Socialist support"
+ social_democracy_drift:0 "Daily Social Democratic support"
+ authoritative_democracy_drift:0 "Daily Authoritarian Democratic support"
+ national_populism_drift:0 "Daily National Populist support"
+ total_socialism_acceptance:0 "Acceptance of Totalitarian Socialist diplomacy"
+ radical_socialism_acceptance:0 "Acceptance of Radical Socialist diplomacy"
+ social_democracy_acceptance:0 "Acceptance of Social Democratic diplomacy"
+ authoritative_democracy_acceptance:0 "Acceptance of Authoritarian Democratic diplomacy"
+ national_populism_acceptance:0 "Acceptance of National Populist diplomacy"
+ total_socialism_ideology:0 "Totalitarian Socialism"
  total_socialism_ideology_desc:0 ""
- stalinism_ideology:0 "スターリン主義"
- stalinism_ideology_desc:0 "スターリン主義とは個人崇拝、暴力的対外政策、恐怖政治や大規模な粛清を特徴とし、スターリン自身はマルクス・レーニン主義と呼んだ全体主義である。"
- trotskyism_ideology:0 "トロツキー主義"
- trotskyism_ideology_desc:0 ""
- bukharinism_ideology:0 "ブハーリン主義"
- bukharinism_ideology_desc:0 ""
- maoism_ideology:0 "毛沢東主義"
- maoism_ideology_desc:0 ""
-
-#Radical Socialism
- radical_socialism:0 "急進社会主義"
- radical_socialism_noun:0 "急進社会主義"
- radical_socialism_desc:0 "全体主義政権"
- radical_socialism_drift:0 "日毎の急進的社会主義への支援"
- radical_socialism_acceptance:0 "急進的社会主義者との外交の容認"
- radical_socialism_ideology:0 "急進社会主義"
+ radical_socialism_ideology:0 "Radical Socialism"
  radical_socialism_ideology_desc:0 ""
- 
-#Social Democracy
- social_democracy:0 "社会民主主義"
- social_democracy_noun:0 "社会民主主義"
- social_democracy_desc:0 "民主主義政権"
- social_democracy_drift:0 "日毎の社会民主主義への支援"
- social_democracy_acceptance:0 "社会民主主義者との外交の容認"
- social_democracy_ideology:0 "社会民主主義"
+ social_democracy_ideology:0 "Social Democracy"
  social_democracy_ideology_desc:0 ""
- 
-#Liberal Democracy
- liberal_democracy:0 "自由民主主義"
- liberal_democracy_noun:0 "自由民主主義"
- liberal_democracy_desc:0 "民主主義政権"
- liberal_democracy_drift:0 "日毎の自由民主主義への支援"
- liberal_democracy_acceptance:0 "自由民主主義者との外交の容認"
- liberal_democracy_ideology:0 "自由民主主義"
+ liberal_democracy:0 "Liberal Democratic"
+ liberal_democracy_noun:0 "Liberal Democracy"
+ liberal_democracy_desc:0 "Democratic Regime"
+ liberal_democracy_drift:0 "Daily Liberal Democratic support"
+ liberal_democracy_acceptance:0 "Acceptance of Liberal Democratic diplomacy"
+ liberal_democracy_ideology:0 "Liberal Democracy"
  liberal_democracy_ideology_desc:0 ""
- 
-#Conservative Democracy
- conservative_democracy:0 "保守民主主義"
- conservative_democracy_noun:0 "保守民主主義"
- conservative_democracy_desc:0 "民主主義政権"
- conservative_democracy_drift:0 "日毎の保守民主主義への支援"
- conservative_democracy_acceptance:0 "保守民主主義者との外交の容認"
- conservative_democracy_ideology:0 "保守民主主義"
+ conservative_democracy:0 "Conservative Democratic"
+ conservative_democracy_noun:0 "Conservative Democracy"
+ conservative_democracy_desc:0 "Democratic Regime"
+ conservative_democracy_drift:0 "Daily Conservative Democratic support"
+ conservative_democracy_acceptance:0 "Acceptance of Conservative Democratic diplomacy"
+ conservative_democracy_ideology:0 "Conservative Democracy"
  conservative_democracy_ideology_desc:0 ""
- christian_democracy_ideology:0 "キリスト教民主主義"
- christian_democracy_ideology_desc:0 ""
- 
-#Authoritative Democracy
- authoritative_democracy:0 "権威民主主義"
- authoritative_democracy_noun:0 "権威民主主義"
- authoritative_democracy_desc:0 "民主主義政権"
- authoritative_democracy_drift:0 "日毎の権威民主主義への支援"
- authoritative_democracy_acceptance:0 "権威民主主義者との外交の容認"
- authoritative_democracy_ideology:0 "権威民主主義"
+ authoritative_democracy_ideology:0 "Authoritarian Democracy"
  authoritative_democracy_ideology_desc:0 ""
- 
-#National Authoritarianism
- national_authoritarianism:0 "国家権威主義"
- national_authoritarianism_noun:0 "国家権威主義"
- national_authoritarianism_desc:0 "全体主義政権"
- national_authoritarianism_drift:0 "日毎の国家権威主義への支援"
- national_authoritarianism_acceptance:0 "国家権威主義者との外交の容認"
- national_authoritarianism_ideology:0 "国家権威主義"
+ national_authoritarianism:0 "National Authoritarian"
+ national_authoritarianism_noun:0 "National Authoritarianism"
+ national_authoritarianism_desc:0 "Totalitarian Regime"
+ national_authoritarianism_drift:0 "Daily National Authoritarian support"
+ national_authoritarianism_acceptance:0 "Acceptance of National Authoritarian diplomacy"
+ national_authoritarianism_ideology:0 "National Authoritarianism"
  national_authoritarianism_ideology_desc:0 ""
- 
-#National Populism
- national_populism:0 "国家大衆主義"
- national_populism_noun:0 "国家大衆主義"
- national_populism_desc:0 "全体主義政権"
- national_populism_drift:0 "日毎の国家大衆主義への支援"
- national_populism_acceptance:0 "国家大衆主義者との外交の容認"
- national_populism_ideology:0 "国家大衆主義"
+ national_populism_ideology:0 "National Populism"
  national_populism_ideology_desc:0 ""
- national_socialism_ideology:0 "国民社会主義"
- national_socialism_ideology_desc:0 "かつてドイツにこの主義を掲げた与党があった。しかし先の大戦を引き起こし世界から忌み嫌われることとなった。"
+ stalinism_ideology:0 "Stalinism"
+ stalinism_ideology_desc:0 "Defined by Josef Stalin as \"Marxism-Leninism\", Stalinism is characterized by personality cults, aggressive foreign policy, and a domestic reign of terror through mass-purges."
+ trotskyism_ideology:0 "Trotskyism"
+ trotskyism_ideology_desc:0 ""
+ bukharinism_ideology:0 "Bukharinism"
+ bukharinism_ideology_desc:0 ""
+ national_socialism_ideology:0 "National Socialism"
+ national_socialism_ideology_desc:0 "The former ruling party of Germany advocated for this ideology. However, it was the cause of the last war, and is now hated by the world at large."
+ marxism-leninism_ideology:0 "Marxism-Leninism"
+ marxism-leninism_ideology_desc:0 ""
+ maoism_ideology:0 "Maoism"
+ maoism_ideology_desc:0 ""
+ christian_democracy_ideology:0 "Christian Democracy"
+ christian_democracy_ideology_desc:0 ""
