--- a/localisation/english/generic/geacps_modifiers_l_english.yml
+++ b/localisation/english/generic/geacps_modifiers_l_english.yml
@@ -1,13 +1,11 @@
 ﻿l_english:
- a_jap_s_a_jap_and_that_s_all_there_is_to_it:0 "ジャップはジャップ。それ以上の何者でもない。"
- america_imperialism:0 "米帝"
- devils_american_imperialism:0 "鬼畜米帝"
- konoe_cabinet_makes_concessions:0 "近衛内閣が譲歩"
- small_countries_of_coloured_people:0 "有色人種の小国"
- social_imperialism:0 "社会帝国主義"
- support_our_country_on_the_falkland_Islands_dispute:0 "フォークランド諸島問題で我が国を支持"
- the_sick_in_europe:0 "ヨーロッパの病人"
- yellow_monkey:0 "黄色いサル"
-
-#未実装
- anti_japan_imperialism:0 "反日本帝国主義"
+ a_jap_s_a_jap_and_that_s_all_there_is_to_it:0 "A Jap is a Jap. End of discussion."
+ america_imperialism:0 "American Imperialism"
+ devils_american_imperialism:0 "Evil American Imperialism"
+ konoe_cabinet_makes_concessions:0 "Konoe Cabinet made Concessions"
+ small_countries_of_coloured_people:0 "Land of Colored People"
+ social_imperialism:0 "Social Imperialists"
+ support_our_country_on_the_falkland_Islands_dispute:0 "Supported us in the Falklands Dispute"
+ the_sick_in_europe:0 "Sick Man of Europe"
+ yellow_monkey:0 "Yellow Monkeys"
+ anti_japan_imperialism:0 "Against Japanese Imperialism"
