--- a/localisation/english/generic/geacps_parties_l_english.yml
+++ b/localisation/english/generic/geacps_parties_l_english.yml
@@ -1,228 +1,169 @@
 ﻿l_english:
-#汎用
- PARTY_illegal_party:0 "§R非合法政党§!"
- PARTY_illegal_party_long:0 "§R非合法政党§!"
- 
- PARTY_centre_party:0 "中央党"
- PARTY_centre_party_long:0 "中央党"
- PARTY_communist_party:0 "共産党"
- PARTY_communist_party_long:0 "共産党"
- PARTY_conservative_party:0 "保守党"
- PARTY_conservative_party_long:0 "保守党"
- PARTY_governor_general:0 "総督"
- PARTY_governor_general_long:0 "総督"
- PARTY_independent_politician:0 "無所属"
- PARTY_independent_politician_long:0 "無所属"
- PARTY_labour_party:0 "労働党"
- PARTY_labour_party_long:0 "労働党"
- PARTY_liberal_party:0 "自由党"
- PARTY_liberal_party_long:0 "自由党"
- PARTY_provisional_government:0 "臨時政府"
- PARTY_provisional_government_long:0 "臨時政府"
- PARTY_social_democratic_party:0 "社会民主党"
- PARTY_social_democratic_party_long:0 "社会民主党"
- PARTY_national_democratic_union:0 "国民民主連合"
- PARTY_national_democratic_union_long:0 "国民民主連合"
- PARTY_republican_party:0 "共和党"
- PARTY_republican_party_long:0 "共和党"
- 
-##アジア
-#BHR-バーレーン
- PARTY_khalifa_house:0 "ハリーファ家"
- PARTY_khalifa_house_long:0 "ハリーファ家"
- 
-#BRN-ブルネイ
- PARTY_bolkiah_house:0 "ボルキア家"
- PARTY_bolkiah_house_long:0 "ボルキア家"
- 
-#CHI-中華
- PARTY_central_china_political_council:0 "華中政務委員会"
- PARTY_central_china_political_council_long:0 "華中政務委員会"
- PARTY_chines_communist_party:0 "共産党"
- PARTY_chines_communist_party_long:0 "中国共産党"
- PARTY_chines_nationalist_party:0 "国民党"
- PARTY_chines_nationalist_party_long:0 "中国国民党"
- PARTY_north_china_political_council:0 "華北政務委員会"
- PARTY_north_china_political_council_long:0 "華北政務委員会"
- PARTY_provisional_government_administrative_commission:0 "行政委員会"
- PARTY_provisional_government_administrative_commission_long:0 "臨時政府行政委員会"
- PARTY_reformed_government_executive_court:0 "行政院"
- PARTY_reformed_government_executive_court_long:0 "維新政府行政院"
- 
-#DLI-大連
- PARTY_kwantung_asian_development_service_league:0 "興亜奉公連盟"
- PARTY_kwantung_asian_development_service_league_long:0 "関東州興亜奉公連盟"
- PARTY_kwantung_bureau:0 "関東局"
- PARTY_kwantung_bureau_long:0 "関東局"
- 
-#INS-インドネシア
- PARTY_indonesia_service_association:0 "奉公会"
- PARTY_indonesia_service_association_long:0 "インドネシア奉公会"
- PARTY_southern_army_military_government:0 "軍政監部"
- PARTY_southern_army_military_government_long:0 "南方軍軍政監部"
- 
-#JAP-日本
- PARTY_imperial_rule_assistance_association:0 "大政翼賛会"
- PARTY_imperial_rule_assistance_association_long:0 "大政翼賛会"
- PARTY_greater_japan_party:0 "大日本党"
- PARTY_greater_japan_party_long:0 "大日本党"
- 
-#KOR-朝鮮
- PARTY_choson_government-general:0 "朝鮮総督府"
- PARTY_choson_government-general_long:0 "朝鮮総督府"
- PARTY_national_mobilization_choson_league:0 "国民総力朝鮮連盟"
- PARTY_national_mobilization_choson_league_long:0 "国民総力朝鮮連盟"
- 
-#KUW-クウェート
- PARTY_sabah_house:0 "サバーハ家"
- PARTY_sabah_house_long:0 "サバーハ家"
- 
-#MAN-満州
- PARTY_manchukuo_concordia_association:0 "協和会"
- PARTY_manchukuo_concordia_association_long:0 "満州国協和会"
- 
-#MON-モンゴル
- PARTY_menggu_political_council:0 "蒙古政務委員会"
- PARTY_menggu_political_council_long:0 "蒙古政務委員会"
- 
-#OMA-オマーン
- PARTY_busaid_house:0 "ブーサイード家"
- PARTY_busaid_house_long:0 "ブーサイード家"
- 
-#SAU-サウジアラビア
- PARTY_saud_house:0 "サウード家"
- PARTY_saud_house_long:0 "サウード家"
- 
-#SRW-サラワク
- PARTY_brooke_house:0 "ブルック家"
- PARTY_brooke_house_long:0 "ブルック家"
- 
-#TWN-台湾
- PARTY_imperial_service_association:0 "皇民奉公会"
- PARTY_imperial_service_association_long:0 "皇民奉公会"
- PARTY_taiwan_government-general:0 "台湾総督府"
- PARTY_taiwan_government-general_long:0 "台湾総督府"
- 
-##ヨーロッパ
-#FRA-フランス
- PARTY_french_communist_party:0 "共産党"
- PARTY_french_communist_party_long:0 "フランス共産党"
- PARTY_popular_republican_movement:0 "大衆共和運動"
- PARTY_popular_republican_movement_long:0 "大衆共和運動"
- PARTY_radical-socialist_and_radical_republican_party:0 "急進党"
- PARTY_radical-socialist_and_radical_republican_party_long:0 "急進社会主義及び急進共和主義党"
- PARTY_liberty_republican_party:0 "自由共和党"
- PARTY_liberty_republican_party_long:0 "自由共和党"
- PARTY_workers_international_french_section:0 "社会党"
- PARTY_workers_international_french_section_long:0 "労働インターナショナル・フランス支部"
- 
-#GBR-グレートブリテン
- PARTY_common_wealth_party:0 "連邦党"
- PARTY_common_wealth_party_long:0 "連邦党"
- PARTY_great_britain_communist_party:0 "共産党"
- PARTY_great_britain_communist_party_long:0 "グレートブリテン共産党"
- 
-#GER
+ PARTY_illegal_party:0 "§RIllegal Political Party§!"
+ PARTY_illegal_party_long:0 "§RIllegal Political Party§!"
+ PARTY_centre_party:0 "Centre Party"
+ PARTY_centre_party_long:0 "Centre Party"
+ PARTY_communist_party:0 "Communist Party"
+ PARTY_communist_party_long:0 "Communist Party"
+ PARTY_conservative_party:0 "Conservative Party"
+ PARTY_conservative_party_long:0 "Conservative Party"
+ PARTY_governor_general:0 "Governor-general"
+ PARTY_governor_general_long:0 "Governor-general"
+ PARTY_independent_politician:0 "Independent Politician"
+ PARTY_independent_politician_long:0 "Independent Politician"
+ PARTY_labour_party:0 "Labour Party"
+ PARTY_labour_party_long:0 "Labour Party"
+ PARTY_liberal_party:0 "Liberal Party"
+ PARTY_liberal_party_long:0 "Liberal Party"
+ PARTY_provisional_government:0 "Provisional Government"
+ PARTY_provisional_government_long:0 "Provisional Government"
+ PARTY_social_democratic_party:0 "Social Democratic Party"
+ PARTY_social_democratic_party_long:0 "Social Democratic Party"
+ PARTY_national_democratic_union:0 "National Democratic Union"
+ PARTY_national_democratic_union_long:0 "National Democratic Union"
+ PARTY_republican_party:0 "Republican Party"
+ PARTY_republican_party_long:0 "Republican Party"
+ PARTY_khalifa_house:0 "House of Khalifa"
+ PARTY_khalifa_house_long:0 "House of Khalifa"
+ PARTY_bolkiah_house:0 "House of Bolkiah"
+ PARTY_bolkiah_house_long:0 "House of Bolkiah"
+ PARTY_central_china_political_council:0 "Central China Political Council"
+ PARTY_central_china_political_council_long:0 "Central China Political Council"
+ PARTY_chines_communist_party:0 "CCP"
+ PARTY_chines_communist_party_long:0 "Chinese Communist Party"
+ PARTY_chines_nationalist_party:0 "KMT"
+ PARTY_chines_nationalist_party_long:0 "Kuomintang (Nationalist Party)"
+ PARTY_north_china_political_council:0 "North China Political Council"
+ PARTY_north_china_political_council_long:0 "North China Political Council"
+ PARTY_provisional_government_administrative_commission:0 "Administrative Commission"
+ PARTY_provisional_government_administrative_commission_long:0 "Provisional Government Administrative Commission"
+ PARTY_reformed_government_executive_court:0 "Executive Yuan"
+ PARTY_reformed_government_executive_court_long:0 "Reformed Government Executive Yuan"
+ PARTY_kwantung_asian_development_service_league:0 "Asian Development Service League"
+ PARTY_kwantung_asian_development_service_league_long:0 "Kwantung Asian Development Service League"
+ PARTY_kwantung_bureau:0 "Kwantung Bureau"
+ PARTY_kwantung_bureau_long:0 "Kwantung Bureau"
+ PARTY_indonesia_service_association:0 "Service Association"
+ PARTY_indonesia_service_association_long:0 "Indonesia Service Association"
+ PARTY_southern_army_military_government:0 "Military Government"
+ PARTY_southern_army_military_government_long:0 "Southern Army Military Government"
+ PARTY_imperial_rule_assistance_association:0 "Taisei Yokusankai"
+ PARTY_imperial_rule_assistance_association_long:0 "Imperial Rule Assistance Association"
+ PARTY_choson_government-general:0 "Choson Sōtokufu"
+ PARTY_choson_government-general_long:0 "Government-General of Korea"
+ PARTY_national_mobilization_choson_league:0 "Korean National Mobilization League"
+ PARTY_national_mobilization_choson_league_long:0 "Korean National Mobilization League"
+ PARTY_sabah_house:0 "House of Sabah"
+ PARTY_sabah_house_long:0 "House of Sabah"
+ PARTY_manchukuo_concordia_association:0 "Concordia Association"
+ PARTY_manchukuo_concordia_association_long:0 "Manchukuo Concordia Association"
+ PARTY_menggu_political_council:0 "Pailingmiao Council"
+ PARTY_menggu_political_council_long:0 "Mongol Local Autonomy Political Affairs Committee"
+ PARTY_busaid_house:0 "House of Busaid"
+ PARTY_busaid_house_long:0 "House of Busaid"
+ PARTY_saud_house:0 "House of Saud"
+ PARTY_saud_house_long:0 "House of Saud"
+ PARTY_brooke_house:0 "House of Brooke"
+ PARTY_brooke_house_long:0 "House of Brooke"
+ PARTY_imperial_service_association:0 "Kōmin Hōkōkai"
+ PARTY_imperial_service_association_long:0 "Imperial Assistance Association"
+ PARTY_taiwan_government-general:0 "Taiwan Sōtofuku"
+ PARTY_taiwan_government-general_long:0 "Government-General of Taiwan"
+ PARTY_french_communist_party:0 "PCF"
+ PARTY_french_communist_party_long:0 "Parti Communiste Francais (French Communist Party)"
+ PARTY_popular_republican_movement:0 "MCR"
+ PARTY_popular_republican_movement_long:0 "Mouvement Citoyen Républicain (Popular Republican Movement)"
+ PARTY_radical-socialist_and_radical_republican_party:0 "Radical Party"
+ PARTY_radical-socialist_and_radical_republican_party_long:0 "Republican, Radical and Radical-Socialist Party"
+ PARTY_liberty_republican_party:0 "Liberal Republican Party"
+ PARTY_liberty_republican_party_long:0 "Liberal Republican Party"
+ PARTY_workers_international_french_section:0 "Socialist Party"
+ PARTY_workers_international_french_section_long:0 "French Section of the Workers' International"
+ PARTY_common_wealth_party:0 "Federalist Party"
+ PARTY_common_wealth_party_long:0 "Federalist Party"
+ PARTY_great_britain_communist_party:0 "Communist Party"
+ PARTY_great_britain_communist_party_long:0 "Communist Party of Britain"
+ PARTY_liberal_constitutional_party:0 "Liberal Constitutional Party"
+ PARTY_liberal_constitutional_party_long:0 "Liberal Constitutional Party"
+ PARTY_saadist_institutional_party:0 "Saadist Institutional Party"
+ PARTY_saadist_institutional_party_long:0 "Saadist Institutional Party"
+ PARTY_egypt_socialist_party:0 "Socialist Party"
+ PARTY_egypt_socialist_party_long:0 "Egypt Socialist Party"
+ PARTY_wafd_party:0 "Wafd Party"
+ PARTY_wafd_party_long:0 "Wafd Party"
+ PARTY_watani_party:0 "Watani Party"
+ PARTY_watani_party_long:0 "Watani Party"
+ PARTY_herenigde_nasionale_party:0 "HNP"
+ PARTY_herenigde_nasionale_party_long:0 "Herenigde Nasionale Party (Reunited National Party)"
+ PARTY_south_african_labour_party:0 "Labour Party"
+ PARTY_south_african_labour_party_long:0 "South African Labour Party"
+ PARTY_united_south_african_party:0 "United Party"
+ PARTY_united_south_african_party_long:0 "United Party of South Africa"
+ PARTY_brazilian_communist_party:0 "PCdoB"
+ PARTY_brazilian_communist_party_long:0 "Partido Comunista do Brasil (Communist Party of Brazil)"
+ PARTY_brazilian_labour_party:0 "PT"
+ PARTY_brazilian_labour_party_long:0 "Partido dos Trabalhadores (Labour Party)"
+ PARTY_syndicalist_popular_party:0 "SPP"
+ PARTY_syndicalist_popular_party_long:0 "Syndicalist People's Party"
+ PARTY_bloc_populaire_canadien:0 "BPC"
+ PARTY_bloc_populaire_canadien_long:0 "Bloc Populaire Canadien (Canadian Popular Bloc)"
+ PARTY_canada_social_credit_party:0 "Socreds"
+ PARTY_canada_social_credit_party_long:0 "Social Credit Party of Canada"
+ PARTY_canada_liberal_party:0 "LPC"
+ PARTY_canada_liberal_party_long:0 "Liberal Party of Canada"
+ PARTY_canada_progressive_conservative_party:0 "PC"
+ PARTY_canada_progressive_conservative_party_long:0 "Progressive Conservative Party of Canada"
+ PARTY_co-operative_commonwealth_federation:0 "CCF"
+ PARTY_co-operative_commonwealth_federation_long:0 "Co-operative Commonwealth Federation"
+ PARTY_labor-progressive_party:0 "WPP"
+ PARTY_labor-progressive_party_long:0 "Workers Progressive Party"
+ PARTY_agrarian_labor_party:0 "AWP"
+ PARTY_agrarian_labor_party_long:0 "Agrarian Workers Party"
+ PARTY_chile_radical_party:0 "PR"
+ PARTY_chile_radical_party_long:0 "Partido Radical de Chile (Radical Party of Chile)"
+ PARTY_chile_socialist_party:0 "PS"
+ PARTY_chile_socialist_party_long:0 "Partido Socialista de Chile (Socialist Party of Chile)"
+ PARTY_colombian_communist_party:0 "PCC"
+ PARTY_colombian_communist_party_long:0 "Partido Comunista de Colombia (Communist Party of Colombia)"
+ PARTY_colombian_conservative_party:0 "PC"
+ PARTY_colombian_conservative_party_long:0 "Partido Conservador Colombiano (Colombian Conservative Party)"
+ PARTY_colombian_liberal_party:0 "PLC"
+ PARTY_colombian_liberal_party_long:0 "Partido Liberal Colombiano (Colombian Liberal Party)"
+ PARTY_newfoundland_government_commission:0 "Commission of Government"
+ PARTY_newfoundland_government_commission_long:0 "Commission of Government of Newfoundland"
+ PARTY_australia_communist_party:0 "CPA"
+ PARTY_australia_communist_party_long:0 "Communist Party of Australia"
+ PARTY_australia_labour_party:0 "LPA"
+ PARTY_australia_labour_party_long:0 "Labour Party of Australia"
+ PARTY_australia_liberal_party:0 "LPA"
+ PARTY_australia_liberal_party_long:0 "Liberal Party of Australia"
+ PARTY_australia_national_party:0 "NPA"
+ PARTY_australia_national_party_long:0 "Nationalist Party of Australia"
+ PARTY_south_seas_agency:0 "Nan'yōchō"
+ PARTY_south_seas_agency_long:0 "South Sea Agency"
+ PARTY_new_zealand_communist_party:0 "CPNZ"
+ PARTY_new_zealand_communist_party_long:0 "Communist Party of New Zealand"
+ PARTY_new_zealand_labour_party:0 "LPNZ"
+ PARTY_new_zealand_labour_party_long:0 "Labour Party of New Zealand"
+ PARTY_new_zealand_legion:0 "LNZ"
+ PARTY_new_zealand_legion_long:0 "Legion of New Zealand"
+ PARTY_new_zealand_national_party:0 "NPNZ"
+ PARTY_new_zealand_national_party_long:0 "Nationalist Party of New Zealand"
+ PARTY_greater_japan_party:0 "Dainippon-tō"
+ PARTY_greater_japan_party_long:0 "Greater Japan Party"
+ PARTY_peoples_party:0 "People's Party"
+ PARTY_peoples_party_long:0 "People's Party"
  PARTY_christian_democratic_union_of_germany:0 "CDU"
- PARTY_christian_democratic_union_of_germany_long:0 "ドイツ・キリスト教民主同盟"
+ PARTY_christian_democratic_union_of_germany_long:0 "Christian Democratic Union of Germany"
  PARTY_democratic_unity_party_of_germany:0 "DED"
- PARTY_democratic_unity_party_of_germany_long:0 "ドイツ社会主義統一党"
+ PARTY_democratic_unity_party_of_germany_long:0 "Democratic Unity Party of Germany"
  PARTY_free_democratic_party:0 "FDP"
- PARTY_free_democratic_party_long:0 "自由民主党"
+ PARTY_free_democratic_party_long:0 "Free Democratic Party"
  PARTY_communist_party_of_german:0 "KPD"
- PARTY_communist_party_of_german_long:0 "ドイツ共産党"
+ PARTY_communist_party_of_german_long:0 "Communist Party of Germany"
  PARTY_german_party:0 "DP"
- PARTY_german_party_long:0 "ドイツ党"
+ PARTY_german_party_long:0 "German Party"
  PARTY_social_democratic_party_of_germany:0 "SPD"
- PARTY_social_democratic_party_of_germany_long:0 "ドイツ社会民主党"
+ PARTY_social_democratic_party_of_germany_long:0 "Social Democratic Party of Germany"
  PARTY_socialist_unity_party_of_germany:0 "SED"
- PARTY_socialist_unity_party_of_germany_long:0 "ドイツ社会主義統一党"
- 
-##アフリカ
-#EGY-エジプト
- PARTY_liberal_constitutional_party:0 "自由立憲党"
- PARTY_liberal_constitutional_party_long:0 "自由立憲党"
- PARTY_saadist_institutional_party:0 "Saadist Institutional党"
- PARTY_saadist_institutional_party_long:0 "Saadist Institutional党"
- PARTY_egypt_socialist_party:0 "社会党"
- PARTY_egypt_socialist_party_long:0 "エジプト社会党"
- PARTY_wafd_party:0 "ワフド党"
- PARTY_wafd_party_long:0 "ワフド党"
- PARTY_watani_party:0 "ワタニ党"
- PARTY_watani_party_long:0 "ワタニ党"
- 
-#SAF-南アフリカ
- PARTY_herenigde_nasionale_party:0 "ヘルスティグテ・ナシオナーレ党"
- PARTY_herenigde_nasionale_party_long:0 "ヘルスティグテ・ナシオナーレ党"
- PARTY_south_african_labour_party:0 "労働党"
- PARTY_south_african_labour_party_long:0 "南アフリカ労働党"
- PARTY_united_south_african_party:0 "統一党"
- PARTY_united_south_african_party_long:0 "統一南アフリカ党"
- 
-##新大陸
-#BRA-ブラジル
- PARTY_brazilian_communist_party:0 "共産党"
- PARTY_brazilian_communist_party_long:0 "ブラジル共産党"
- PARTY_brazilian_labour_party:0 "労働党"
- PARTY_brazilian_labour_party_long:0 "ブラジル労働党"
- PARTY_syndicalist_popular_party:0 "サンディカリズム大衆党"
- PARTY_syndicalist_popular_party_long:0 "サンディカリズム大衆党"
- 
-#CAN-カナダ
- PARTY_bloc_populaire_canadien:0 "人民ブロック"
- PARTY_bloc_populaire_canadien_long:0 "カナダ人民ブロック"
- PARTY_canada_social_credit_party:0 "社会信用党"
- PARTY_canada_social_credit_party_long:0 "カナダ社会信用党"
- PARTY_canada_liberal_party:0 "自由党"
- PARTY_canada_liberal_party_long:0 "カナダ自由党"
- PARTY_canada_progressive_conservative_party:0 "進歩保守党"
- PARTY_canada_progressive_conservative_party_long:0 "カナダ進歩保守党"
- PARTY_co-operative_commonwealth_federation:0 "協同連邦党"
- PARTY_co-operative_commonwealth_federation_long:0 "協同連邦党"
- PARTY_labor-progressive_party:0 "労働進歩党"
- PARTY_labor-progressive_party_long:0 "労働進歩党"
- 
-#CHL-チリ
- PARTY_agrarian_labor_party:0 "農業労働党"
- PARTY_agrarian_labor_party_long:0 "農業労働党"
- PARTY_chile_radical_party:0 "急進党"
- PARTY_chile_radical_party_long:0 "チリ急進党"
- PARTY_chile_socialist_party:0 "社会党"
- PARTY_chile_socialist_party_long:0 "チリ社会党"
- 
-#COL-コロンビア
- PARTY_colombian_communist_party:0 "共産党"
- PARTY_colombian_communist_party_long:0 "コロンビア共産党"
- PARTY_colombian_conservative_party:0 "保守党"
- PARTY_colombian_conservative_party_long:0 "コロンビア保守党"
- PARTY_colombian_liberal_party:0 "自由党"
- PARTY_colombian_liberal_party_long:0 "コロンビア自由党"
- 
-#NFL-ニューファンドランド
- PARTY_newfoundland_government_commission:0 "政府委員会"
- PARTY_newfoundland_government_commission_long:0 "ニューファンドランド政府委員会"
- 
-##大洋州
-#AST-オーストラリア
- PARTY_australia_communist_party:0 "共産党"
- PARTY_australia_communist_party_long:0 "オーストラリア共産党"
- PARTY_australia_labour_party:0 "労働党"
- PARTY_australia_labour_party_long:0 "オーストラリア労働党"
- PARTY_australia_liberal_party:0 "自由党"
- PARTY_australia_liberal_party_long:0 "オーストラリア自由党"
- PARTY_australia_national_party:0 "国民党"
- PARTY_australia_national_party_long:0 "オーストラリア国民党"
- 
-#FSM-ミクロネシア
- PARTY_south_seas_agency:0 "南洋庁"
- PARTY_south_seas_agency_long:0 "南洋庁"
- 
-#NZL-ニュージーランド
- PARTY_new_zealand_communist_party:0 "共産党"
- PARTY_new_zealand_communist_party_long:0 "ニュージーランド共産党"
- PARTY_new_zealand_labour_party:0 "労働党"
- PARTY_new_zealand_labour_party_long:0 "ニュージーランド労働党"
- PARTY_new_zealand_legion:0 "ニュージーランド軍団"
- PARTY_new_zealand_legion_long:0 "ニュージーランド軍団"
- PARTY_new_zealand_national_party:0 "国民党"
- PARTY_new_zealand_national_party_long:0 "ニュージーランド国民党"
+ PARTY_socialist_unity_party_of_germany_long:0 "Socialist Unity Party of Germany"
