--- a/localisation/english/generic/geacps_political_tab_l_english.yml
+++ b/localisation/english/generic/geacps_political_tab_l_english.yml
@@ -1,72 +1,51 @@
 ﻿l_english:
-##政治タブ
-#政府形態
- government_forms:0 "政府形態"
- national_system:0 "国家体制"
- political_system:0 "政治体制"
- 
-#内閣
- cabinet:0 "内閣"
- head_of_government:0 "政府首班"
- foreign_minister:0 "外務大臣"
- home_minister:0 "内務大臣"
- commerce_minister:0 "商工大臣"
- military_minister:0 "軍政大臣"
- army_minister:0 "陸軍大臣"
- navy_minister:0 "海軍大臣"
- air_force_minister:0 "空軍大臣"
- political_advisor:0 "政府顧問"
- 
-#法律
- law_category:0 "法律"
- economy:0 "経済法"
- trade_laws:0 "貿易法"
- mobilization_laws:0 "徴兵法"
-
-#軍部
- military_category:0 "軍部"
-
-#その他
- company_category:0 "企業"
-
-##政治アイディア
-#国家体制
- monarchy_city_state:0 "君主制都市国家"
- monarchy_unitary_state:0 "君主制単一国家"
- monarchy_federal_state:0 "君主制連邦国家"
- republic_city_state:0 "共和制都市国家"
- republic_unitary_state:0 "共和制単一国家"
- republic_federal_state:0 "共和制連邦国家"
- unitary_dependent_territory:0 "単一属領"
- federal_dependent_territory:0 "連邦属領"
- anarchy_territory:0 "無政府地域"
- 
-#政治体制
- parliamentary_cabinet_system:0 "議院内閣体制"
- presidential_system:0 "大統領制"
- semi_presidential_system:0 "半大統領制"
- monarch_dictatorial_system:0 "君主独裁体制"
- civilian_dictatorial_system:0 "文民独裁体制"
- military_dictatorial_system:0 "軍部独裁体制"
- committee_system:0 "委員会体制"
- imperial_rule_assistance_system:0 "翼賛体制"
- dependent_territory_direct_rule_system:0 "属領直接統治体制"
- dependent_territory_indirect_rule_system:0 "属領間接統治体制"
- provisional_government:0 "臨時政府"
- anarchy_state:0 "無政府状態"
- 
-#経済法
- non_market_economics:0 "非市場経済"
- planned_economy:0 "計画経済"
- mixed_economy:0 "混合経済"
- market_economy:0 "市場経済"
- 
-#貿易法
- protectionism:0 "保護貿易"
- free_trade:0 "自由貿易"
- 
-#徴兵法
- permanently_neutral:0 "永世中立"
- all_volunteer_military_system:0 "志願制度"
- levee_en_masse:0 "国民皆兵"
- mobilizing_en_masse:0 "根こそぎ動員"
+ government_forms:0 "Form of Government"
+ cabinet:0 "Cabinet"
+ head_of_government:0 "Head of Government"
+ political_advisor:0 "Political Advisor"
+ law_category:0 "Law"
+ economy:0 "Economic Law"
+ trade_laws:0 "Trade Law"
+ mobilization_laws:0 "Mobilization Law"
+ company_category:0 "Company"
+ military_category:0 "Military"
+ foreign_minister:0 "Foreign Minister"
+ home_minister:0 "Interior Minister"
+ commerce_minister:0 "Finance Minister"
+ military_minister:0 "Defense Minister"
+ army_minister:0 "Army Minister"
+ navy_minister:0 "Navy Minister"
+ air_force_minister:0 "Airforce Minister"
+ non_market_economics:0 "Non-market Economy"
+ planned_economy:0 "Planned Economy"
+ mixed_economy:0 "Mixed Economy"
+ market_economy:0 "Market Economy"
+ protectionism:0 "Protectionism"
+ free_trade:0 "Free Trade"
+ permanently_neutral:0 "Eternal Neutrality"
+ all_volunteer_military_system:0 "Volunteer Only"
+ levee_en_masse:0 "Universal Conscription"
+ mobilizing_en_masse:0 "Total Mobilization"
+ national_system:0 "Administration"
+ political_system:0 "Political System"
+ monarchy_city_state:0 "Monarchical City State"
+ monarchy_unitary_state:0 "Unitary Monarchy"
+ monarchy_federal_state:0 "Federal Monarchy"
+ republic_city_state:0 "Republic City State"
+ republic_unitary_state:0 "Unitary Republic"
+ republic_federal_state:0 "Federal Republic"
+ unitary_dependent_territory:0 "Unitary Dependent Territory"
+ federal_dependent_territory:0 "Federal Dependent Territory"
+ anarchy_territory:0 "Anarchy"
+ parliamentary_cabinet_system:0 "Parliamentary System"
+ presidential_system:0 "Presidential System"
+ semi_presidential_system:0 "Semi-Presidential System"
+ monarch_dictatorial_system:0 "Royal Dictatorship"
+ civilian_dictatorial_system:0 "Civilian Dictatorship"
+ military_dictatorial_system:0 "Military Dictatorship"
+ committee_system:0 "Committee System"
+ imperial_rule_assistance_system:0 "Yokusan System"
+ dependent_territory_direct_rule_system:0 "Directly-ruled Dependent Territory"
+ dependent_territory_indirect_rule_system:0 "Indirectly-ruled Dependent Territory"
+ provisional_government:0 "Provisional Government"
+ anarchy_state:0 "Anarchy"
