--- a/localisation/english/generic/geacps_traits_l_english.yml
+++ b/localisation/english/generic/geacps_traits_l_english.yml
@@ -1,10 +1,7 @@
 ﻿l_english:
-#Emperor
- CHI_emperor:0 "§G中華皇帝§!"
- ETH_emperor:0 "§Gエチオピア皇帝§!"
- JAP_emperor:0 "§G天皇§!"
- MAN_emperor:0 "§G満州国皇帝§!"
- 
-#King
- AFG_king:0 "§Gアフガニスタン国王§!"
- BHU_king:0 "§Gブータン国王§!"
+ CHI_emperor:0 "§GEmperor of China§!"
+ ETH_emperor:0 "§GEmperor of Ethiopia§!"
+ JAP_emperor:0 "§GEmperor of Japan§!"
+ MAN_emperor:0 "§GEmperor of Manchukuo§!"
+ AFG_king:0 "§GKing of Afghanistan§!"
+ BHU_king:0 "§GKing of Bhutan§!"
