--- a/localisation/english/map/geacps_adjacencies_l_english.yml
+++ b/localisation/english/map/geacps_adjacencies_l_english.yml
@@ -1,18 +1,10 @@
 ﻿l_english:
-#運河
- SUEZ_CANAL:0 "スエズ運河"
- PANAMA_CANAL:0 "パナマ運河"
- NORTH-TO-EAST_BALTIC_SEA_CANAL:0 "北海バルト海運河"
- 
- CORINTH_CANAL:0 "コリントス運河"
- TRANSJAPAN_CANAL:0 "日本横断運河"
- 
- #海峡
- GIBRALTAR_STRAIT:0 "ジブラルタル海峡"
- 
- #隧道
-  TSUSHIMA-PUSAN_TUNNEL:0 "対馬＝釜山隧道"
- 
-##ツールチップ
- built_the_trans-japan_canal_tt:0 "日本横断運河は計画段階または建設中である"
- built_tushima-pusan_tunnel_tt:0 "対馬釜山隧道は計画段階または建設中である"
+ SUEZ_CANAL:0 "Suez Canal"
+ PANAMA_CANAL:0 "Panama Canal"
+ NORTH-TO-EAST_BALTIC_SEA_CANAL:0 "Nord-Ostsee-Kanal"
+ CORINTH_CANAL:0 "Corinth Canal"
+ TRANSJAPAN_CANAL:0 "Trans-Japan Canal"
+ GIBRALTAR_STRAIT:0 "Gibraltar Strait"
+ built_the_trans-japan_canal_tt:0 "The Trans-Japan Canal is in its planning stage or under construction"
+ TSUSHIMA-PUSAN_TUNNEL:0 "Tsushima-Pusan Tunnel"
+ built_tushima-pusan_tunnel_tt:0 "The Tsushima-Pusan Tunnel is in its planning stage or under construction"
