--- a/localisation/english/replace/geacps_core_l_english.yml
+++ b/localisation/english/replace/geacps_core_l_english.yml
@@ -1,73 +1,59 @@
 ﻿l_english:
-#ローディング
- LOADING_GUI:0 "アフリカ植民地から撤退中..."
- LOADING_HISTORY:0 "華北戦線に転進中..."
- LOADING_DATABASES:0 "制作中..."
- LOADING_MAP_SPRITES:0 "制作中..."
- AUTOSAVING:0 "制作中..."
- AUTOSAVING_OOS_DUMP:0 "制作中... \n$DUMP_NAME$"
- LOAD_GFX_PDXMAP_SHADERS:0 "イギリス連邦を構成中..."
- LOAD_GFX_PDXMAP_TERRAIN:0 "ド・ゴールが臨時政府主席に就任中..."
- LOAD_GFX_PDXMAP_BORDERS:0 " フレンスブルク政府が解散中..."
- LOAD_GFX_PDXMAP_TEXTURES:0 "王政廃止に関する国民投票中..."
- LOAD_GFX_PDXMAP_TREES:0 "大東亞共榮圈を建設中..."
- LOAD_GFX_PDXMAP_RIVERS:0 "コミンフォルムを設立中..."
- LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "東京宣言を受諾中..."
- LOAD_INIT:0 "制作中..."
- LOAD_EVENTS:0 "制作中..."
- LOAD_GFX:0 "制作中..."
- LOAD_FLAGS:0 "制作中..."
- PROC_FLAGS:0 "制作中..."
- CREATING_PROVINCE:0 "制作中..."
- EXECUTE_HISTORY:0 "制作中..."
- CREATING_CHKSUM:0 "制作中..."
- GENERATING_GRADIENT_BORDERS:0 "制作中..."
- PRECALC_NAVAL_DIST:0 "制作中..."
- INIT_MAP_LOGIC:0 "制作中..."
- INIT_GAMESTATE:0 "制作中..."
- FE_LOADING_HISTORY:0 "制作中..."
- 
-#メニュー
+ LOADING_GUI:0 "Withdrawing from the African Colonies..."
+ LOADING_HISTORY:0 "Moving to the North China Front..."
+ LOADING_DATABASES:0 "Loading..."
+ LOADING_MAP_SPRITES:0 "Loading..."
+ AUTOSAVING:0 "Loading..."
+ AUTOSAVING_OOS_DUMP:0 "Loading...\n$DUMP_NAME$"
+ LOAD_GFX_PDXMAP_SHADERS:0 "Setting up the Commonwealth..."
+ LOAD_GFX_PDXMAP_TERRAIN:0 "Appointing De Gaulle Head of the Provisional Government..."
+ LOAD_GFX_PDXMAP_BORDERS:0 "Dissolving the Flensburg Regierung..."
+ LOAD_GFX_PDXMAP_TEXTURES:0 "Conducting a Referendum to Abolish the Monarchy..."
+ LOAD_GFX_PDXMAP_TREES:0 "Building the Co-Prosperity Sphere..."
+ LOAD_GFX_PDXMAP_RIVERS:0 "Establishing the Cominform..."
+ LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "Accepting the Declaration of Tokyo..."
+ LOAD_INIT:0 "Loading..."
+ LOAD_EVENTS:0 "Loading..."
+ LOAD_GFX:0 "Loading..."
+ LOAD_FLAGS:0 "Loading..."
+ PROC_FLAGS:0 "Loading..."
+ CREATING_PROVINCE:0 "Loading..."
+ EXECUTE_HISTORY:0 "Loading..."
+ CREATING_CHKSUM:0 "Loading..."
+ GENERATING_GRADIENT_BORDERS:0 "Loading..."
+ PRECALC_NAVAL_DIST:0 "Loading..."
+ INIT_MAP_LOGIC:0 "Loading..."
+ INIT_GAMESTATE:0 "Loading..."
+ FE_LOADING_HISTORY:0 "Loading..."
  MENU_HOMEPAGE:0 "Greater East Asia Co-Prosperity Sphere Wiki"
  MENU_FORUM:0 "Greater East Asia Co-Prosperity Sphere IV Discord"
  MENU_FACEBOOK:0 "Greater East Asia Co-Prosperity Sphere Facebook"
  MENU_TWITTER:0 "Greater East Asia Co-Prosperity Sphere Twitter"
- MENU_PRIVACY_POLICY:0 "プライバシーポリシー"
- 
-#カスタムゲームルール
- FE_DIFFICULTY_CUSTOM:1 "カスタムゲームルールを設定する。 "
- FE_DIFFICULTY_CUSTOM_BTN:1 "カスタムゲームルール"
- FE_DIFFICULTY:0 "階級"
- FE_DIFFICULTY_VERY_EASY:0 "国民義勇隊"
- FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L「ぜいたくは敵だ！」§!"
- FE_DIFFICULTY_EASY:1 "二等兵"
- FE_DIFFICULTY_EASY_TOOLTIP:0 "§L「欲しがりません。勝つまでは」§!"
- FE_DIFFICULTY_NORMAL:1 "一等兵"
- FE_DIFFICULTY_NORMAL_TOOLTIP:0 "§L「足らぬ足らぬは工夫が足らぬ」§!"
- FE_DIFFICULTY_HARD:1 "大将"
- FE_DIFFICULTY_HARD_TOOLTIP:1 "§L「遂げよ聖戦、興せよ東亜」§!"
- FE_DIFFICULTY_VERY_HARD:0 "元帥"
- FE_DIFFICULTY_VERY_HARD_TOOLTIP:1 "§L「すべてを戦争へ」§!"
- 
-#デバッグメニュー
- geacps_debug_menu_title_text:0 "デバッグメニュー"
- geacps_debug_menu_unused:0 "特になし"
- geacps_debug_menu_world_event:0 "世界的事件"
- geacps_debug_menu_tab_country_event_text:0 "国家的事件"
- geacps_special_event:0 "スペシャルイベント"
-
-#デバッグディシジョン
- debug_decisions:0 "デバッグディシジョン"
- debug_special_event_test:0 "テストSE"
- debug_special_event_nepal:0 "ネパールSE"
- debug_special_event_EGR_unification:0 "民主共和国によるドイツ再統一SE"
- debug_special_event_WGR_unification:0 "ホーエンツォレルン家によるドイツ再統一SE"
- debug_special_event_add:0 "SE変数の増加"
- debug_special_event_add:0 "SE変数の減少"
- 
-#戦争名
- WAR_NAME_JAP_CHI:0 "日華戦争"
- 
-#他
+ MENU_PRIVACY_POLICY:0 "Privacy Policy"
+ FE_DIFFICULTY_CUSTOM:1 "Set Custom Game Rules."
+ FE_DIFFICULTY_CUSTOM_BTN:1 "Custom Game Rules"
+ FE_DIFFICULTY:0 "Military Rank"
+ FE_DIFFICULTY_VERY_EASY:0 "Volunteer Fighting Corps"
+ FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L\"Luxury is the enemy!\"§!"
+ FE_DIFFICULTY_EASY:1 "Private"
+ FE_DIFFICULTY_EASY_TOOLTIP:0 "§L\"You don't want it. Until you win\"§!"
+ FE_DIFFICULTY_NORMAL:1 "Soldier"
+ FE_DIFFICULTY_NORMAL_TOOLTIP:0 "§L\"What isn't enough? Dedication isn't enough\"§!"
+ FE_DIFFICULTY_HARD:1 "General"
+ FE_DIFFICULTY_HARD_TOOLTIP:1 "§L\"Start the Crusade, create the Sphere\"§!"
+ FE_DIFFICULTY_VERY_HARD:0 "Marshal"
+ FE_DIFFICULTY_VERY_HARD_TOOLTIP:1 "§L\"All towards war\"§!"
+ geacps_debug_menu_title_text:0 "Debug Menu"
+ geacps_debug_menu_unused:0 "None"
+ geacps_debug_menu_world_event:0 "World Event"
+ geacps_debug_menu_tab_country_event_text:0 "Country Event"
+ geacps_special_event:0 "Special Events"
+ debug_decisions:0 "Debug Decisions"
+ debug_special_event_test:0 "Test Special Events"
+ debug_special_event_nepal:0 "Nepal Special Events"
+ debug_special_event_EGR_unification:0 "German Reunification by the GDR event"
+ debug_special_event_WGR_unification:0 "Germany Reunified by the Hohenzollerns event"
+ debug_special_event_add:0 "Decrease Special Event Variable"
  POLITICS_LEADER:0 ""
- RULE_CANNOT_USE_THIS_TT:0 "この機能は使用不可能です"
+ WAR_NAME_JAP_CHI:0 "Sino-Japanese War"
+ RULE_CANNOT_USE_THIS_TT:0 "This function is not available"
