--- a/localisation/english/replace/geacps_loading_tips_l_english.yml
+++ b/localisation/english/replace/geacps_loading_tips_l_english.yml
@@ -1,102 +1,102 @@
 ﻿l_english:
  LOADING_TIP_0:0 "「大東亜が日本の生存圏」\n- 松岡　洋右"
- LOADING_TIP_1:0 "東亜民族もまた他の民族と同様の権利をもつべきであって、その有色人種たることをむしろ誇りとすべきである。\n- 東條 英機"
- LOADING_TIP_2:0 "やってみせ　言って聞かせて　させてみて　ほめてやらねば　人は動かじ\n- 山本 五十六"
+ LOADING_TIP_1:0 "East Asians should have the same rights as any other race, that skin color is something to be rather proud of.\n- Hideki Tojo"
+ LOADING_TIP_2:0 "A person won't move unless you show them how, tell them to, have them do it, and then praise them.\n- Isoroku Yamamoto"
  LOADING_TIP_3:0 "栗林忠道中将は、アメリカ人が戦争で直面した最も手ごわい敵の一人であった。\n- ジョセフ・H・アレクサンダー"
  LOADING_TIP_4:0 "然しながら、2年3年となれば全く確信は持てぬ。\n- 山本 五十六"
- LOADING_TIP_5:0 "私は海軍に入っていなかったら、今ごろきっとお琴の師匠で身を立てていただろうと思います。\n- 井上 成美"
+ LOADING_TIP_5:0 "If I hadn't joined the Navy, I would've been a master of the Koto by now.\n- Shigeyoshi Inoue"
  LOADING_TIP_6:0 "この救出に勝利が含まれている。\n- ウィンストン・チャーチル"
  LOADING_TIP_7:0 "アメリカ人は他のすべてのあらゆる可能性を試した後に、常に正しいことをすると期待できる。\n- ウィンストン・チャーチル"
- LOADING_TIP_8:0 "海軍は贅沢ですね。\n- 辻 政信"
- LOADING_TIP_9:0 "陸軍の教育者として、戸山学校、予科士官学校、士官学校の3つの校長をつとめたのは、わたしくらいのものでしょう。まことにしあわせ者でした。\n- 牛島 満"
- LOADING_TIP_10: "なんですって？おしまいですって？では世界は？植民地は？\n- シャルル・ド・ゴール"
- LOADING_TIP_11: "男女の別、国の大小に関わらず、信念はみな平等である。\n- ジョージ6世"
- LOADING_TIP_12: "ディエップでひとりが戦死したために、Dデーでは10人が助かった。\n- ルイス・マウントバッテン"
- LOADING_TIP_13: "作戦は90パーセント成功した。\n- バーナード・モントゴメリー"
- LOADING_TIP_14: "いいえ、マーシャル将軍とお呼び下さい閣下。\n- ジョージ・マーシャル"
- LOADING_TIP_15: "物腰は優雅に、行動は力強く。\n- ドワイト・D・アイゼンハワー"
+ LOADING_TIP_8:0 "The Imperial Navy is a luxurious thing.\n- Masanobu Tsuji"
+ LOADING_TIP_9:0 "As army educators go, I'm probably the only one who served as Principal at the Toyama, Yokashikan, and Shikan military academies. I was really happy then.\n- Mitsuru Ushijima"
+ LOADING_TIP_10: "What did you say? The end? What about the world? What about the colonies?\n- Charles De Gaulle"
+ LOADING_TIP_11: "Regardless of gender and country, all beliefs are equal.\n- George VI"
+ LOADING_TIP_12: "For every man that died in Dieppe, ten were saved on D-Day.\n- Louis Mountbatten"
+ LOADING_TIP_13: "The operation was 90% successful.\n- Bernard Montgomery"
+ LOADING_TIP_14: "No, please call me General Marshall, sir.\n- George Marshall"
+ LOADING_TIP_15: "Be graceful in your demeanor, and strong in your actions.\n- Dwight D. Eisenhower"
  LOADING_TIP_16: "真珠湾を忘れるな！\n- 『讀賣報知』"
- LOADING_TIP_17: "大胆不敵であれ！\n- ジョージ・S・パットン"
- LOADING_TIP_18: "必ずや私は戻るだろう。\n- ダグラス・マッカーサー"
- LOADING_TIP_19: "諸君、私は諸君の1人ひとりについて、いささかの不安の念も持っていないということを、先ずはっきりさせておきたい。\n- レイモンド・スプルーアンス"
- LOADING_TIP_20: "だが、戦争は全て道徳に反するものなのだ。\n- カーチス・ルメイ"
- LOADING_TIP_21: "立派なもんだ。これなら、戦争に負けないだろう。\n- ゲオルギー・ジューコフ"
- LOADING_TIP_22: "ある日の真実が、永遠の真実ではない。\n- エルネスト・ゲバラ"
- LOADING_TIP_23: "君は安易な道を行け、我は苦難の道を行く。\n- 汪兆銘"
- LOADING_TIP_24: "無条件の死に至るまで、私は閣下の味方である。\n- ヨーゼフ・ゲッベルス"
- LOADING_TIP_25: "大戦争が起きれば各国が共倒れになり、唯一の勝者が日本になる。\n- アドルフ・ヒトラー"
- LOADING_TIP_26: "イタリア国民よ！武器を取り、君達の強さを、勇気を、価値を示そうではないか！\n- ベニート・ムッソリーニ"
- LOADING_TIP_27: "四方の海 みなはらからと 思ふ世に など波風の 立ちさわぐらむ\n- 昭和天皇"
- LOADING_TIP_28: "泣くことなど何も無い！\n- コンラート・アデナウアー"
- LOADING_TIP_29: "不幸にも世界に無秩序という疫病が広がっているようである。\n- フランクリン・D・ルーズベルト"
- LOADING_TIP_30: "成功とは意欲を失わずに失敗に次ぐ失敗を繰り返すことである。\n- ウィンストン・チャーチル"
- LOADING_TIP_31: "独立独歩で強力なフランスが先頭に立つのでなければヨーロッパは存在しないし、その再建もありえない。\n- シャルル・ド・ゴール"
- LOADING_TIP_32: "当然ながら、悪魔は私の方についていますから。我々が力をあわせれば、共通の敵を打ち倒せるでしょう。\n- ヨシフ・スターリン"
- LOADING_TIP_33: "ソ連との問題は極力重大化させないように努めたいと考えます。\n- フランクリン・D・ルーズベルト"
- LOADING_TIP_34: "我々はヤルタでの取り決めの途方もない失敗と完全な崩壊に直面しており、にもかかわらずイギリス政府にはこれらの出来事を追求する余力がありません。\n- ウィンストン・チャーチル"
- LOADING_TIP_35: "悲観主義者はすべての好機の中に困難をみつけるが、楽観主義者はすべての困難の中に好機を見いだす。\n- ウィンストン・チャーチル"
- LOADING_TIP_36: "やれと言われたことを、可能なかぎり実行したまでだ。\n- シモ・ヘイヘ"
- LOADING_TIP_37: "約束を守る最上の方法は、決して約束しないことだ。\n- ナポレオン・ボナパルト"
- LOADING_TIP_38: "血を流すな、汗を流せ。\n- エルヴィン・ロンメル"
- LOADING_TIP_39: "厚い皮膚より速い足。\n- ハインツ・グデーリアン"
- LOADING_TIP_40: "可能なら実行する。不可能でも断行する。\n- マルセル・ビジャール"
- LOADING_TIP_41: "指揮官は弱みを部下に見せてはならず、その印象を与えぬ努力を欠いてはならない。\n- エルヴィン・ロンメル"
- LOADING_TIP_42: "恋愛と戦争はすべての行為が許される。\n- ヘルマン・ヴィルヘルム・ゲーリング"
- LOADING_TIP_43: "部下に必勝の信念を持たせることは容易だ。それは、勝利の機会をたくさん経験させればよい。\n- エルヴィン・ロンメル"
- LOADING_TIP_44: "冷静さを取り戻すには、息を吸うより息を吐け。この時、下腹に力を入れ、尻の穴を締めよ。なで肩になれたら満点だ。\n- 坂井 三郎"
- LOADING_TIP_45: "賽は投げられた。\n- ガイウス・ユリウス・カエサル"
- LOADING_TIP_46: "怪しいところには、弾丸をぶち込め。\n- エルヴィン・ロンメル"
- LOADING_TIP_47: "落ち着け、そしてよく狙え。お前はこれから一人の男を殺すのだ。\n- エルネスト・ゲバラ"
- LOADING_TIP_48: "大東亜の各国家及各民族をして、各々其の処を得しめ、帝国を核心とする道義に基く共存共栄の秩序を確立せんとするに在る。\n- 東條 英機"
- LOADING_TIP_49: "「スマトラ」、「ジャワ」、「ボルネオ」、「セレベス」、「ニューギニヤ」ハ帝国領土ト決定シ重要資源ノ供給源トシテ極力之ガ開発竝ニ民心ノ把握ニ努ム\n- 大東亜政略指導大綱"
- LOADING_TIP_50: "大東亞共榮圏の建設は私の二十年来の持論であり又理想である。抑も之を實現せしむべく熱心に説いた者は日本人を母に持つ墺洪國貴族クーデンホーフカレルギー伯であつた。\n- 鹿島 守之助"
- LOADING_TIP_51: "これは、まさに歴史的な偉業であった。…日本は白人のアジア侵略を止めるどころか、帝国主義、植民地主義、人類差別に終止符を打つことをなしとげた。\n- アーノルド・J・トインビー"
- LOADING_TIP_52: "敗北を認めたときにのみ、戦争は敗北する。\n- エーリッヒ・フォン・マンシュタイン"
- LOADING_TIP_53: "私は軍人であり、最高司令官の命令に従う。\n- エルヴィン・ロンメル"
- LOADING_TIP_54: "もし私に何らかの手立てがあるなら、明日にでもハワイを併合したい。\n- セオドア・ルーズベルト"
- LOADING_TIP_55: "ケベック万歳･･･自由な! 万歳、万歳、フランス人のカナダ万歳! そしてフランス万歳!\n- シャルル・ド・ゴール"
- LOADING_TIP_56: "バルト海のシュテッティンからアドリア海のトリエステまで、ヨーロッパ大陸を横切る鉄のカーテンが降ろされた。\n- ウィンストン・チャーチル"
- LOADING_TIP_57: "我々は海岸で戦う、我々は水際で戦う、我々は野原と街頭で戦う、我々は丘で戦う。我々は決して降伏しない。\n- ウィンストン・チャーチル"
- LOADING_TIP_58: "我ニ追イツク敵機無シ\n- 彩雲の電文"
- LOADING_TIP_59: "一歩も下がるな!\n- ソ連国防人民委員令第227号"
- LOADING_TIP_60: "皇国ノ興廃此ノ一戦ニ在リ、各員一層奮励努力セヨ\n- 東郷 平八郎"
- LOADING_TIP_61: "英国は各員がその義務を尽くすことを期待する。\n- ホレーショ・ネルソン"
- LOADING_TIP_62: "未来は我々のものだ、くよくよするな。\n- ミハイル・トゥハチェフスキー"
- LOADING_TIP_63: "ぜいたくは敵だ！\n- 戦時標語"
- LOADING_TIP_64: "世の中に寛容の形態は3種類存在する。1つは誠実な寛容、1つは不誠実な寛容、そして混沌だ。\n- ベルリン攻防戦中にソ連軍兵士が発見したドイツ兵の手記より"
- LOADING_TIP_65: "アメリカが何故負けたか？自身を過信していたからさ。\n- ダグラス・マッカーサー"
- LOADING_TIP_66: "もし今日のソビエトに悔やむべきことがあるとするならば、シベリアの失陥ほどそれに値する出来事は存在しないだろう。\n- シャルル・ド・ゴール"
- LOADING_TIP_67: "大衆の考える最も身近な恐怖は変化することである。\n- ウィンストン・チャーチル"
- LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは失笑だけだ。\n- ウェンデル・L・ウィルキー"
- LOADING_TIP_69: "大統領。私の母は、スペインなのです。\n- ホセ・アントニオ・プリモ・デ・リベラ"
- LOADING_TIP_70: "老兵は死なず、ただ消え去るのみ。\n- ダグラス・マッカーサー"
- LOADING_TIP_71: "近衛首相にはその気迫はあるまい。\n- 杉山 元"
- LOADING_TIP_72: "さあ行こう!\n- ユーリイ・ガガーリン"
- LOADING_TIP_73: "地球は青かった。\n- ユーリイ・ガガーリン"
- LOADING_TIP_74: "神はいなかった。\n- ユーリイ・ガガーリン"
- LOADING_TIP_75: "日本兵士よ。脱走しなさい。私が日本に帰れるようにしてあげます。\n- 野坂 参三"
- LOADING_TIP_76: "全ての人間の全ての人間に対するかのような闘争\n- 『リヴァイアサン』"
- LOADING_TIP_77: "我々もまたあなた方アメリカ国民の覇権主義に対し今まで以上に強く戦います。\n- 鈴木　貫太郎"
- LOADING_TIP_78: "英米本位の平和主義を排す。\n- 近衛　文麿"
+ LOADING_TIP_17: "Be fearless!\n- George S. Patton"
+ LOADING_TIP_18: "I shall return.\n- Douglas Macarthur"
+ LOADING_TIP_19: "Gentlemen, first of all I want to make it clear to each of you that I'm in not worried in the slightest.\n- Raymond Spruance"
+ LOADING_TIP_20: "Still, all wars are something unethical.\n- Curtis LeMay"
+ LOADING_TIP_21: "It's fine. With this, we'll win the war.\n- Georgy Zhukov"
+ LOADING_TIP_22: "A day's truth isn't the eternal truth.\n- Ernesto Guevara"
+ LOADING_TIP_23: "You go the easy way, I go the hard way.\n- Wang Jingwei"
+ LOADING_TIP_24: "Until my unequivocable death, I'll be on the Führer's side.\n- Joseph Goebbels"
+ LOADING_TIP_25: "If war breaks out, all countries will fall, and the sole winner will be Japan.\n- Adolf Hitler"
+ LOADING_TIP_26: "Italians! Take your weapons and show your strength, courage, and value!\n- Benito Mussolini"
+ LOADING_TIP_27: "Sea on all sides, of my brethren. In my thoughts, winds and waves, raging.\n- Emperor Showa"
+ LOADING_TIP_28: "There's nothing to cry about!\n- Konrad Adenauer"
+ LOADING_TIP_29: "Unfortunately, a plague called Chaos seems to be spreading around the world.\n- Franklin D. Roosevelt"
+ LOADING_TIP_30: "Success is the ability to go from failure to failure without losing your enthusiasm.\n- Winston Churchill"
+ LOADING_TIP_31: "Europe won't survive unless and independent and powerful France takes the lead, otherwise reconstruction is impossible.\n- Charles De Gaulle"
+ LOADING_TIP_32: "Of course the Devil is on my side. By working together, we'll be able to defeat our common enemy.\n- Joseph Stalin"
+ LOADING_TIP_33: "I'd like not to make our problems with the Soviet Union even worse.\n- Franklin D. Roosevelt"
+ LOADING_TIP_34: "We're facing the absurd failure and total collapse of the Yalta arrangements. Nevertheless, the British government can't afford to condemn these events.\n- Winston Churchill"
+ LOADING_TIP_35: "The pessimist sees difficulty in every opportunity. The optimist sees opportunity in every difficulty.\n- Winston Churchill"
+ LOADING_TIP_36: "I only did my duty, and what I was told to do as well as I could.\n- Simo Hayha"
+ LOADING_TIP_37: "The best way to keep your promises is to never make any.\n- Napoleon Bonaparte"
+ LOADING_TIP_38: "Don't bleed, sweat.\n- Erwin Rommel"
+ LOADING_TIP_39: "Fast feet are better than thick skin.\n- Heinz Guderian"
+ LOADING_TIP_40: "If it's possible, it's done. If it's impossible, it will be done.\n- Marcel Bigeard"
+ LOADING_TIP_41: "The commander mustn't show his weakness to his subordinates, and must make an effort to convey the impression that he hasn't got one.\n- Erwin Rommel"
+ LOADING_TIP_42: "All is fair in love and war.\n- Hermann Göring"
+ LOADING_TIP_43: "It's easy to get your subordinates to believe in victory: give them many chances to experience it.\n- Erwin Rommel"
+ LOADING_TIP_44: "To regain your calm, exhale rather than inhale. Then, put pressure on your lower abdomen and tighten your sphincter. If you relax your shoulders, perfect.\n- Saburo Sakai"
+ LOADING_TIP_45: "The die is cast.\n- Gaius Julius Caesar"
+ LOADING_TIP_46: "If suspicious, put a bullet in it.\n- Erwin Rommel"
+ LOADING_TIP_47: "Calm down, and aim well. You are about to kill a man.\n- Ernesto Guevara"
+ LOADING_TIP_48: "Each Greater East Asian nation and race will find a place within the order of coexistence and co-prosperity centered on the Empire we are trying to establish.\n- Hideki Tojo"
+ LOADING_TIP_49: "\"Sumatra\", \"Java\", \"Borneo\", \"Celebes\", and \"New Guinea\" will be regarded as Imperial Territories and, as sites of vital resources, efforts will be made to win public sentiment through their development.\n- Greater East Asia Charter"
+ LOADING_TIP_50: "Establishing the Greater East Asia Co-prosperity Sphere is a 20-year-old theory, and dream, of mine. It was first proposed by an Austrian noble, the count of Coudenhove-Kalergi, whose mother is Japanese.\n- Morinosuke Kajima"
+ LOADING_TIP_51: "This, was a truly historical achievement. By stopping the white invasion of Asia, Japan put an end to imperialism, colonialism and discrimination.\n- Arnold J. Toynbee"
+ LOADING_TIP_52: "A war is not lost until you consider it lost.\n- Erich von Manstein"
+ LOADING_TIP_53: "I am a soldier, and I obey the Commander-in-Chief.\n- Erwin Rommel"
+ LOADING_TIP_54: "If I had the means, I would annex Hawaii by tomorrow.\n- Theodore Roosevelt"
+ LOADING_TIP_55: "Hurray for Quebec... free at last! Hurray, hurray for French Canadians! And hurray for France!\n- Charles De Gaulle"
+ LOADING_TIP_56: "From Stettin in the Baltic to Trieste in the Adriatic, an iron curtain has descended across the Continent.\n- Winston Churchill"
+ LOADING_TIP_57: "We shall fight on the beaches, we shall fight on the landing grounds, we shall fight in the fields and in the streets, we shall fight in the hills. We shall never surrender.\n- Winston Churchill"
+ LOADING_TIP_58: "No Grummans can catch us\n- Saiun Telegram"
+ LOADING_TIP_59: "No step back!\n- order 227, People's Commissariat of Defense of the Soviet Union"
+ LOADING_TIP_60: "The fate of the Empire lies in this battle, everyone must work harder.\n- Heihachiro Togo"
+ LOADING_TIP_61: "England expects that every man will do his duty.\n- Horatio Nelson"
+ LOADING_TIP_62: "The future is ours, don't dwell on it.\n- Mikhail Tukhachevsky"
+ LOADING_TIP_63: "Luxury is the enemy!\n- Japanese wartime slogan"
+ LOADING_TIP_64: "There are three types of tolerance in this world: one is sincere, one is dishonest, and then there's chaos.\n- diary of a German soldier, discovered by the Soviets during the Battle of Berlin"
+ LOADING_TIP_65: "Why did America lose? Because we were too confident.\n- Douglas Macarthur"
+ LOADING_TIP_66: "If there's anything worthy of regret in the Soviet today, it could only be the fall of Siberia.\n- Charles De Gaulle"
+ LOADING_TIP_67: "The fear most familiar to the public is that of change.\n- Winston Churchill"
+ LOADING_TIP_68: "When the dishonest tell the truth, the only thing that comes back is a laugh.\n- Wendell L. Willkie"
+ LOADING_TIP_69: "Mr. President, my mother is Spain.\n- José Antonio Primo De Rivera"
+ LOADING_TIP_70: "Old soldiers never die, they just fade away.\n- Douglas Macarthur"
+ LOADING_TIP_71: "Prime Minister Konoe doesn't have that much vigor.\n- Hajime Sugiyama"
+ LOADING_TIP_72: "Let's go!\n- Yuri Gagarin"
+ LOADING_TIP_73: "The Earth is blue.\n- Yuri Gagarin"
+ LOADING_TIP_74: "I didn't see God.\n- Yuri Gagarin"
+ LOADING_TIP_75: "Japanese soldiers. Please escape. I'll make it possible for you to return home.\n- Sanzo Nosaka"
+ LOADING_TIP_76: "War is as if all of humanity were against all of humanity.\n- \"Leviathan\""
+ LOADING_TIP_77: "We too shall fight harder than ever against the supremacy of you Americans.\n- Kantaro Suzuki"
+ LOADING_TIP_78: "Destroy Anglo-American Pacifism.\n- Fumimaro Konoe"
  LOADING_TIP_79: "目の前の小さな現象に目を奪われて、遠い目標を見失ってはならない。\n- 東久邇 宮稔彦王"
- LOADING_TIP_80: "たぶん、歴代の朝鮮総督のうち、ご覧のとおり私が一番の醜男だ。\n- 小磯 國昭"
- LOADING_TIP_81: "ベルギーは道ではない。国だ!\n- 軍人の王"
- LOADING_TIP_82: "明石元二郎一人で、満州の日本軍20万人に匹敵する戦果を上げている。\n- ヴィルヘルム2世"
- LOADING_TIP_83: "あんたらを葬ってやる！\n- ニキータ・フルシチョフ"
- LOADING_TIP_84: "さあ国民よ起て！そして嵐よ起きよ！\n- ヨーゼフ・ゲッベルス"
- LOADING_TIP_85: "ゼークトいわく 人間は4種類に大別できる。\n- クルト・フォン・ハンマーシュタイン＝エクヴォルト"
- LOADING_TIP_86: "戦争とは、敵の意思を屈服させることを目的とする武力行使である。\n- 『戦争論』"
- LOADING_TIP_87: "戦争は一つの政治的行為である。戦争は他の手段をもってする政治の継続にすぎない。\n- 『戦争論』"
- LOADING_TIP_88: "名将や軍事的天才は教養の高い国民の中からでなくては生まれない。\n- 『戦争論』"
- LOADING_TIP_89: "第三次世界大戦についてはわかりませんが、第四次世界大戦ならわかります。石と棍棒でしょう。\n- アルベルト・アインシュタイン"
- LOADING_TIP_90: "戦える力が残っている今だからこそ和平協定のテーブルに着かねばならない。戦える力を失ったら我々は何を材料に彼らと協定を結べるというのか。残されるのは完全な屈服だけだ。\n- カール・グスタフ・エミール・マンネルヘイム"
- LOADING_TIP_91: "大国に頼りきることは大国を敵にするのと同じくらい危険なことだ。\n- カール・グスタフ・エミール・マンネルヘイム"
- LOADING_TIP_92: "足元を踏みしめる大地のみならず、岸辺を洗う湖水のみならず、頭上にざわめく大空も我が祖国である。\n- カール・グスタフ・エミール・マンネルヘイム"
- LOADING_TIP_93: "我々は奪われたものを奪い返す。\n- ウラジーミル・レーニン"
- LOADING_TIP_94: "自分の守護者から自分を守ってくれるのは誰なのか？\n- デキムス・ユニウス・ユウェナリス"
- LOADING_TIP_95: "過去に目を閉ざす者は、現在に対してもやはり盲目となる。\n- リヒャルト・フォン・ヴァイツゼッカー"
+ LOADING_TIP_80: "As you can see, out of all the Governors of Korea, I'm probably the ugliest.\n- Kuniaki Koiso"
+ LOADING_TIP_81: "Belgium isn't a road. It's a country!\n- The Soldier King"
+ LOADING_TIP_82: "Akashi Motojiro alone has achieved more than the 200,000 troops stationed in Manchuria.\n- Wilhelm II"
+ LOADING_TIP_83: "We will bury you!\n- Nikita Khrushchev"
+ LOADING_TIP_84: "Rise up, citizens! Rise up, storms!\n- Joseph Goebbels"
+ LOADING_TIP_85: "According to Seeckt, people can be divided into four categories.\n- Kurt von Hammerstein-Equord"
+ LOADING_TIP_86: "War is an act of violence intended to compel our opponent to fulfill our will.\n- \"On War\", Carl von Clausewitz"
+ LOADING_TIP_87: "War is a political act. It's nothing but a continuation of politics with the admixture of other means.\n- \"On War\", Carl von Clausewitz"
+ LOADING_TIP_88: "Leaders and military geniuses are born among the well-educated.\n- \"On War\", Carl von Clausewitz"
+ LOADING_TIP_89: "I do not know with what weapons World War III will be fought, but World War IV will be fought with sticks and stones.\n- Albert Einstein"
+ LOADING_TIP_90: "Now that we have the strength to fight, we must strive for the negotiating table. What could we use to negotiate if we lost our strength? Only total surrender would be left, then.\n- Karl Gustav Emil Mannerheim"
+ LOADING_TIP_91: "Relying on a great power is as dangerous as making an enemy out of them.\n- Karl Gustaf Emil Mannerheim"
+ LOADING_TIP_92: "Our homeland is not just the earth beneath our feet, but is also the water washing our shores and the sky above our heads.\n- Karl Gustaf Emil Mannerheim"
+ LOADING_TIP_93: "We will take back what was stolen from us.\n- Vladimir Lenin"
+ LOADING_TIP_94: "But who guards the guardians?\n- Decimus Junius Juvenalis (Juvenal)"
+ LOADING_TIP_95: "Anyone who closes his eyes to the past is blind to the present.\n- Richard von Weizsäcker"
  LOADING_TIP_96: "\n- "
  LOADING_TIP_97: "\n- "
  LOADING_TIP_98: "\n- "
  LOADING_TIP_99: "\n- "
- LOADING_TIP_100: "いつになったらこのMOD制作は終わるのだろうか...\n- とあるMODの制作者"
+ LOADING_TIP_100: "When will development of this mod end?\n- the creator of a certain mod..."
