--- a/localisation/english/technology/geacps_aircraft_l_english.yml
+++ b/localisation/english/technology/geacps_aircraft_l_english.yml
@@ -1,106 +1,87 @@
 ﻿l_english:
-#分類
- AIR_TITLE_CV_FIGHTER:0 "艦上戦闘機"
- AIR_TITLE_CV_CAS:0 "艦上爆撃機"
- AIR_TITLE_CV_NAV:0 "艦上攻撃機"
- AIR_TITLE_JET_FIGHTER:0 "噴式戦闘機"
- AIR_TITLE_JET_MEDIUM_BOMBER:0 "噴式戦術爆撃機"
- AIR_TITLE_JET_STRAT_BOMBER:0 "噴式戦略爆撃機"
- AIR_TITLE_CV_JET_FIGHTER:0 "噴式艦上戦闘機"
- AIR_TITLE_CV_JET_ATTACKER:0 "噴式艦上攻撃機"
-
-#陸上機
- fighter_equipment_4:0 "戦闘機 IV"
- fighter_equipment_4_short:0 "戦闘機 IV"
- fighter_equipment_4_desc:0 "プロペラ式戦闘機の最終形態です。"
- 
- CAS_equipment_4:0 "近接航空支援機 IV"
- CAS_equipment_4_short:0 "近接航空支援機 IV"
- CAS_equipment_4_desc:0 "プロペラ式近接航空支援機の最終形態です。"
- 
- nav_bomber_equipment_4:0 "対艦攻撃機 IV"
- nav_bomber_equipment_4_short:0 "対艦攻撃機 IV"
- nav_bomber_equipment_4_desc:0 "プロペラ式対艦攻撃機の最終形態です。"
- 
- heavy_fighter_equipment_4:0 "重戦闘機 IV"
- heavy_fighter_equipment_4_short:0 "重戦闘機 IV"
- heavy_fighter_equipment_4_desc:0 "プロペラ式重戦闘機の最終形態です。"
- 
- strat_bomber_equipment_4:0 "戦略爆撃機 IV"
- strat_bomber_equipment_4_short:0 "戦略爆撃機 IV"
- strat_bomber_equipment_4_desc:0 "プロペラ式戦略爆撃機の最終形態です。"
- 
- tac_bomber_equipment_4:0 "戦術爆撃機 IV"
- tac_bomber_equipment_4_short:0 "戦術爆撃機 IV"
- tac_bomber_equipment_4_desc:0 "プロペラ式戦術爆撃機の最終形態です。"
- 
- scout_plane_equipment_3:0 "偵察機 III"
- scout_plane_equipment_3_short:0 "偵察機 III"
+ AIR_TITLE_CV_FIGHTER:0 "Carrier-based\nFighter"
+ AIR_TITLE_CV_CAS:0 "Carrier-based\nClose Air Support"
+ AIR_TITLE_CV_NAV:0 "Carrier-based\nNaval Bomber"
+ AIR_TITLE_JET_FIGHTER:0 "Jet Fighter"
+ AIR_TITLE_JET_MEDIUM_BOMBER:0 "Jet Tactical Bomber"
+ AIR_TITLE_JET_STRAT_BOMBER:0 "Jet\nStrategic\nBomber"
+ AIR_TITLE_CV_JET_FIGHTER:0 "Carrier-based\nJet Fighter"
+ AIR_TITLE_CV_JET_ATTACKER:0 "Carrier-based\nJet Attacker"
+ fighter_equipment_4:0 "Fighter IV"
+ fighter_equipment_4_short:0 "Fighter IV"
+ fighter_equipment_4_desc:0 "The final type of reciprocating engine fighter."
+ CAS_equipment_4:0 "Close Air Support IV"
+ CAS_equipment_4_short:0 "CAS IV"
+ CAS_equipment_4_desc:0 "The final type of reciprocating engine closes air support aircraft."
+ nav_bomber_equipment_4:0 "Naval Bomber IV"
+ nav_bomber_equipment_4_short:0 "NAV IV"
+ nav_bomber_equipment_4_desc:0 "The final type of reciprocating engine naval bomber."
+ heavy_fighter_equipment_4:0 "Heavy Fighter IV"
+ heavy_fighter_equipment_4_short:0 "Heavy Fighter IV"
+ heavy_fighter_equipment_4_desc:0 "The final type of reciprocating engine heavy fighter."
+ strat_bomber_equipment_4:0 "Strategic Bomber IV"
+ strat_bomber_equipment_4_short:0 "Strat Bomber IV"
+ strat_bomber_equipment_4_desc:0 "The final type of reciprocating engine strategic bomber."
+ tac_bomber_equipment_4:0 "Tactical Bomber IV"
+ tac_bomber_equipment_4_short:0 "Tac Bomber IV"
+ tac_bomber_equipment_4_desc:0 "The final type of reciprocating engine tactical bomber."
+ scout_plane_equipment_3:0 "Scout Plane III"
+ scout_plane_equipment_3_short:0 "Scout Plane III"
  scout_plane_equipment_3_desc:0 ""
- 
- jet_fighter_equipment_3:0 "噴式戦闘機 III"
- jet_fighter_equipment_3_short:0 "噴式戦闘機 III"
+ jet_fighter_equipment_3:0 "Jet Fighter III"
+ jet_fighter_equipment_3_short:0 "Jet Fighter III"
  jet_fighter_equipment_3_desc:0 ""
- jet_fighter_equipment_4:0 "噴式戦闘機 IV"
- jet_fighter_equipment_4_short:0 "噴式戦闘機 IV"
+ jet_fighter_equipment_4:0 "Jet Fighter IV"
+ jet_fighter_equipment_4_short:0 "Jet Fighter IV"
  jet_fighter_equipment_4_desc:0 ""
- 
- jet_tac_bomber_equipment_3:0 "噴式戦術爆撃機 III"
- jet_tac_bomber_equipment_3_short:0 "噴式戦術爆撃機 III"
+ jet_tac_bomber_equipment_3:0 "Jet Tactical Bomber III"
+ jet_tac_bomber_equipment_3_short:0 "Jet Tact Bomber III"
  jet_tac_bomber_equipment_3_desc:0 ""
- jet_tac_bomber_equipment_4:0 "噴式戦術爆撃機 IV"
- jet_tac_bomber_equipment_4_short:0 "噴式戦術爆撃機 IV"
+ jet_tac_bomber_equipment_4:0 "Jet Tactical Bomber IV"
+ jet_tac_bomber_equipment_4_short:0 "Jet Tact Bomber IV"
  jet_tac_bomber_equipment_4_desc:0 ""
- 
- jet_strat_bomber_equipment_2:0 "噴式戦略爆撃機 II"
- jet_strat_bomber_equipment_2_short:0 "噴式戦略爆撃機 II"
+ jet_strat_bomber_equipment_2:0 "Jet Strategic Bomber II"
+ jet_strat_bomber_equipment_2_short:0 "Jet Strat Bomber II"
  jet_strat_bomber_equipment_2_desc:0 ""
- jet_strat_bomber_equipment_3:0 "噴式戦略爆撃機 III"
- jet_strat_bomber_equipment_3_short:0 "噴式戦略爆撃機 III"
+ jet_strat_bomber_equipment_3:0 "Jet Strategic Bomber III"
+ jet_strat_bomber_equipment_3_short:0 "Jet Strat Bomber III"
  jet_strat_bomber_equipment_3_desc:0 ""
- 
- jet_scout_plane_equipment_1:0 "噴式偵察機 I"
- jet_scout_plane_equipment_1_short:0 "噴式偵察機 I"
+ jet_scout_plane_equipment_1:0 "Jet Scout Plane I"
+ jet_scout_plane_equipment_1_short:0 "Jet Scout Plane I"
  jet_scout_plane_equipment_1_desc:0 ""
- jet_scout_plane_equipment_2:0 "噴式偵察機 II"
- jet_scout_plane_equipment_2_short:0 "噴式偵察機 II"
+ jet_scout_plane_equipment_2:0 "Jet Scout Plane II"
+ jet_scout_plane_equipment_2_short:0 "Jet Scout Plane II"
  jet_scout_plane_equipment_2_desc:0 ""
- 
-#艦載機
- cv_fighter_equipment_4:0 "艦上戦闘機 IV"
- cv_fighter_equipment_4_short:0 "艦戦 IV"
- cv_fighter_equipment_4_desc:0 "プロペラ式艦上戦闘機の最終形態です。"
- 
- cv_CAS_equipment_4:0 "艦上爆撃機 IV"
- cv_CAS_equipment_4_short:0 "艦爆 IV"
- cv_CAS_equipment_4_desc:0 "プロペラ式艦上爆撃機の最終形態です。"
- 
- cv_nav_bomber_equipment_4:0 "艦上攻撃機 IV"
- cv_nav_bomber_equipment_4_short:0 "艦攻 IV"
- cv_nav_bomber_equipment_4_desc:0 "プロペラ式艦上攻撃機の最終形態です。"
- 
- cv_jet_fighter_equipment_1:0 "噴式艦上戦闘機 I"
- cv_jet_fighter_equipment_1_short:0 "噴式艦戦 I"
+ cv_fighter_equipment_4:0 "Carrier Fighter IV"
+ cv_fighter_equipment_4_short:0 "Carrier Fighter IV"
+ cv_fighter_equipment_4_desc:0 "The final type of reciprocating engine CV fighter."
+ cv_CAS_equipment_4:0 "Carrier CAS IV"
+ cv_CAS_equipment_4_short:0 "Carrier CAS IV"
+ cv_CAS_equipment_4_desc:0 "The final type of reciprocating engine CV bomber."
+ cv_nav_bomber_equipment_4:0 "Carrier Naval Bomber IV"
+ cv_nav_bomber_equipment_4_short:0 "Carrier Bomber IV"
+ cv_nav_bomber_equipment_4_desc:0 "The final type of reciprocating engine CV attacker."
+ cv_jet_fighter_equipment_1:0 "Carrier Jet Fighter I"
+ cv_jet_fighter_equipment_1_short:0 "Carrier Jet Fighter I"
  cv_jet_fighter_equipment_1_desc:0 ""
- cv_jet_fighter_equipment_2:0 "噴式艦上戦闘機 II"
- cv_jet_fighter_equipment_2_short:0 "噴式艦戦 II"
+ cv_jet_fighter_equipment_2:0 "Carrier Jet Fighter II"
+ cv_jet_fighter_equipment_2_short:0 "Carrier Jet Fighter II"
  cv_jet_fighter_equipment_2_desc:0 ""
- cv_jet_fighter_equipment_3:0 "噴式艦上戦闘機 III"
- cv_jet_fighter_equipment_3_short:0 "噴式艦戦 III"
+ cv_jet_fighter_equipment_3:0 "Carrier Jet Fighter III"
+ cv_jet_fighter_equipment_3_short:0 "Carrier Jet Fighter III"
  cv_jet_fighter_equipment_3_desc:0 ""
- cv_jet_fighter_equipment_4:0 "噴式艦上戦闘機 IV"
- cv_jet_fighter_equipment_4_short:0 "噴式艦戦 IV"
+ cv_jet_fighter_equipment_4:0 "Carrier Jet Fighter IV"
+ cv_jet_fighter_equipment_4_short:0 "Carrier Jet Fighter IV"
  cv_jet_fighter_equipment_4_desc:0 ""
- 
- cv_jet_attacker_equipment_1:0 "噴式艦上攻撃機 I"
- cv_jet_attacker_equipment_1_short:0 "噴式艦攻 I"
+ cv_jet_attacker_equipment_1:0 "Carrier Jet Attacker I"
+ cv_jet_attacker_equipment_1_short:0 "Carrier Jet Attacker I"
  cv_jet_attacker_equipment_1_desc:0 ""
- cv_jet_attacker_equipment_2:0 "噴式艦上攻撃機 II"
- cv_jet_attacker_equipment_2_short:0 "噴式艦攻 II"
+ cv_jet_attacker_equipment_2:0 "Carrier Jet Attacker II"
+ cv_jet_attacker_equipment_2_short:0 "Carrier Jet Attacker II"
  cv_jet_attacker_equipment_2_desc:0 ""
- cv_jet_attacker_equipment_3:0 "噴式艦上攻撃機 III"
- cv_jet_attacker_equipment_3_short:0 "噴式艦攻 III"
+ cv_jet_attacker_equipment_3:0 "Carrier Jet Attacker III"
+ cv_jet_attacker_equipment_3_short:0 "Carrier Jet Attacker III"
  cv_jet_attacker_equipment_3_desc:0 ""
- cv_jet_attacker_equipment_4:0 "噴式艦上攻撃機 IV"
- cv_jet_attacker_equipment_4_short:0 "噴式艦攻 IV"
+ cv_jet_attacker_equipment_4:0 "Carrier Jet Attacker IV"
+ cv_jet_attacker_equipment_4_short:0 "Carrier Jet Attacker IV"
  cv_jet_attacker_equipment_4_desc:0 ""
