--- a/localisation/english/technology/geacps_industry_l_english.yml
+++ b/localisation/english/technology/geacps_industry_l_english.yml
@@ -1,155 +1,141 @@
 ﻿l_english:
-#生産技術
- basic_machine_tools:0 "工作機械 I"
- improved_machine_tools:0 "工作機械 II"
- advanced_machine_tools:0 "工作機械 III"
- machine_tools5:0 "工作機械 V"
- machine_tools5_desc:0 "改良型の工作機械です。"
- machine_tools6:0 "工作機械 VI"
- machine_tools6_desc:0 "改良型の工作機械です。"
- machine_tools7:0 "工作機械 VII"
- machine_tools7_desc:0 "改良型の工作機械です。"
- machine_tools8:0 "工作機械 VIII"
- machine_tools8_desc:0 "改良型の工作機械です。"
- machine_tools9:0 "工作機械 IX"
- machine_tools9_desc:0 "改良型の工作機械です。"
- machine_tools10:0 "工作機械 X"
- machine_tools10_desc:0 "改良型の工作機械です。"
- machine_tools11:0 "工作機械 XI"
- machine_tools11_desc:0 "改良型の工作機械です。"
- machine_tools12:0 "工作機械 XII"
- machine_tools12_desc:0 "改良型の工作機械です。"
- machine_tools13:0 "工作機械 XIII"
- machine_tools13_desc:0 "改良型の工作機械です。"
- machine_tools14:0 "工作機械 XIV"
- machine_tools14_desc:0 "改良型の工作機械です。"
- machine_tools15:0 "工作機械 XV"
- machine_tools15_desc:0 "改良型の工作機械です。"
- 
- flexible_line2:0 "流動的ライン生産 II"
- flexible_line2_desc:0 "十分オイルを差した機械は組み立てラインがそうであるように未だ有人でしたが、 その事によって必要に応じた適応が可能となります。 産業生産にもこのことを利用しましょう。 "
- 
- streamlined_line2:0 "流れ作業工程 II"
- streamlined_line2_desc:0 "流れ作業による工程の規格化と厳密化は、 生産の効率と安全性を高めます。 これらは我が国の工業生産の発展への鍵となるでしょう。 "
- 
-#産業技術
- concentrated_industry6:0 "集中工業 VI"
- concentrated_industry6_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry7:0 "集中工業 VII"
- concentrated_industry7_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry8:0 "集中工業 VIII"
- concentrated_industry8_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry9:0 "集中工業 IX"
- concentrated_industry9_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry10:0 "集中工業 X"
- concentrated_industry10_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry11:0 "集中工業 XI"
- concentrated_industry11_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry12:0 "集中工業 XII"
- concentrated_industry12_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry13:0 "集中工業 XIII"
- concentrated_industry13_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry14:0 "集中工業 XIV"
- concentrated_industry14_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- concentrated_industry15:0 "集中工業 XV"
- concentrated_industry15_desc:0 "工業をよりいっそう集中させることでコストの削減に貢献します。"
- 
- dispersed_industry6:0 "分散工業 VI"
- dispersed_industry6_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry7:0 "分散工業 VII"
- dispersed_industry7_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry8:0 "分散工業 VIII"
- dispersed_industry8_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry9:0 "分散工業 IX"
- dispersed_industry9_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry10:0 "分散工業 X"
- dispersed_industry10_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry11:0 "分散工業 XI"
- dispersed_industry11_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry12:0 "分散工業 XII"
- dispersed_industry12_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry13:0 "分散工業 XIII"
- dispersed_industry13_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry14:0 "分散工業 XIV"
- dispersed_industry14_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- dispersed_industry15:0 "分散工業 XV"
- dispersed_industry15_desc:0 "工場を分散させることによって、 戦時における敵の目標選定をより困難なものにします。"
- 
-#建築技術
- construction6:0 "建築 VI"
- construction6_desc:0 "建築方法を新しくします。"
- construction7:0 "建築 VII"
- construction7_desc:0 "建築方法を新しくします。"
- construction8:0 "建築 VIII"
- construction8_desc:0 "建築方法を新しくします。"
- construction9:0 "建築 IX"
- construction9_desc:0 "建築方法を新しくします。"
- construction10:0 "建築 X"
- construction10_desc:0 "建築方法を新しくします。"
- construction11:0 "建築 XI"
- construction11_desc:0 "建築方法を新しくします。"
- construction12:0 "建築 XII"
- construction12_desc:0 "建築方法を新しくします。"
- construction13:0 "建築 XIII"
- construction13_desc:0 "建築方法を新しくします。"
- construction14:0 "建築 XIV"
- construction14_desc:0 "建築方法を新しくします。"
- construction15:0 "建築 XV"
- construction15_desc:0 "建築方法を新しくします。"
- 
- excavation6:0 "掘削 VI"
- excavation6_desc:0 "掘削方法を新しくします。"
- excavation7:0 "掘削 VII"
- excavation7_desc:0 "掘削方法を新しくします。"
- excavation8:0 "掘削 VIII"
- excavation8_desc:0 "掘削方法を新しくします。"
- excavation9:0 "掘削 IX"
- excavation9_desc:0 "掘削方法を新しくします。"
- excavation10:0 "掘削 X"
- excavation10_desc:0 "掘削方法を新しくします。"
- excavation11:0 "掘削 XI"
- excavation11_desc:0 "掘削方法を新しくします。"
- excavation12:0 "掘削 XII"
- excavation12_desc:0 "掘削方法を新しくします。"
- excavation13:0 "掘削 XIII"
- excavation13_desc:0 "掘削方法を新しくします。"
- excavation14:0 "掘削 XIV"
- excavation14_desc:0 "掘削方法を新しくします。"
- excavation15:0 "掘削 XV"
- excavation15_desc:0 "掘削方法を新しくします。"
- 
-#燃料技術
- synth_oil_experiments2:0 "初期精製"
- synth_oil_experiments2_desc:0 "原油は現代の戦争に欠かせない様々な物質や原料に精製することができます。  それらを精錬する方法について優位であることは、 近代的な工業のために必要です。 "
- synth_oil_experiments3:0 "石油精製施設"
- synth_oil_experiments3_desc:0 "原油の蒸留分離工場のネットワークと石油製品の精製は自国の燃料供給を確固たるものにするための次なるステップです。 "
- synth_oil_experiments4:0 "改良石油精製施設"
- synth_oil_experiments4_desc:0 "以前の実験的な蒸留方法を大規模な操業に移行することにより、 入手可能な原料や需要に適した改良が可能になります。 "
- synth_oil_experiments5:0 "発展石油精製施設"
- synth_oil_experiments5_desc:0 "水素化精製のような新しい実験的な精製技術は、 石油の製造において最終生成物の品質を大いに改善をする為に用いられます。 "
- 
- oil_processing5:0 "初期型石油精製"
+ basic_machine_tools:0 "Machine Tools I"
+ improved_machine_tools:0 "Machine Tools II"
+ advanced_machine_tools:0 "Machine Tools III"
+ machine_tools5:0 "Machine Tools V"
+ machine_tools5_desc:0 "Improved machine tool."
+ machine_tools6:0 "Machine Tools VI"
+ machine_tools6_desc:0 "Improved machine tool."
+ machine_tools7:0 "Machine Tools VII"
+ machine_tools7_desc:0 "Improved machine tool."
+ machine_tools8:0 "Machine Tools VIII"
+ machine_tools8_desc:0 "Improved machine tool."
+ machine_tools9:0 "Machine Tools IX"
+ machine_tools9_desc:0 "Improved machine tool."
+ machine_tools10:0 "Machine Tools X"
+ machine_tools10_desc:0 "Improved machine tool."
+ machine_tools11:0 "Machine Tools XI"
+ machine_tools11_desc:0 "Improved machine tool."
+ machine_tools12:0 "Machine Tools XII"
+ machine_tools12_desc:0 "Improved machine tool."
+ machine_tools13:0 "Machine Tools XIII"
+ machine_tools13_desc:0 "Improved machine tool."
+ machine_tools14:0 "Machine Tools XIV"
+ machine_tools14_desc:0 "Improved machine tool."
+ machine_tools15:0 "Machine Tools XV"
+ machine_tools15_desc:0 "Improved machine tool."
+ flexible_line2:0 "Flexible Line II"
+ flexible_line2_desc:0 "As well-oiled a machine as the assembly line may be, it is still manned by humans, which allows for adaptation when needed. We should make use of this in our industrial production."
+ streamlined_line2:0 "Streamlined Line II"
+ streamlined_line2_desc:0 "The standardization and rigid structure of the assembly line are keys to its efficiency and safety. These should be the key aspects to develop in our industrial production."
+ concentrated_industry6:0 "Concentrated Industry VI"
+ concentrated_industry6_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry7:0 "Concentrated Industry VII"
+ concentrated_industry7_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry8:0 "Concentrated Industry VIII"
+ concentrated_industry8_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry9:0 "Concentrated Industry IX"
+ concentrated_industry9_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry10:0 "Concentrated Industry X"
+ concentrated_industry10_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry11:0 "Concentrated Industry XI"
+ concentrated_industry11_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry12:0 "Concentrated Industry XII"
+ concentrated_industry12_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry13:0 "Concentrated Industry XIII"
+ concentrated_industry13_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry14:0 "Concentrated Industry XIV"
+ concentrated_industry14_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ concentrated_industry15:0 "Concentrated Industry XV"
+ concentrated_industry15_desc:0 "Further concentrating manufacturing will help driving down the costs."
+ dispersed_industry6:0 "Dispersed Industry VI"
+ dispersed_industry6_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry7:0 "Dispersed Industry VII"
+ dispersed_industry7_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry8:0 "Dispersed Industry VIII"
+ dispersed_industry8_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry9:0 "Dispersed Industry IX"
+ dispersed_industry9_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry10:0 "Dispersed Industry X"
+ dispersed_industry10_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry11:0 "Dispersed Industry XI"
+ dispersed_industry11_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry12:0 "Dispersed Industry XII"
+ dispersed_industry12_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry13:0 "Dispersed Industry XIII"
+ dispersed_industry13_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry14:0 "Dispersed Industry XIV"
+ dispersed_industry14_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ dispersed_industry15:0 "Dispersed Industry XV"
+ dispersed_industry15_desc:0 "Further decentralizing our manufacturing makes it harder to strike at specific parts of it."
+ construction6:0 "Construction VI"
+ construction6_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction7:0 "Construction VII"
+ construction7_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction8:0 "Construction VIII"
+ construction8_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction9:0 "Construction IX"
+ construction9_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction10:0 "Construction X"
+ construction10_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction11:0 "Construction XI"
+ construction11_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction12:0 "Construction XII"
+ construction12_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction13:0 "Construction XIII"
+ construction13_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction14:0 "Construction XIV"
+ construction14_desc:0 "Improved methods and materials allow us to construct buildings."
+ construction15:0 "Construction XV"
+ construction15_desc:0 "Improved methods and materials allow us to construct buildings."
+ excavation6:0 "Excavation VI"
+ excavation6_desc:0 "Improve drilling method."
+ excavation7:0 "Excavation VII"
+ excavation7_desc:0 "Improve drilling method."
+ excavation8:0 "Excavation VIII"
+ excavation8_desc:0 "Improve drilling method."
+ excavation9:0 "Excavation IX"
+ excavation9_desc:0 "Improve drilling method."
+ excavation10:0 "Excavation X"
+ excavation10_desc:0 "Improve drilling method."
+ excavation11:0 "Excavation XI"
+ excavation11_desc:0 "Improve drilling method."
+ excavation12:0 "Excavation XII"
+ excavation12_desc:0 "Improve drilling method."
+ excavation13:0 "Excavation XIII"
+ excavation13_desc:0 "Improve drilling method."
+ excavation14:0 "Excavation XIV"
+ excavation14_desc:0 "Improve drilling method."
+ excavation15:0 "Excavation XV"
+ excavation15_desc:0 "Improve drilling method."
+ synth_oil_experiments2:0 "Early Refining"
+ synth_oil_experiments2_desc:0 "Crude oil can be refined into a number of substances and materials vital to any modern war. Staying ahead in these methods will be necessary to build a modern industry."
+ synth_oil_experiments3:0 "Oil Plant"
+ synth_oil_experiments3_desc:0 "A network of factories for synthetic distillation and refining of oil products is the next step towards ensuring the fuel supply for our nation."
+ synth_oil_experiments4:0 "Improved Oil Plant"
+ synth_oil_experiments4_desc:0 "Moving previously experimental methods for distillation to large-scale operations will allow us to adapt better to available materials and needs."
+ synth_oil_experiments5:0 "Advanced Oil Plant"
+ synth_oil_experiments5_desc:0 "New experimental purification techniques like hydrotreating can be used in oil manufacturing to greatly improve the final product."
+ oil_processing5:0 "Early Petroleum refining"
  oil_processing5_desc:0 ""
- oil_processing6:0 "改良型石油精製"
+ oil_processing6:0 "Improved Petroleum refining"
  oil_processing6_desc:0 ""
- oil_processing7:0 "発展型石油精製"
+ oil_processing7:0 "Advanced Petroleum refining"
  oil_processing7_desc:0 ""
- 
- rubber_processing5:0 "初期型ゴム製造"
+ rubber_processing5:0 "Early Rubber production"
  rubber_processing5_desc:0 ""
- rubber_processing6:0 "改良型ゴム製造"
+ rubber_processing6:0 "Improved Rubber production"
  rubber_processing6_desc:0 ""
- rubber_processing7:0 "発展型ゴム製造"
+ rubber_processing7:0 "Advanced Rubber production"
  rubber_processing7_desc:0 ""
-
- oil_plant:0 "石油精製施設 I"
- improved_oil_plant:0 "石油精製施設 II"
- advanced_oil_plant:0 "石油精製施設 III"
- oil_plant4:0 "石油精製施設 IV"
- oil_plant4_desc:0 "改良型の石油精製施設です。"
- oil_plant5:0 "石油精製施設 V"
- oil_plant5_desc:0 "改良型の石油精製施設です。"
- oil_plant6:0 "石油精製施設 VI"
- oil_plant6_desc:0 "改良型の石油精製施設です。"
- oil_plant7:0 "石油精製施設 VII"
- oil_plant7_desc:0 "改良型の石油精製施設です。"
+ oil_plant:0 "Oil Plant I"
+ improved_oil_plant:0 "Oil Plant II"
+ advanced_oil_plant:0 "Oil Plant III"
+ oil_plant4:0 "Oil Plant IV"
+ oil_plant4_desc:0 "Improved oil plant."
+ oil_plant5:0 "Oil Plant V"
+ oil_plant5_desc:0 "Improved oil plant."
+ oil_plant6:0 "Oil Plant VI"
+ oil_plant6_desc:0 "Improved oil plant."
+ oil_plant7:0 "Oil Plant VII"
+ oil_plant7_desc:0 "Improved oil plant."
