--- a/localisation/english/technology/geacps_infantry_l_english.yml
+++ b/localisation/english/technology/geacps_infantry_l_english.yml
@@ -1,90 +1,82 @@
 ﻿l_english:
- infantry_equipment_4:0 "歩兵装備 IV"
- infantry_equipment_4_short:0 "装備 IV"
- infantry_equipment_4_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキット。"
- infantry_equipment_5:0 "歩兵装備 V"
- infantry_equipment_5_short:0 "装備 V"
- infantry_equipment_5_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキット。"
- infantry_equipment_6:0 "歩兵装備 VI"
- infantry_equipment_6_short:0 "装備 VI"
- infantry_equipment_6_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキット。"
- infantry_equipment_7:0 "歩兵装備 VII"
- infantry_equipment_7_short:0 "装備 VII"
- infantry_equipment_7_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキット。"
- infantry_equipment_8:0 "歩兵装備 VIII"
- infantry_equipment_8_short:0 "装備 VIII"
- infantry_equipment_8_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキット。"
- 
- infantry_weapons4_2:0 "改良型歩兵装備 IV"
- infantry_weapons4_2_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキットを改良します。"
- infantry_weapons5_2:0 "改良型歩兵装備 V"
- infantry_weapons5_2_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキットを改良します。"
- infantry_weapons6_2:0 "改良型歩兵装備 VI"
- infantry_weapons6_2_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキットを改良します。"
- infantry_weapons7_2:0 "改良型歩兵装備 VII"
- infantry_weapons7_2_desc:0 "歩兵用の個人用火器、 分隊支援火器それとミリタリーキットを改良します。"
- 
- support_weapons5:0 "支援火器 V"
- support_weapons5_desc:0 "改良型の機関銃です。"
- support_weapons6:0 "支援火器 VI"
- support_weapons6_desc:0 "改良型の機関銃です。"
- support_weapons7:0 "支援火器 VII"
- support_weapons7_desc:0 "改良型の機関銃です。"
- support_weapons8:0 "支援火器 VIII"
- support_weapons8_desc:0 "改良型の機関銃です。"
-
- infantry_at3:0 "歩兵用対戦車装備 III"
- infantry_at3_desc:0 "歩兵がより重装甲の敵を破壊する装備です。"
- infantry_at4:0 "歩兵用対戦車装備 IV"
- infantry_at4_desc:0 "歩兵がより重装甲の敵を破壊する装備です。"
- infantry_at5:0 "歩兵用対戦車装備 V"
- infantry_at5_desc:0 "歩兵がより重装甲の敵を破壊する装備です。"
- infantry_at6:0 "歩兵用対戦車装備 VI"
- infantry_at6_desc:0 "歩兵がより重装甲の敵を破壊する装備です。"
- infantry_at7:0 "歩兵用対戦車装備 VII"
- infantry_at7_desc:0 "歩兵がより重装甲の敵を破壊する装備です。"
- infantry_at8:0 "歩兵用対戦車装備 VIII"
- infantry_at8_desc:0 "歩兵がより重装甲の敵を破壊する装備です。"
- 
- night_vision3:0 "暗視装置 III"
- night_vision3_desc:0 "改良型の暗視装置です。"
- night_vision4:0 "暗視装置 IV"
- night_vision4_desc:0 "改良型の暗視装置です。"
- night_vision5:0 "暗視装置 V"
- night_vision5_desc:0 "改良型の暗視装置です。"
- night_vision6:0 "暗視装置 VI"
- night_vision6_desc:0 "改良型の暗視装置です。"
- 
- marines4:0 "海兵 IV"
- marines4_desc:0 "改良型の海兵装備です。"
- marines5:0 "海兵 V"
- marines5_desc:0 "改良型の海兵装備です。"
- marines6:0 "海兵 VI"
- marines6_desc:0 "改良型の海兵装備です。"
- marines7:0 "海兵 VII"
- marines7_desc:0 "改良型の海兵装備です。"
- marines8:0 "海兵 VIII"
- marines8_desc:0 "改良型の海兵装備です。"
-
- paratroopers4:0 "空挺兵 IV"
- paratroopers4_desc:0 "改良型の空挺装備です。"
- paratroopers5:0 "空挺兵 V"
- paratroopers5_desc:0 "改良型の空挺装備です。"
- paratroopers6:0 "空挺兵 VI"
- paratroopers6_desc:0 "改良型の空挺装備です。"
- paratroopers7:0 "空挺兵 VII"
- paratroopers7_desc:0 "改良型の空挺装備です。"
- paratroopers8:0 "空挺兵 VIII"
- paratroopers8_desc:0 "改良型の空挺装備です。"
-
- tech_mountaineers4:0 "山岳歩兵 IV"
- tech_mountaineers4_desc:0 "改良型の山岳装備です。"
- tech_mountaineers5:0 "山岳歩兵 V"
- tech_mountaineers5_desc:0 "改良型の山岳装備です。"
- tech_mountaineers6:0 "山岳歩兵 VI"
- tech_mountaineers6_desc:0 "改良型の山岳装備です。"
- tech_mountaineers7:0 "山岳歩兵 VII"
- tech_mountaineers7_desc:0 "改良型の山岳装備です。"
- tech_mountaineers8:0 "山岳歩兵 VIII"
- tech_mountaineers8_desc:0 "改良型の山岳装備です。"
- 
+ infantry_equipment_4:0 "Infantry Equipment IV"
+ infantry_equipment_4_short:0 "Weapons IV"
+ infantry_equipment_4_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+ infantry_equipment_5:0 "Infantry Equipment V"
+ infantry_equipment_5_short:0 "Weapons V"
+ infantry_equipment_5_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+ infantry_equipment_6:0 "Infantry Equipment VI"
+ infantry_equipment_6_short:0 "Weapons VI"
+ infantry_equipment_6_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+ infantry_equipment_7:0 "Infantry Equipment VII"
+ infantry_equipment_7_short:0 "Weapons VII"
+ infantry_equipment_7_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+ infantry_equipment_8:0 "Infantry Equipment VIII"
+ infantry_equipment_8_short:0 "Weapons VIII"
+ infantry_equipment_8_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+ infantry_weapons4_2:0 "Improved Infantry Equipment IV"
+ infantry_weapons4_2_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
+ infantry_weapons5_2:0 "Improved Infantry Equipment V"
+ infantry_weapons5_2_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
+ infantry_weapons6_2:0 "Improved Infantry Equipment VI"
+ infantry_weapons6_2_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
+ infantry_weapons7_2:0 "Improved Infantry Equipment VII"
+ infantry_weapons7_2_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
+ support_weapons5:0 "Support Weapons V"
+ support_weapons5_desc:0 "Improved machine gun."
+ support_weapons6:0 "Support Weapons VI"
+ support_weapons6_desc:0 "Improved machine gun."
+ support_weapons7:0 "Support Weapons VII"
+ support_weapons7_desc:0 "Improved machine gun."
+ support_weapons8:0 "Support Weapons VIII"
+ support_weapons8_desc:0 "Improved machine gun."
+ infantry_at3:0 "Infantry Anti-Tank III"
+ infantry_at3_desc:0 "Arming our infantry units with anti-tank rifles will allow them to take out lighter armored vehicles while maintaining mobility."
+ infantry_at4:0 "Infantry Anti-Tank IV"
+ infantry_at4_desc:0 "Arming our infantry units with anti-tank rifles will allow them to take out lighter armored vehicles while maintaining mobility."
+ infantry_at5:0 "Infantry Anti-Tank V"
+ infantry_at5_desc:0 "Arming our infantry units with anti-tank rifles will allow them to take out lighter armored vehicles while maintaining mobility."
+ infantry_at6:0 "Infantry Anti-Tank VI"
+ infantry_at6_desc:0 "Arming our infantry units with anti-tank rifles will allow them to take out lighter armored vehicles while maintaining mobility."
+ infantry_at7:0 "Infantry Anti-Tank VII"
+ infantry_at7_desc:0 "Arming our infantry units with anti-tank rifles will allow them to take out lighter armored vehicles while maintaining mobility."
+ infantry_at8:0 "Infantry Anti-Tank VIII"
+ infantry_at8_desc:0 "Arming our infantry units with anti-tank rifles will allow them to take out lighter armored vehicles while maintaining mobility."
+ night_vision3:0 "Night Vision III"
+ night_vision3_desc:0 "Improved night vision."
+ night_vision4:0 "Night Vision IV"
+ night_vision4_desc:0 "Improved night vision."
+ night_vision5:0 "Night Vision V"
+ night_vision5_desc:0 "Improved night vision."
+ night_vision6:0 "Night Vision VI"
+ night_vision6_desc:0 "Improved night vision."
+ marines4:0 "Marines IV"
+ marines4_desc:0 "Improved type of marines equipment."
+ marines5:0 "Marines V"
+ marines5_desc:0 "Improved type of marines equipment."
+ marines6:0 "Marines VI"
+ marines6_desc:0 "Improved type of marines equipment."
+ marines7:0 "Marines VII"
+ marines7_desc:0 "Improved type of marines equipment."
+ marines8:0 "Marines VIII"
+ marines8_desc:0 "Improved type of marines equipment."
+ paratroopers4:0 "Paratroopers IV"
+ paratroopers4_desc:0 "Improved type of paratroopers equipment."
+ paratroopers5:0 "Paratroopers V"
+ paratroopers5_desc:0 "Improved type of paratroopers equipment."
+ paratroopers6:0 "Paratroopers VI"
+ paratroopers6_desc:0 "Improved type of paratroopers equipment."
+ paratroopers7:0 "Paratroopers VII"
+ paratroopers7_desc:0 "Improved type of paratroopers equipment."
+ paratroopers8:0 "Paratroopers VIII"
+ paratroopers8_desc:0 "Improved type of paratroopers equipment."
+ tech_mountaineers4:0 "Mountain Infantry IV"
+ tech_mountaineers4_desc:0 "Improved mountain infantry equipment."
+ tech_mountaineers5:0 "Mountain Infantry V"
+ tech_mountaineers5_desc:0 "Improved mountain infantry equipment."
+ tech_mountaineers6:0 "Mountain Infantry VI"
+ tech_mountaineers6_desc:0 "Improved mountain infantry equipment."
+ tech_mountaineers7:0 "Mountain Infantry VII"
+ tech_mountaineers7_desc:0 "Improved mountain infantry equipment."
+ tech_mountaineers8:0 "Mountain Infantry VIII"
+ tech_mountaineers8_desc:0 "Improved mountain infantry equipment."
