--- a/localisation/english/technology/geacps_support_l_english.yml
+++ b/localisation/english/technology/geacps_support_l_english.yml
@@ -1,65 +1,57 @@
 ﻿l_english:
- 
- tech_engineers5:0 "工兵 V"
- tech_engineers5_desc:0 "改良型の重機です。"
- tech_engineers6:0 "工兵 VI"
- tech_engineers6_desc:0 "改良型の重機です。"
- tech_engineers7:0 "工兵 VII"
- tech_engineers7_desc:0 "改良型の重機です。"
- tech_engineers8:0 "工兵 VIII"
- tech_engineers8_desc:0 "改良型の重機です。"
- 
- tech_recon5:0 "偵察兵 V"
- tech_recon5_desc:0 "改良型の偵察兵装備です。"
- tech_recon6:0 "偵察兵 VI"
- tech_recon6_desc:0 "改良型の偵察兵装備です。"
- tech_recon7:0 "偵察兵 VII"
- tech_recon7_desc:0 "改良型の偵察兵装備です。"
- tech_recon8:0 "偵察兵 VIII"
- tech_recon8_desc:0 "改良型の偵察兵装備です。"
-
- tech_military_police5:0 "憲兵 V"
- tech_military_police5_desc:0 "治安維持体制を新しくします。"
- tech_military_police6:0 "憲兵 VI"
- tech_military_police6_desc:0 "治安維持体制を新しくします。"
- tech_military_police7:0 "憲兵 VII"
- tech_military_police7_desc:0 "治安維持体制を新しくします。"
- tech_military_police8:0 "憲兵 VIII"
- tech_military_police8_desc:0 "治安維持体制を新しくします。"
- 
- tech_maintenance_company5:0 "整備兵 V"
- tech_maintenance_company5_desc:0 "改良型の整備装備です。"
- tech_maintenance_company6:0 "整備兵 VI"
- tech_maintenance_company6_desc:0 "改良型の整備装備です。"
- tech_maintenance_company7:0 "整備兵 VII"
- tech_maintenance_company7_desc:0 "改良型の整備装備です。"
- tech_maintenance_company8:0 "整備兵 VIII"
- tech_maintenance_company8_desc:0 "改良型の整備装備です。"
- 
- tech_field_hospital5:0 "野戦病院 V"
- tech_field_hospital5_desc:0 "改良型の医療機器です。"
- tech_field_hospital6:0 "野戦病院 VI"
- tech_field_hospital6_desc:0 "改良型の医療機器です。"
- tech_field_hospital7:0 "野戦病院 VII"
- tech_field_hospital7_desc:0 "改良型の医療機器です。"
- tech_field_hospital8:0 "野戦病院 VIII"
- tech_field_hospital8_desc:0 "改良型の医療機器です。"
- 
- tech_logistics_company5:0 "補給兵 V"
- tech_logistics_company5_desc:0 "改良型の補給装備です。"
- tech_logistics_company6:0 "補給兵 VI"
- tech_logistics_company6_desc:0 "改良型の補給装備です。"
- tech_logistics_company7:0 "補給兵 VII"
- tech_logistics_company7_desc:0 "改良型の補給装備です。"
- tech_logistics_company8:0 "補給兵 VIII"
- tech_logistics_company8_desc:0 "改良型の補給装備です。"
- 
- tech_signal_company5:0 "通信兵 V"
- tech_signal_company5_desc:0 "改良型の通信機器です。"
- tech_signal_company6:0 "通信兵 VI"
- tech_signal_company6_desc:0 "改良型の通信機器です。"
- tech_signal_company7:0 "通信兵 VII"
- tech_signal_company7_desc:0 "改良型の通信機器です。"
- tech_signal_company8:0 "通信兵 VIII"
- tech_signal_company8_desc:0 "改良型の通信機器です。"
- 
+ tech_engineers5:0 "Engineer Company V"
+ tech_engineers5_desc:0 "Improved heavy machine."
+ tech_engineers6:0 "Engineer Company VI"
+ tech_engineers6_desc:0 "Improved heavy machine."
+ tech_engineers7:0 "Engineer Company VII"
+ tech_engineers7_desc:0 "Improved heavy machine."
+ tech_engineers8:0 "Engineer Company VIII"
+ tech_engineers8_desc:0 "Improved heavy machine."
+ tech_recon5:0 "Recon Company V"
+ tech_recon5_desc:0 "Improved recon company equipment."
+ tech_recon6:0 "Recon Company VI"
+ tech_recon6_desc:0 "Improved recon company equipment."
+ tech_recon7:0 "Recon Company VII"
+ tech_recon7_desc:0 "Improved recon company equipment."
+ tech_recon8:0 "Recon Company VIII"
+ tech_recon8_desc:0 "Improved recon company equipment."
+ tech_military_police5:0 "Military Police V"
+ tech_military_police5_desc:0 "Renew security maintenance system."
+ tech_military_police6:0 "Military Police VI"
+ tech_military_police6_desc:0 "Renew security maintenance system."
+ tech_military_police7:0 "Military Police VII"
+ tech_military_police7_desc:0 "Renew security maintenance system."
+ tech_military_police8:0 "Military Police VIII"
+ tech_military_police8_desc:0 "Renew security maintenance system."
+ tech_maintenance_company5:0 "Maintenance Company V"
+ tech_maintenance_company5_desc:0 "Improved maintenance equipment."
+ tech_maintenance_company6:0 "Maintenance Company VI"
+ tech_maintenance_company6_desc:0 "Improved maintenance equipment."
+ tech_maintenance_company7:0 "Maintenance Company VII"
+ tech_maintenance_company7_desc:0 "Improved maintenance equipment."
+ tech_maintenance_company8:0 "Maintenance Company VIII"
+ tech_maintenance_company8_desc:0 "Improved maintenance equipment."
+ tech_field_hospital5:0 "Field Hospital V"
+ tech_field_hospital5_desc:0 "Improved medical device."
+ tech_field_hospital6:0 "Field Hospital VI"
+ tech_field_hospital6_desc:0 "Improved medical device."
+ tech_field_hospital7:0 "Field Hospital VII"
+ tech_field_hospital7_desc:0 "Improved medical device."
+ tech_field_hospital8:0 "Field Hospital VIII"
+ tech_field_hospital8_desc:0 "Improved medical device."
+ tech_logistics_company5:0 "Logistics Company V"
+ tech_logistics_company5_desc:0 "Improved logistics equipment."
+ tech_logistics_company6:0 "Logistics Company VI"
+ tech_logistics_company6_desc:0 "Improved logistics equipment."
+ tech_logistics_company7:0 "Logistics Company VII"
+ tech_logistics_company7_desc:0 "Improved logistics equipment."
+ tech_logistics_company8:0 "Logistics Company VIII"
+ tech_logistics_company8_desc:0 "Improved logistics equipment."
+ tech_signal_company5:0 "Signal Company V"
+ tech_signal_company5_desc:0 "Improved communication equipment."
+ tech_signal_company6:0 "Signal Company VI"
+ tech_signal_company6_desc:0 "Improved communication equipment."
+ tech_signal_company7:0 "Signal Company VII"
+ tech_signal_company7_desc:0 "Improved communication equipment."
+ tech_signal_company8:0 "Signal Company VIII"
+ tech_signal_company8_desc:0 "Improved communication equipment."
