--- a/localisation/english/countries_asia/geacps_CHI_l_english.yml
+++ b/localisation/english/countries_asia/geacps_CHI_l_english.yml
@@ -1,29 +1,17 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- CHI_war_of_17_years:0 "17年間の戦争"
- CHI_war_of_17_years_desc:0 "この国はずっと戦い続けている。本当にずっと。"
- CHI_warloads:0 "軍閥"
- CHI_warloads_desc:0 "大清帝国の崩壊より、各地を実効支配する軍閥が存在している。彼らを懐柔するか、徹底的に弾圧しなければ我々の声を地方まで届けることはできない。"
- CHI_northern_expedition:0 "北伐"
- CHI_northern_expedition_desc:0 "主に共産主義勢力の排除を目的に行われた北伐は未だに終わる気配がない"
- CHI_lost_democracy:0 "失われた民主主義"
- CHI_lost_democracy_desc:0 "中華民国は中華で初めての民主主義国家である。少なくとも形式上は。"
- CHI_changed_capital_once:0 "一度の遷都"
- CHI_changed_capital_once_desc:0 "この国は首都南京を失った。"
- CHI_changed_capital_twice:0 "二度の遷都"
- CHI_changed_capital_twice_desc:0 "この国は南京のみならず武漢も失った。"
- CHI_small_support_from_USA:0 "米国からのささやかな支援"
- CHI_small_support_from_USA_desc:0 "米国は我々がこの大陸で覇権を取ることを望み、支援を行っている。いや、正確には行っていた。"
-
-#ディシジョン
- 
-
-#イベント
- 
-
-#ツールチップ
- CHI_kind_peace:0 "寛容な講和"
- CHI_pressure_on_our_country:0 "我が国に対する圧力"
+ CHI_kind_peace:0 "Generous Peace"
+ CHI_pressure_on_our_country:0 "Pressure on our Country"
+ CHI_war_of_17_years:0 "The 17 Years War"
+ CHI_war_of_17_years_desc:0 "This country will keep on fighting. It has to."
+ CHI_warloads:0 "Warlordism"
+ CHI_warloads_desc:0 "Since the Qing Empire's collapse, warlords have been in effective control in some areas. We can't spread our influence to the countryside without appeasing or cracking down on them."
+ CHI_northern_expedition:0 "Northern Expedition"
+ CHI_northern_expedition_desc:0 "The Northern Expedition, which mainly focused on eliminating the communist forces, has yet to end."
+ CHI_lost_democracy:0 "Lost Democracy"
+ CHI_lost_democracy_desc:0 "The Republic of China is the first form of Chinese democracy. At least, formally."
+ CHI_changed_capital_once:0 "Capital Moved Once"
+ CHI_changed_capital_once_desc:0 "This country has lost its capital city Nanking."
+ CHI_changed_capital_twice:0 "Capital Moved Twice"
+ CHI_changed_capital_twice_desc:0 "This country has lost Nanking, and Wuhan too."
+ CHI_small_support_from_USA:0 "Meager Support from the USA"
+ CHI_small_support_from_USA_desc:0 "The United States wants us to take control of the continent, and is supporting us. Well, not exactly."
