--- a/localisation/english/countries_asia/geacps_INS_l_english.yml
+++ b/localisation/english/countries_asia/geacps_INS_l_english.yml
@@ -1,16 +1,7 @@
 ﻿l_english:
-#国民精神
- INS_gunsei_sekou_ni_kan_suru_ken:0 "「軍政施行ニ関スル件」"
- INS_gunsei_sekou_ni_kan_suru_ken_desc:0 "「軍政施行ニ関スル件」"
- INS_indonesia_raya:0 "インドネシア・ラヤ"
- INS_indonesia_raya_desc:0 "インドネシア・ラヤ"
- INS_four_leaf_clover:0 "四葉のクローバー"
- INS_four_leaf_clover_desc:0 "四葉のクローバー"
-
-#国民精神
- 
-
-#ディシジョン
- 
-
-#イベント
+ INS_gunsei_sekou_ni_kan_suru_ken:0 "\"About the Military Government\""
+ INS_gunsei_sekou_ni_kan_suru_ken_desc:0 "\"About the Military Government\""
+ INS_indonesia_raya:0 "Indonesia Raya"
+ INS_indonesia_raya_desc:0 "Indonesia Raya"
+ INS_four_leaf_clover:0 "Four-leaf Clover"
+ INS_four_leaf_clover_desc:0 "Four-leaf Clover"
