--- a/localisation/english/countries_europe/geacps_EGR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_EGR_l_english.yml
@@ -1,12 +1,3 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- EGR_hegemonic_party_system:0 "ヘゲモニー政党制"
- EGR_stasi:0 "シュタージ"
-
-#ディシジョン
- 
-
-#イベント
+ EGR_hegemonic_party_system:0 "Hegemonic Party System"
+ EGR_stasi:0 "Stasi"
