--- a/localisation/english/countries_europe/geacps_GBR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_GBR_l_english.yml
@@ -1,73 +1,68 @@
 ﻿l_english:
-#国家方針
- GBR_focus_tree:0 "[ROOT.GetName]の国家方針"
- geacps_GBR_0:0 "第三次救済法案"
- geacps_GBR_1:0 "希望は消えず"
- geacps_GBR_2:0 "一部企業の民営化"
- geacps_GBR_3:0 "軍縮と精鋭化"
- geacps_GBR_4:0 "予算を捻出"
- geacps_GBR_5:0 "植民地からの撤退"
- geacps_GBR_6:0 "植民地を維持"
- geacps_GBR_7:0 "イギリス愛国主義を推奨"
- geacps_GBR_8:0 "離島の整理"
- geacps_GBR_9:0 "脱植民地化"
- geacps_GBR_10:0 "修正の終わり"
- geacps_GBR_11:0 "移民を促進"
- geacps_GBR_12:0 "国籍法の改正"
- geacps_GBR_13:0 "日の沈まぬ帝国を"
- geacps_GBR_14:0 "解散総選挙"
- geacps_GBR_15:0 "保守党"
- geacps_GBR_16:0 "イーデン"
- geacps_GBR_17:0 "第二の国難"
- geacps_GBR_18:0 "チャーチル"
- geacps_GBR_19:0 "外交攻勢"
- geacps_GBR_20:0 "連邦の結束"
- geacps_GBR_21:0 "経済政策の転換"
- geacps_GBR_22:0 "東への警戒"
- geacps_GBR_23:0 "強き国へ"
- geacps_GBR_24:0 "退役軍人への保証"
- geacps_GBR_25:0 "新たなイギリス"
- geacps_GBR_26:0 "衰えぬ帝国"
- geacps_GBR_27:0 "連邦の変遷"
- geacps_GBR_28:0 "南アフリカの追放？"
- geacps_GBR_29:0 "エンクルマ"
- geacps_GBR_30:0 "マウントバッテンの大仕事"
- geacps_GBR_31:0 "宝石を取り戻せ"
- geacps_GBR_32:0 "長女の自立"
- geacps_GBR_33:0 "離島の整備"
- geacps_GBR_34:0 "帝国会議"
- geacps_GBR_35:0 "帝国から連邦へ"
- geacps_GBR_36:0 "世界秩序の維持"
- geacps_GBR_37:0 "ドイツへの融和"
- geacps_GBR_38:0 "フランスとの相互協約"
- geacps_GBR_39:0 "イタリア統一を支持"
- geacps_GBR_40:0 "国際連合"
- geacps_GBR_41:0 "孤高なる国"
- geacps_GBR_42:0 "世界の孤立"
- geacps_GBR_43:0 "スターリング・ポンドブロックの\n強化"
- geacps_GBR_44:0 "帝国の集権化"
- geacps_GBR_45:0 "世界秩序のために"
- geacps_GBR_46:0 "王党派"
- geacps_GBR_47:0 "近衛兵"
- geacps_GBR_48:0 "王立陸軍"
- geacps_GBR_49:0 "超党派内閣"
- geacps_GBR_50:0 "不忠な輩を追放"
- geacps_GBR_51:0 "貴族院への工作"
- geacps_GBR_52:0 "アイルランド合同法"
- geacps_GBR_53:0 "大憲章の再解釈"
- geacps_GBR_54:0 "神よ国王陛下を守り給え"
- geacps_GBR_55:0 "帝国主義の復権"
+ geacps_GBR_0:0 "The Third Relief Bill"
+ geacps_GBR_1:0 "Hope never Dies"
+ geacps_GBR_2:0 "Partial Privatization"
+ geacps_GBR_3:0 "Disarm and Specialize"
+ geacps_GBR_4:0 "Work Out a Budget"
+ geacps_GBR_5:0 "Withdraw from the Colonies"
+ geacps_GBR_6:0 "Keep the Colonies"
+ geacps_GBR_7:0 "Commend British Patriotism"
+ geacps_GBR_8:0 "Sort Out the Remote Islands"
+ geacps_GBR_9:0 "Decolonization"
+ geacps_GBR_10:0 "Finishing Touches"
+ geacps_GBR_11:0 "Encourage Immigrants"
+ geacps_GBR_12:0 "Amend the Nationality Act"
+ geacps_GBR_13:0 "The Empire where the Sun never Sets"
+ geacps_GBR_14:0 "General Election"
+ geacps_GBR_15:0 "The Conservative Party"
+ geacps_GBR_16:0 "Eden"
+ geacps_GBR_17:0 "Second National Crisis"
+ geacps_GBR_18:0 "Churchill"
+ geacps_GBR_19:0 "Diplomatic Offensive"
+ geacps_GBR_20:0 "Commonwealth Unity"
+ geacps_GBR_21:0 "Shift in our Economic Policy"
+ geacps_GBR_22:0 "Beware the East"
+ geacps_GBR_23:0 "To a Strong Country"
+ geacps_GBR_24:0 "Security for the Veterans"
+ geacps_GBR_25:0 "A New Britain"
+ geacps_GBR_26:0 "Unchanging Empire"
+ geacps_GBR_27:0 "Commonwealth Transition"
+ geacps_GBR_28:0 "Expel South Africa?"
+ geacps_GBR_29:0 "Nkrumah"
+ geacps_GBR_30:0 "Mountbatten's Mission"
+ geacps_GBR_31:0 "Retake the Jewel"
+ geacps_GBR_32:0 "The Eldest Daughter's Independence"
+ geacps_GBR_33:0 "Maintain the Remote Islands"
+ geacps_GBR_34:0 "The Imperial Conference"
+ geacps_GBR_35:0 "From Empire to Commonwealth"
+ geacps_GBR_36:0 "Keep the World Order"
+ geacps_GBR_37:0 "Reconcile with Germany"
+ geacps_GBR_38:0 "Mutual Agreement with France"
+ geacps_GBR_39:0 "Support Italian Reunification"
+ geacps_GBR_40:0 "The United Nations"
+ geacps_GBR_41:0 "Splendid Isolation"
+ geacps_GBR_42:0 "World Isolation"
+ geacps_GBR_43:0 "Reinforce the\nSterling-Pound Bloc"
+ geacps_GBR_44:0 "Centralize the Empire"
+ geacps_GBR_45:0 "For the World Order"
+ geacps_GBR_46:0 "The Royalists"
+ geacps_GBR_47:0 "The Imperial Guard"
+ geacps_GBR_48:0 "The Royal Army"
+ geacps_GBR_49:0 "Bipartisan Cabinet"
+ geacps_GBR_50:0 "Exile the Traitors"
+ geacps_GBR_51:0 "Work on the House of Lords"
+ geacps_GBR_52:0 "The Irish Act of Union"
+ geacps_GBR_53:0 "Reinterpret the Magna Charta"
+ geacps_GBR_54:0 "God Save the King"
+ geacps_GBR_55:0 "Imperialist Revival"
  geacps_GBR_56:0 ""
- geacps_GBR_75:0 "インフレ統制への注力"
- geacps_GBR_76:0 "国内産業の再編"
-
-#国民精神
- GBR_from_the_cradle_to_the_grave:0 "ゆりかごから墓場まで"
- GBR_nationalisation_of_key_industries:0 "基幹産業の国有化"
- GBR_france-united_kingdom_relations:0 "英仏関係"
-
-#ディシジョン
- GBR_delegation_of_sovereignty:0 "統治権の委譲"
- GBR_delegation_of_sovereignty_desc:0 "勝者である我々は、幾つかの地域の統治権までの合意をしなかった。\nそこで旧支配者に統治権を一時的に委譲することで、この問題を後回し出来るであろう。"
- Delegation_of_sovereignty_in_Somalia:0 "ソマリアにおける統治権の委譲"
- Delegation_of_sovereignty_in_Somalia_desc:0 "勝者である我々は、アフリカの辺境であるソマリアの統治権までの合意をしなかった。\nそこで旧支配者に統治権を一時的に委譲することで、この問題を後回し出来るであろう。"
+ geacps_GBR_75:0 "Focus on Controlling Inflation"
+ geacps_GBR_76:0 "Reorganize our Domestic Industry"
+ GBR_from_the_cradle_to_the_grave:0 "From the Cradle to the Grave"
+ GBR_nationalisation_of_key_industries:0 "Nationalize the Core Industries"
+ GBR_france-united_kingdom_relations:0 "Anglo-French Relations"
+ GBR_delegation_of_sovereignty:0 "The Question of Sovereignty"
+ GBR_delegation_of_sovereignty_desc:0 "There are still some disagreements among the victors about some regions' sovereignty.\nBy temporarily delegating authority to these territories' former rulers, we can postpone the issue."
+ Delegation_of_sovereignty_in_Somalia:0 "Delegate Sovereignty in Somalia"
+ Delegation_of_sovereignty_in_Somalia_desc:0 "There are disagreements among the victors about the sovereignty of the African frontier of Somalia.\nBy temporarily delegating authority to this territory's former ruler, we can postpone the issue."
+ GBR_focus_tree:0 "[ROOT.GetName] focus tree"
