--- a/localisation/english/countries_europe/geacps_GER_l_english.yml
+++ b/localisation/english/countries_europe/geacps_GER_l_english.yml
@@ -1,13 +1,5 @@
 ﻿l_english:
-#国家方針
- 
-#国民精神
- GER_the_berlin_declaration:0 "ベルリン宣言"
- GER_potsdam_agreement:0 "ポツダム協定"
- GER_denazification:0 "非ナチ化"
- GER_the_east-west_german_wall:0 "”東西ドイツ”の壁"
- 
-#ディシジョン
- 
-
-#イベント
+ GER_the_berlin_declaration:0 "The Berlin Declaration"
+ GER_potsdam_agreement:0 "The Potsdam Agreement"
+ GER_denazification:0 "Denazification"
+ GER_the_east-west_german_wall:0 "\"East-West Germany\" Wall"
