--- a/localisation/english/countries_europe/geacps_ITA_l_english.yml
+++ b/localisation/english/countries_europe/geacps_ITA_l_english.yml
@@ -1,12 +1,3 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- ITA_torino_agreement:0 "トリノ協定"
- ITA_national_liberation_committee:0 "国民解放委員会"
-
-#ディシジョン
- 
-
-#イベント
+ ITA_torino_agreement:0 "Turin Agreement"
+ ITA_national_liberation_committee:0 "National Liberation Committee"
