--- a/localisation/english/countries_europe/geacps_SWE_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SWE_l_english.yml
@@ -1,12 +1,3 @@
 ﻿l_english:
-#国家方針
- 
-
-#国民精神
- SWE_paradox_interactive:0 "パラド社"
- SWE_paradox_interactive_desc:0 "パラド社は、スウェーデンにおける政界や官界だけで無く、財界にまでもその影響を及ぼす大企業。\n表向きはストラテジーゲームを中心に発売するゲームパブリッシャーとして知られている事でも有名である。"
-
-#ディシジョン
- 
-
-#イベント
+ SWE_paradox_interactive:0 "Paradox Interactive"
+ SWE_paradox_interactive_desc:0 "Paradox is a large company influencing not only the Swedish political and administrative world, but also the economy.\nOfficially, it's known as a video game publisher, mainly producing strategy games."
