--- a/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
@@ -1,49 +1,40 @@
 ﻿l_english:
-#国家方針
- BRA_focus_tree:0 "[ROOT.GetName]の国家方針"
- BRA_launch_of_the_aslte_programme:0 "ASLTE計画の発動"
- BRA_outlawing_of_the_communist_party:0 "共産党の非合法化"
- BRA_army_reform:0 "陸軍改革"
- BRA_improved_infantry_firepower:0 "歩兵火力の向上"
- BRA_improved_logistical_support:0 "後方支援の充実化"
- BRA_antitank_force_studies:0 "対戦車部隊研究"
- BRA_reorganisation_of_artillery_units:0 "砲兵隊の再編成"
- BRA_formation_of_antiaircraft_units:0 "対空部隊の編制"
- BRA_development_of_the_so_paulo_industrial_zone:0 "サンパウロ工業地帯の開発"
- BRA_establishment_of_petrobras:0 "ペトロブラスの設立"
- BRA_construction_of_the_rpbc:0 "RPBCの建設"
- BRA_oil_exploration:0 "石油探査"
- BRA_economic_liberalisation:0 "経済の自由化"
- BRA_permission_to_form_trade_unions:0 "労働組合の結成許可"
- BRA_decriminalisation_of_gambling:0 "ギャンブルの非合法化"
- BRA_final_planning_stage:0 "計画最終段階"
- BRA_aslte_programs_sea:0 "ASLTE計画の海"
- BRA_refurbishment_of_older_vessels:0 "旧式艦の改装"
- BRA_maritime_air_base:0 "海上航空基地"
- BRA_cannons_of_the_great_ocean:0 "大海原の大砲"
- BRA_dew_sweeper_ship:0 "露払いの艦"
- BRA_main_shield:0 "主力の盾"
- BRA_aslte_sky_programme:0 "ASLTE計画の空"
- BRA_key_to_air_combat:0 "航空戦の要"
- BRA_faster_fighter:0 "より高速な戦闘機"
- BRA_modern_air_force_research:0 "近代空軍の研究"
- BRA_air_support_aircraft_research:0 "航空支援機研究"
- BRA_air_assault:0 "空からの強襲"
-
-#国民精神
- BRA_the_aslte_programme:0 "ASLTE計画"
- BRA_gambling_decriminalisation:0 "ギャンブル非合法化"
- 
-#企業
- BRA_petrobras:0 "ブラジル石油公社\nペトロブラス"
- 
-#イベント
- BRA.1.t:0 "ASLTE計画-発動"
- BRA.1.d:0 "この計画は国土のインフラ整備、医療整備、食品やエネルギーの発展を促進させ、刺激することにより経済の活性化させるとともに国民の生活水準を底上げすることを念頭においたものである。計画に沿って最終的には空海軍の改革も行われることだろう。"
- BRA.1.0:0 "エネルギー独立を！"
- BRA.2.t:0 "ASLTE計画-最終段階"
- BRA.2.d:0 "この計画により国民の生活は豊かになり、石油産業の革新を行うことができた。残すは空海軍の改革のみとなり、計画に沿って順調に改革は完了するだろう。"
- BRA.2.0:0 "計画の完遂を！"
- 
-#ツールチップ
- BRA_establish_petrobras:0 "ペトロブラスを設立する"
+ BRA_launch_of_the_aslte_programme:0 "Launch the ASLTE Program"
+ BRA_outlawing_of_the_communist_party:0 "Outlaw the Partido Comunista"
+ BRA_army_reform:0 "Army Reform"
+ BRA_improved_infantry_firepower:0 "Enhance the Infantry's Firepower"
+ BRA_improved_logistical_support:0 "Improved Logistics"
+ BRA_antitank_force_studies:0 "Anti-tank Corps Research"
+ BRA_reorganisation_of_artillery_units:0 "Reorganize the Artillery Corps"
+ BRA_formation_of_antiaircraft_units:0 "Form the Anti-air Corps"
+ BRA_development_of_the_so_paulo_industrial_zone:0 "Develop the Sao Paulo Industrial Zone"
+ BRA_establishment_of_petrobras:0 "Establish Petrobras"
+ BRA_construction_of_the_rpbc:0 "Build the RPBC"
+ BRA_oil_exploration:0 "Drill for Oil"
+ BRA_economic_liberalisation:0 "Liberalize the Economy"
+ BRA_permission_to_form_trade_unions:0 "Allow the Formation of Workers Unions"
+ BRA_decriminalisation_of_gambling:0 "Decriminalize Gambling"
+ BRA_final_planning_stage:0 "Final Planning Stages"
+ BRA_aslte_programs_sea:0 "Sea ASLTE Program"
+ BRA_refurbishment_of_older_vessels:0 "Refurbish Old Vessels"
+ BRA_maritime_air_base:0 "Maritime Air Bases "
+ BRA_cannons_of_the_great_ocean:0 "Blue-Water Cannons"
+ BRA_dew_sweeper_ship:0 "Outrider Ships"
+ BRA_main_shield:0 "Shielding Force"
+ BRA_aslte_sky_programme:0 "Sky ASLTE Program"
+ BRA_key_to_air_combat:0 "The Key to Air Warfare"
+ BRA_faster_fighter:0 "Faster Fighters"
+ BRA_modern_air_force_research:0 "Research Modern Airforce"
+ BRA_air_support_aircraft_research:0 "Support Aircrafts Research"
+ BRA_air_assault:0 "Assault from the Skies"
+ BRA_the_aslte_programme:0 "ASLTE Program"
+ BRA_gambling_decriminalisation:0 "Decriminalized Gambling"
+ BRA_petrobras:0 "Petróleo Brasileiro S.A\nPetrobras"
+ BRA.1.t:0 "ASLTE Program - Start"
+ BRA.1.d:0 "The aim of this project is to promote the development of national infrastructure, medical care, and food and energy production. This will revitalize the economy as a result, using the financial stimulus to raise the people's living standards. Also, the plan includes reforms for the airforce and navy both."
+ BRA.1.0:0 "For energy independence!"
+ BRA.2.t:0 "ASLTE Program - Last Stages"
+ BRA.2.d:0 "The program has improved our people's lives and allowed the oil industry to modernize. All that remain are the airforce and navy reforms, which will be completed without incident and according to plan."
+ BRA.2.0:0 "Complete the project!"
+ BRA_establish_petrobras:0 "Establish Petrobras"
+ BRA_focus_tree:0 "[ROOT.GetName] focus tree"
