--- a/localisation/english/countries_new_continent/geacps_CAL_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_CAL_l_english.yml
@@ -1,17 +1,12 @@
 ﻿l_english:
-#国家方針
- 
-#国民精神
-
-#イベント
+ CAL.1.t:0 "California declares secession."
+ CAL.1.d:0 "The state of California has declared its secession from the United States."
+ CAL.1.0:0 "Under the Stars and Stripes!"
+ CAL.1.1:0 "Long live California!"
+ CAL.2.t:0 "The path forward"
+ CAL.2.d:0 "We have declared our secession from the United States, but we have not decided the way forward."
+ CAL.2.0:0 "Declear a Republic"
+ CAL.2.1:0 "With the surrounding states that have left!"
  CAL.0.t:0 ""
  CAL.0.d:0 ""
  CAL.0.0:0 ""
- CAL.1.t:0 "カリフォルニア州が離脱を宣言"
- CAL.1.d:0 "カリフォルニア州がアメリカ合衆国から離脱を宣言した。"
- CAL.1.0:0 "星条旗の下で！"
- CAL.1.1:0 "カリフォルニア万歳！"
- CAL.2.t:0 "我々が進むべき道"
- CAL.2.d:0 "我々は合衆国からの離脱を宣言したが進むべき道を示してはいない。"
- CAL.2.0:0 "共和国宣言"
- CAL.2.1:0 "離脱した周辺諸州と共に！"
