--- a/localisation/english/countries_new_continent/geacps_USA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_USA_l_english.yml
@@ -1,137 +1,131 @@
-﻿l_english: 
-#focuses
- USA_focus_tree:0 "[ROOT.GetName]の国家方針"
- USA_our_past_glory:0 "古の栄光"
- USA_our_past_glory_desc:0 ""
- USA_national_stability_law:0 "国家安定法"
- USA_national_stability_law_desc:0 ""
- USA_national_security_law:0 "国家治安維持法"
- USA_national_security_law_desc:0 ""
- USA_all_out_resistance:0 "徹底抗戦"
- USA_all_out_resistance_desc:0 ""
- USA_restore_the_federal_government:0 "連邦政府の復古"
- USA_restore_the_federal_government_desc:0 ""
- USA_the_1947_special_presidential_election:0 "1947年臨時大統領選挙"
- USA_the_1947_special_presidential_election_desc:0 ""
- USA_the_chicago_convention:0 "シカゴ会議"
- USA_the_chicago_convention_desc:0 ""
- USA_rebuild_our_civilian_economy:0 "民間経済の復興"
- USA_rebuild_our_civilian_economy_desc:0 ""
- USA_the_3rd_indian_removal_act:0 "第三次インディアン移住法"
- USA_the_3rd_indian_removal_act_desc:0 ""
- USA_24_hour_stock_market_activity:0 "株式市場の２４時間運用"
- USA_24_hour_stock_market_activity_desc:0 ""
- USA_rebuild_washington_d_c:0 "ワシントンを復興"
- USA_rebuild_washington_d_c_desc:0 ""
- USA_welcome_the_investors:0 "投資家を歓迎"
- USA_welcome_the_investors_desc:0 ""
- USA_establish_the_reconstruction_agency:0 "復興庁を設立"
- USA_establish_the_reconstruction_agency_desc:0 ""
- USA_factory_of_the_world:0 "世界の工場"
- USA_factory_of_the_world_desc:0 ""
- USA_expand_the_scholarship_system:0 "奨学金制度の拡充"
- USA_expand_the_scholarship_system_desc:0 ""
- USA_JAP_non_intervention_treaty:0 "日米不干渉条約"
- USA_JAP_non_intervention_treaty_desc:0 ""
- USA_protect_IRE:0 "アイルランドを保護"
- USA_protect_IRE_desc:0 ""
- USA_the_continental_congress:0 "大陸会議"
- USA_the_continental_congress_desc:0 ""
- USA_spread_the_ideal_of_independence:0 "独立心を煽る"
- USA_spread_the_ideal_of_independence_desc:0 ""
- USA_the_paris_conference:0 "パリ会談"
- USA_the_paris_conference_desc:0 ""
- USA_we_are_invincible:0 "我は不滅なり"
- USA_we_are_invincible_desc:0 ""
- USA_crush_JAP:0 "日本を粉砕"
- USA_crush_JAP_desc:0 ""
- USA_operation_downfall:0 "ダウンフォール作戦"
- USA_operation_downfall_desc:0 ""
- USA_ban_totalitarianism:0 "全体主義を禁止"
- USA_ban_totalitarianism_desc:0 ""
- USA_diplomatic_solution:0 "外交的解決"
- USA_diplomatic_solution_desc:0 ""
- USA_military_invasion:0 "軍事侵攻"
- USA_military_invasion_desc:0 ""
- USA_overthrow_our_former_master:0 "旧宗主国の打倒"
- USA_overthrow_our_former_master_desc:0 ""
- USA_historical_compromise:0 "歴史的和解"
- USA_historical_compromise_desc:0 ""
-
-#idea
- USA_sour_loser:0 "苦い敗北"
+﻿l_english:
+ USA_sour_loser:0 "Bitter Defeat"
  USA_sour_loser_desc:0 ""
- USA_failed_new_deal:0 "ニューディールの失敗"
+ USA_failed_new_deal:0 "Failure of the New Deal"
  USA_failed_new_deal_desc:0 ""
- USA_war_debt:0 "戦争負債償還"
+ USA_war_debt:0 "Repaying War Debts"
  USA_war_debt_desc:0 ""
- USA_war_indemnity:0 "戦争賠償金"
+ USA_war_indemnity:0 "War Reparations"
  USA_war_indemnity_desc:0 ""
- USA_spread_dissatisfaction:0 "広がる不満"
+ USA_spread_dissatisfaction:0 "Widespread Discontent"
  USA_spread_dissatisfaction_desc:0 ""
- 
-#event
- USA_ACW.0.t:0 "崩れるアメリカ"
- USA_ACW.0.desc:0 "REPLACE_ME"
+ USA_ACW.0.t:0 "The American Collapse"
+ USA_ACW.0.desc:0 "text"
  USA_ACW.0.a:0 "Happy New Year!"
- USA_ACW.1.t:0 "新年ゼネスト"
- USA_ACW.1.desc:0 "REPLACE_ME"
- USA_ACW.1.a:0 "ストをすぐ中止させろ！"
- USA_suppression_tt:0 "§R労働者の怒りを引き起こします。§!"
- USA_ACW.1.b:0 "交渉を始めろ"
- USA_negotiation_tt:0 "§G交渉が始まります。§!"
- USA_ACW.2.t:0 "デモ"
+ USA_ACW.1.t:0 "New Years General Strike"
+ USA_ACW.1.desc:0 "Oh, come on"
+ USA_ACW.1.a:0 "Stop the strike right now!"
+ USA_suppression_tt:0 "§RThe workers' anger will rise.§!"
+ USA_ACW.1.b:0 "Start to negotiate"
+ USA_negotiation_tt:0 "§GNegotiations will begin.§!"
+ USA_ACW.2.t:0 "Demonstrations"
  USA_ACW.2.desc:0 "REPLACE_ME"
- USA_ACW.2.a:0 "おかしくなりそうだ！"
- USA_create_resistance_tt:0 "§R市民の怒りが政府に向けられています。§!"
- USA_ACW.3.t:0 "交渉の開始"
+ USA_ACW.2.a:0 "Everyone's going crazy!"
+ USA_create_resistance_tt:0 "§RThe citizens' anger will be directed at the government.§!"
+ USA_ACW.3.t:0 "Start of the Negotiations"
  USA_ACW.3.desc:0 "REPLACE_ME"
- USA_ACW.3.a:0 "良い結果が出ることを期待しよう"
- USA_ACW.4.t:0 "アイザック·ウッダード事件"
- USA_ACW.4.desc:0 "この人は軍人です。除隊して復帰する途中、警察官に暴行を受けて失明しました。"
- USA_ACW.4.a:0 "交渉に支障があってはならないのに..."
- USA_ACW.4.b:0 "当然のことをしたのだ！"
- USA_ACW.5.t:0 "警察とデモ隊の衝突"
+ USA_ACW.3.a:0 "We expect good results out of this"
+ USA_ACW.4.t:0 "The Isaac Woodard Incident"
+ USA_ACW.4.desc:0 "Isaac Woodard is a soldier who, while returning home after being honorably discharged from the army, was assaulted by a police officer and lost his eyesight."
+ USA_ACW.4.a:0 "We hope this won't hinder the negotiations..."
+ USA_ACW.4.b:0 "He did the right thing!"
+ USA_ACW.5.t:0 "Clashes between Police and Demonstrators"
  USA_ACW.5.desc:0 "REPLACE_ME"
- USA_ACW.5.a:0 "また...？"
- USA_ACW.6.t:0 "暴力的なデモ"
+ USA_ACW.5.a:0 "Again!?"
+ USA_ACW.6.t:0 "Violent Protests"
  USA_ACW.6.desc:0 "REPLACE_ME"
- USA_ACW.6.a:0 "オーマイガー！"
- USA_ACW.7.t:0 "共産主義の台頭"
+ USA_ACW.6.a:0 "Oh my God!"
+ USA_ACW.7.t:0 "Communism Rising"
  USA_ACW.7.desc:0 "REPLACE_ME"
- USA_ACW.7.a:0 "赤？"
- USA_ACW.8.t:0 "赤色恐怖の拡散"
+ USA_ACW.7.a:0 "Reds?"
+ USA_ACW.8.t:0 "Spread of the Red Terror"
  USA_ACW.8.desc:0 "REPLACE_ME"
- USA_ACW.8.a:0 "州兵を配置しろ！"
- USA_ACW.8.b:0 "警察力で対応しろ！"
- USA_ACW.9.t:0 "偶発的な射撃"
+ USA_ACW.8.a:0 "Mobilize the National Guard!"
+ USA_ACW.8.b:0 "Respond with the Police!"
+ USA_ACW.9.t:0 "Accidental Shooting"
  USA_ACW.9.desc:0 "REPLACE_ME"
- USA_ACW.9.a:0 "そんな命令は下したことがない！"
- USA_ACW.10.t:0 "統制不能"
+ USA_ACW.9.a:0 "We never gave such an order!"
+ USA_ACW.10.t:0 "Out of Control"
  USA_ACW.10.desc:0 "REPLACE_ME"
- USA_ACW.10.a:0 "ちくしょう..."
- USA_ACW.11.t:0 "同調する知事たち"
+ USA_ACW.10.a:0 "Damn..."
+ USA_ACW.11.t:0 "Sympathetic Governors"
  USA_ACW.11.desc:0 "REPLACE_ME"
- USA_ACW.11.a:0 "州兵を配置しろ！"
- USA_ACW.11.b:0 "兵力を増員しろ！"
- USA_ACW.12.t:0 "配置拒否"
+ USA_ACW.11.a:0 "Mobilize the National Guard!"
+ USA_ACW.11.b:0 "Increase the number of troops!"
+ USA_ACW.12.t:0 "Deployment Refusal"
  USA_ACW.12.desc:0 "REPLACE_ME"
- USA_ACW.12.a:0 "反逆だ！"
- USA_ACW.13.t:0 "襲われた武器庫"
+ USA_ACW.12.a:0 "Treason!"
+ USA_ACW.13.t:0 "Armory Attacked"
  USA_ACW.13.desc:0 "REPLACE_ME"
- USA_ACW.13.a:0 "めちゃくちゃだ"
- USA_ACW.14.t:0 "シカゴ宣言"
+ USA_ACW.13.a:0 "What a mess"
+ USA_ACW.14.t:0 "The Chicago Declaration"
  USA_ACW.14.desc:0 ""
- USA_ACW.14.a:0 "合衆国を守護せよ！"
- USA_ACW.14.b:0 "万国の労働者よ団結せよ！"
- USA_ACW.15.t:0 "兵力解散命令"
+ USA_ACW.14.a:0 "Protect the United States!"
+ USA_ACW.14.b:0 "Workers of the world, unite!"
+ USA_ACW.15.t:0 "Troop Disbanding Order"
  USA_ACW.15.desc:0 "REPLACE_ME"
- USA_ACW.15.a:0 "行かせろ"
- USA_ACW.16.t:0 "兵力解散命令"
- USA_ACW.16.desc:0 "for AWR"
- USA_ACW.16.a:0 "君のためのプレゼントだよ。"
- USA_ACW.16.b:0 "笑わせる話だ"
- USA_ACW.17.t:0 "拒否"
+ USA_ACW.15.a:0 "Move out"
+ USA_ACW.16.t:0 "Troop Disbanding Order"
+ USA_ACW.16.desc:0 "For the AWR"
+ USA_ACW.16.a:0 "It's a present for you."
+ USA_ACW.16.b:0 "Laughable"
+ USA_ACW.17.t:0 "Refusal"
  USA_ACW.17.desc:0 "REPLACE_ME"
- USA_ACW.17.a:0 "反逆だ！ あいつらを倒せ！"
- 
+ USA_ACW.17.a:0 "Traitors! Destroy them!"
+ USA_our_past_glory:0 "Past Glory"
+ USA_our_past_glory_desc:0 ""
+ USA_national_stability_law:0 "National Stability Act"
+ USA_national_stability_law_desc:0 ""
+ USA_national_security_law:0 "National Security Act"
+ USA_national_security_law_desc:0 ""
+ USA_all_out_resistance:0 "All-out Resistance"
+ USA_all_out_resistance_desc:0 ""
+ USA_restore_the_federal_government:0 "Restore the Federal Government"
+ USA_restore_the_federal_government_desc:0 ""
+ USA_the_1947_special_presidential_election:0 "The 1947 Special Presidential Election"
+ USA_the_1947_special_presidential_election_desc:0 ""
+ USA_the_chicago_convention:0 "The Chicago Convention"
+ USA_the_chicago_convention_desc:0 ""
+ USA_rebuild_our_civilian_economy:0 "Rebuild our Civilian Economy"
+ USA_rebuild_our_civilian_economy_desc:0 ""
+ USA_the_3rd_indian_removal_act:0 "The Third Indian Removal Act"
+ USA_the_3rd_indian_removal_act_desc:0 ""
+ USA_24_hour_stock_market_activity:0 "24-hours Open Stock Market"
+ USA_24_hour_stock_market_activity_desc:0 ""
+ USA_rebuild_washington_d_c:0 "Rebuild Washington"
+ USA_rebuild_washington_d_c_desc:0 ""
+ USA_welcome_the_investors:0 "Welcome the Investors"
+ USA_welcome_the_investors_desc:0 ""
+ USA_establish_the_reconstruction_agency:0 "Establish a Reconstruction Agency"
+ USA_establish_the_reconstruction_agency_desc:0 ""
+ USA_factory_of_the_world:0 "Workshop of the World"
+ USA_factory_of_the_world_desc:0 ""
+ USA_expand_the_scholarship_system:0 "Expand the Scholarship System"
+ USA_expand_the_scholarship_system_desc:0 ""
+ USA_JAP_non_intervention_treaty:0 "US-Japan Non-Intervention Treaty"
+ USA_JAP_non_intervention_treaty_desc:0 ""
+ USA_protect_IRE:0 "Protect Ireland"
+ USA_protect_IRE_desc:0 ""
+ USA_the_continental_congress:0 "The Continental Conference"
+ USA_the_continental_congress_desc:0 ""
+ USA_spread_the_ideal_of_independence:0 "Spread the Ideal of Independence"
+ USA_spread_the_ideal_of_independence_desc:0 ""
+ USA_the_paris_conference:0 "The Paris Conference"
+ USA_the_paris_conference_desc:0 ""
+ USA_we_are_invincible:0 "We are Invincible"
+ USA_we_are_invincible_desc:0 ""
+ USA_crush_JAP:0 "Crush Japan"
+ USA_crush_JAP_desc:0 ""
+ USA_operation_downfall:0 "Operation Downfall"
+ USA_operation_downfall_desc:0 ""
+ USA_ban_totalitarianism:0 "Ban Totalitarianisms"
+ USA_ban_totalitarianism_desc:0 ""
+ USA_diplomatic_solution:0 "The Diplomatic Solution"
+ USA_diplomatic_solution_desc:0 ""
+ USA_military_invasion:0 "Military Invasions"
+ USA_military_invasion_desc:0 ""
+ USA_overthrow_our_former_master:0 "Overthrow our Former Overlord"
+ USA_overthrow_our_former_master_desc:0 ""
+ USA_historical_compromise:0 "The Historical Compromise"
+ USA_historical_compromise_desc:0 ""
+ USA_focus_tree:0 "[ROOT.GetName] focus tree"
