--- a/localisation/english/generic/geacps_bookmarks_l_english.yml
+++ b/localisation/english/generic/geacps_bookmarks_l_english.yml
@@ -1,27 +1,21 @@
 ﻿l_english:
-#シナリオ
- THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "栄光ある極東の帝国"
- THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "昭和16年、太平洋において我が国は米國と戦闘状態に入る。この聖戦に勝ち抜いた我が国は、八紘一宇・東亜新秩序の下に大東亞共榮圈を建設した。\n太陽の沈まぬ国となった我が国であったが、問題が山積しているのも確かである。\n政党政治への不信や軍部の台頭、未だ終わらぬ支那事変、植民地での独立運動、そして、未回収の極東を取り戻すべく肥大化する赤き帝国と密かに報復を狙う自由の帝国...\n\n果たして我が国の未来は繁栄か没落か"
- 
- THE_CHAOS_OF_EUROPE_NAME:0 "混沌に包まれし欧州"
- THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n先の大戦で肥大化したドイツとイタリア、及びそれらの同盟国の撃破に成功した。しかし、各戦勝国の独自路線が仇となり、戦後の新秩序の建設には失敗してしまった。後に「冷戦」と呼ばれることとなるこの構造は、イギリスとフランス、そして赤き帝国との間に暗い影を落とし続けている。以前の支配者は大きく三つに分断され、その最大の同盟国は南部が支配から脱した。\n今やバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では海峡を超えた対立が激化しようとしているのであった..."
- 
-#各国の説明
- GBR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "イギリスは辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか...？"
+ THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "The Glorious Empire in the Far East"
+ THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "In the 16th year of Showa (1945), Japan entered a state of conflict against the United States in the Pacific. Surviving this sacred war, the Empire created the Greater East Asia Co-prosperity Sphere under the principles of Hakkou Ichiu and of an East Asian New Order.\nJapan became a land where the sun never set, but also had its fair share of problems.\nPublic distrust of party politics, rising militarism, the still-ongoing China Incident, independence movements in the colonies, the Red Empire vying to reclaim its Far East, and the Empire of Freedom secretly seeking revenge...\n\nWill the future of our country be prosperity or downfall?"
+ THE_CHAOS_OF_EUROPE_NAME:0 "Europe in Chaos"
+ THE_CHAOS_OF_EUROPE_DESC:0 "Europe in Chaos...\nIn the last war, the emerging Italian and German powers were successfully defeated alongside their allies. However, the actions of the victors, each moving independently, failed to build a new post-war order. The power structure which later became known as the \"Cold War\" continued to cast its shadow on the United Kingdom, France, and the Red Empire. The former First Power split into three factions, with its largest part, the South, breaking away from its control. \nEurope divided itself between Stettin in the Baltic and Trieste in the Adriatic, while a famous cross-strait conflict was starting to intensify once more..."
  SPR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  FRA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  SWE_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  POL_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  SER_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  RUS_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
-
- CHI_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "1937年の夏より勃発した日中戦争は、十年近くの歳月を経た現在においても継続している。\n\nしかし、大日本帝国率いる大東亜共栄圏との長きにわたる戦争について、国民党率いる中央政府は未だ勝利への道をあきらめていない一方で、中華民国の国力は疲弊し、もはや国内の軍閥は中央政府の指示に従おうとはしていない。\n\nその上中華統一戦線の加盟国も、戦線離脱を望んでおり、各国は自国の戦力をいかに温存すべきかについて注力している。\n\n残念なことに中華民国の影響力が低下しつつある現状では、大東亜共栄圏に打ち勝つという当初の目標はもはや不可能であるというのが国際世論の見解である。"
+ CHI_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "The Sino-Japanese war, starting in the summer of 1937, still goes on nearly ten years later.\n\nThe Kuomintang-led central government still hasn't given up on victory in this long conflict against the Greater East Asia Co-Prosperity Sphere, led by the Empire of Japan. All the while, the Republic's strength as a nation has been exhausted, with the local warlords no longer willing to follow the central government's instructions.\n\nIn addition, some members of the Chinese United Front are also thinking about leaving the alliance, each country focusing on how to conserve its own strength.\n\nUnfortunately, with the diminishing influence of the Republic of China, international public opinion now believes that defeating the Sphere is no longer possible."
  TIB_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MON_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MEN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MAN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
+ JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "The Empire of Japan won its last war against the United States of America. Before this event the \"Kingdom of Hawaii\", which held close relationship with both the Japanese and the Americans, and was sandwiched between the two, had achieved federalization with the Asian power, a concept proposed for many years.\n\nThe battle still goes on in the west, but in the north Japan has acquired North Sakhalin via a treaty with Transbaikal, which rose up against the Soviet Union. In the south, the Empire succeeded in expanding its sphere of influence to the American, British, French, and Dutch colonies through various means.\n\nThe Far East... In other words, the island nation located under the Rising Sun has become a major power within 100 years of its modernization. We now must prosper without having this sun set on us.\n\nTennoheika banzai! Dainippon Teikoku banzai!"
  AST_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- 
  TUR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  SIA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ GBR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "Britain has barely won the World War, and it now has a lot of problems. How will the Labour Party, led by Clement Attlee, deal with the worsening relations with itsneighbors, with the other side of the Iron Curtain, and with the accelerated decolonization?"
