--- a/localisation/english/generic/geacps_generic_l_english.yml
+++ b/localisation/english/generic/geacps_generic_l_english.yml
@@ -1,53 +1,52 @@
 ﻿l_english:
-#国家方針
- strengthening_domestic_capital:0 "自国資本の強化"
- strengthening_military_power:0 "軍事力の強化"
- initial_industrialization:0 "初期工業化"
- focus_on_the_military_1:0 "軍事への注力 I"
- focus_on_the_military_2:0 "軍事への注力 II"
- focus_on_the_military_3:0 "軍事への注力 III"
- focus_on_the_private_sector_1:0 "民間への注力 I"
- focus_on_the_private_sector_2:0 "民間への注力 II"
- focus_on_the_private_sector_3:0 "民間への注力 III"
- focus_on_national_defense:0 "国土防衛への注力"
- mainland_fortification:0 "本土の要塞化"
- development_of_nuclear_weapons:0 "核兵器の開発"
- investing_in_technology:0 "技術への投資"
- focus_on_basic_electronics:0 "基礎電子工学への注力"
- increased_construction_speed:0 "建設速度の向上"
- focus_on_industry:0 "産業への注力"
- increased_production_capacity:0 "生産能力の向上"
- investing_in_infrastructure_1:0 "インフラへの投資 I"
- investing_in_infrastructure_2:0 "インフラへの投資 II"
- investing_in_infrastructure_3:0 "インフラへの投資 III"
- focus_on_army:0 "陸軍への注力"
- focus_on_light_tanks:0 "軽戦車への注力"
- focus_on_medium_tanks:0 "中戦車への注力"
- focus_on_heavy_tanks:0 "重戦車への注力"
- focus_on_artillery_equipment_1:0 "砲兵装備への注力 I"
- focus_on_artillery_equipment_2:0 "砲兵装備への注力 II"
- focus_on_artillery_equipment_3:0 "砲兵装備への注力 III"
- focus_on_infantry_equipment_1:0 "歩兵装備への注力 I"
- focus_on_infantry_equipment_2:0 "歩兵装備への注力 II"
- focus_on_infantry_equipment_3:0 "歩兵装備への注力 III"
- focus_on_special_forces:0 "特殊部隊への注力"
- focus_on_doctrine:0 "ドクトリンへの注力"
- focus_on_navy:0 "海軍への注力"
- flexible_navy:0 "柔軟な海軍"
- focus_on_submarines:0 "潜水艦への注力"
- focus_on_destroyers:0 "駆逐艦への注力"
- large_navy:0 "大規模海軍"
- focus_on_capital_ships:0 "主力艦への注力"
- focus_on_aircraft_carriers:0 "航空母艦への注力"
- expansion_of_naval_base:0 "海軍基地の増設"
- focus_on_air_force:0 "空軍への注力"
- lend-lease_from_other_countries:0 "他国からのレンドリース"
- original_research:0 "独自の研究"
- cooperation_with_the_army:0 "陸軍との連携"
- cooperation_with_the_navy:0 "海軍との連携"
- cooperation_with_the_civil:0 "民間との連携"
- strategic_aircraft_specialization:0 "戦略航空機の特化"
- tactical_aircraft_specialization:0 "戦術航空機の特化"
- expansion_of_air_force_base:0 "空軍基地の増設"
- rocket_development:0 "ロケットの開発"
- jet_aircraft_development:0 "ジェット機の開発"
+ strengthening_domestic_capital:0 "Strengthen our Domestic Capitals"
+ strengthening_military_power:0 "Increase our Military Power"
+ initial_industrialization:0 "Basic Industrialization"
+ focus_on_the_military_1:0 "Military Focus I"
+ focus_on_the_military_2:0 "Military Focus II"
+ focus_on_the_military_3:0 "Military Focus III"
+ focus_on_the_private_sector_1:0 "Civilian Focus I"
+ focus_on_the_private_sector_2:0 "Civilian Focus II"
+ focus_on_the_private_sector_3:0 "Civilian Focus III"
+ focus_on_national_defense:0 "National Defense Focus"
+ mainland_fortification:0 "Fortify the Mainland"
+ development_of_nuclear_weapons:0 "Develop Nuclear Weapons"
+ investing_in_technology:0 "Invest in Technology"
+ focus_on_basic_electronics:0 "Basic Electronics Focus"
+ increased_construction_speed:0 "Improve our Construction Speed"
+ focus_on_industry:0 "Industry Focus"
+ increased_production_capacity:0 "Improve our Production Capacity"
+ investing_in_infrastructure_1:0 "Invest in Infrastructure I"
+ investing_in_infrastructure_2:0 "Invest in Infrastructure II"
+ investing_in_infrastructure_3:0 "Invest in Infrastructure III"
+ focus_on_army:0 "Army Focus"
+ focus_on_light_tanks:0 "Light Tanks Focus"
+ focus_on_medium_tanks:0 "Medium Tanks Focus"
+ focus_on_heavy_tanks:0 "Heavy Tanks Focus"
+ focus_on_artillery_equipment_1:0 "Artillery Equipment Focus I"
+ focus_on_artillery_equipment_2:0 "Artillery Equipment Focus II"
+ focus_on_artillery_equipment_3:0 "Artillery Equipment Focus III"
+ focus_on_infantry_equipment_1:0 "Infantry Equipment Focus I"
+ focus_on_infantry_equipment_2:0 "Infantry Equipment Focus II"
+ focus_on_infantry_equipment_3:0 "Infantry Equipment Focus III"
+ focus_on_special_forces:0 "Special Forces Focus"
+ focus_on_doctrine:0 "Doctrine Focus"
+ focus_on_navy:0 "Navy Focus"
+ flexible_navy:0 "Flexible Navy"
+ focus_on_submarines:0 "Submarine Focus"
+ focus_on_destroyers:0 "Destroyer Focus"
+ large_navy:0 "Massive Navy"
+ focus_on_capital_ships:0 "Capital Ships Focus"
+ focus_on_aircraft_carriers:0 "Aircraft Carrier Focus"
+ expansion_of_naval_base:0 "Expand Naval Bases"
+ focus_on_air_force:0 "Air Force Focus"
+ lend-lease_from_other_countries:0 "Lend-leases from Outside"
+ original_research:0 "Independent Research"
+ cooperation_with_the_army:0 "Work with the Army"
+ cooperation_with_the_navy:0 "Work with the Navy"
+ cooperation_with_the_civil:0 "Work with Civilians"
+ strategic_aircraft_specialization:0 "Strategic Aircraft Specialization"
+ tactical_aircraft_specialization:0 "Tactical Aircraft Specialization"
+ expansion_of_air_force_base:0 "Expand Air Bases"
+ rocket_development:0 "Rocket Development"
+ jet_aircraft_development:0 "Develop Jet Aircrafts"
