--- a/localisation/english/generic/geacps_special_event_l_english.yml
+++ b/localisation/english/generic/geacps_special_event_l_english.yml
@@ -1,38 +1,28 @@
 ﻿l_english:
- geacps_special_event.t:0 "時計"
- 
- SE_SECOND_ACW_TITLE:0 "Second America Civil War"
- SE_SECOND_ACW_TEXT:0 "War, War is never change"
- 
- se_ZZZ_test_event_t:0 "あすぱら記念日"
- se_ZZZ_test_event_d:0 "あすぱらぱら"
- se_ZZZ_test_event_b:0 "§Bライスシャワー!"
- 
- se_NEP_greater_nepal_t:0 "グルカの国"
- se_NEP_greater_nepal_d:0 "数多の人種、言語、宗教、そして文化、\n進歩ありし国ネパール万歳！"
- se_NEP_greater_nepal_b:0 "§B日本でインド料理してる人が多い国！"
- 
- se_GER_reunification_by_hohenzollern_t:0 "ドイツ再統一"
- se_GER_reunification_by_hohenzollern_d:0 "肝心なのは、我々が歴史を作るのだ。\n書くのではない。\n-オットー・フォン・ビスマルク"
- se_GER_reunification_by_hohenzollern_b:0 "皇帝陛下万歳！"
- 
- se_GER_reunification_by_wittelsbach_t:0 "ドイツ再統一"
+ geacps_special_event.t:0 "Clock"
+ SE_SECOND_ACW_TITLE:0 "Second American Civil War"
+ SE_SECOND_ACW_TEXT:0 "War, war never changes"
+ se_ZZZ_test_event_t:0 "ASpara Anniversary"
+ se_ZZZ_test_event_d:0 "ASparapara"
+ se_ZZZ_test_event_b:0 "§BRice Shower!"
+ se_NEP_greater_nepal_t:0 "The Gurkha State"
+ se_NEP_greater_nepal_d:0 "Many people, languages, religions, and cultures,\nlong live Nepal, nation of progress!"
+ se_NEP_greater_nepal_b:0 "§BA country where many go to Japan to cook Indian food!"
+ se_GER_reunification_by_hohenzollern_t:0 "German Reunification"
+ se_GER_reunification_by_hohenzollern_d:0 "The main thing is to make history,\nnot to write it.\n- Otto von Bismarck"
+ se_GER_reunification_by_hohenzollern_b:0 "Heil dir im Siegerkranz!"
+ se_GER_reunification_by_wittelsbach_t:0 "German Reunification"
  se_GER_reunification_by_wittelsbach_d:0 ""
- se_GER_reunification_by_wittelsbach_b:0 "皇帝陛下万歳！"
- 
- se_GER_reunification_by_republic_t:0 "ドイツ再統一"
- se_GER_reunification_by_republic_d:0 "統一と正義と自由は幸福の証である。\nその幸福の輝きの中で栄えあれ。"
- se_GER_reunification_by_republic_b:0 "ドイツに栄光を！"
- 
- se_GER_reunification_by_democratic_republic_t:0 "ドイツ再統一"
- se_GER_reunification_by_democratic_republic_d:0 "ドイツ、一つの祖国。\n過去の困難を克服し、意思のままに団結する。"
- se_GER_reunification_by_democratic_republic_b:0 "もう誰も悲しまない世へ"
- 
- se_GER_establishment_of_greater_germany_t:0 "大ドイツ成立"
+ se_GER_reunification_by_wittelsbach_b:0 "Heil dir im Siegerkranz!"
+ se_GER_reunification_by_republic_t:0 "German Reunification"
+ se_GER_reunification_by_republic_d:0 "Unity, justice, and freedom are the pledges of fortune.\nFlourish in their radiance."
+ se_GER_reunification_by_republic_b:0 "Glory to Germany!"
+ se_GER_reunification_by_democratic_republic_t:0 "German Reunification"
+ se_GER_reunification_by_democratic_republic_d:0 "Germany, one homeland.\nOvercome your past difficulties, and unite our will."
+ se_GER_reunification_by_democratic_republic_b:0 "For a world of no more unhappiness"
+ se_GER_establishment_of_greater_germany_t:0 "Greater Germany"
  se_GER_establishment_of_greater_germany_d:0 ""
- se_GER_establishment_of_greater_germany_b:0 "再びドイツは一つに！"
- 
- se_AUS_establishment_of_greater_germany_t:0 "大ドイツ成立"
+ se_GER_establishment_of_greater_germany_b:0 "Germany is whole once more!"
+ se_AUS_establishment_of_greater_germany_t:0 "Greater Germany"
  se_AUS_establishment_of_greater_germany_d:0 ""
- se_AUS_establishment_of_greater_germany_b:0 "再びドイツの盟主に！"
- 
+ se_AUS_establishment_of_greater_germany_b:0 "For a new German hegemony!"
