--- a/localisation/english/map/geacps_autonomy_system_l_english.yml
+++ b/localisation/english/map/geacps_autonomy_system_l_english.yml
@@ -1,54 +1,37 @@
 ﻿l_english:
-#傀儡
- integrated_puppet:0 "統合傀儡国"
- occupied_puppet:0 "占領傀儡国"
- puppet:0 "傀儡国"
- autonomous_puppet:0 "自治傀儡国"
- nominal_puppet:0 "名目的傀儡国"
- 
-#植民地政府
- overseas_territory:0 "海外領土"
- colony:0 "植民地"
- dominion:0 "自治領"
- colony_and_protectorate:0 "植民地及び保護領"
- colonies_federation:0 "植民地連邦"
- protected_territory:0 "保護領"
- protected_state:0 "保護国"
- 
-#委任統治領
- mandated_territory_A:0 "A式委任統治領"
- mandated_territory_B:0 "B式委任統治領"
- mandated_territory_C:0 "C式委任統治領"
- 
-#同君連合
- crown_land:0 "王冠領"
- junior_partner_protected_territory:0 "同君連合保護領"
- junior_partner_colony:0 "同君連合植民地"
- junior_partner_state:0 "同君連合下位国"
- 
-#その他
- condominium:0 "共同統治領"
- leased_territory:0 "租借地"
- occupied_territory:0 "占領地"
- princely_state:0 "藩王国"
- trust_territories:0 "信託統治領"
- 
-#大日本帝国
- imperial_overseas_territory:0 "外地"
- imperial_member:0 "帝国構成国"
- imperial_protected_state:0 "帝国保護国"
- 
-#中華軍閥
- autonomous_province:0 "自治省"
- warlord:0 "中華軍閥"
- tributary_state:0 "冊封国"
- 
-#アメリカ
- us_territory:0 "準州"
- us_commonwealth:0 "米国自治連邦区"
- 
-#ソ連
- soviet_autonomous_republic:0 "自治共和国"
- soviet_member_republic:0 "構成共和国"
- soviet_member_federal_republic:0 "構成連邦共和国"
- soviet_satellite:0 "衛星国"
+ integrated_puppet:0 "Integrated Puppet"
+ occupied_puppet:0 "Occupied Puppet"
+ puppet:0 "Puppet"
+ autonomous_puppet:0 "Autonomous Puppet"
+ nominal_puppet:0 "Nominal Puppet"
+ overseas_territory:0 "Overseas Territory"
+ colony:0 "Colony"
+ dominion:0 "Dominion"
+ colony_and_protectorate:0 "Colony and Protectorate"
+ protected_territory:0 "Protectorate"
+ protected_state:0 "Protectorate"
+ trust_territories:0 "Trust Territories"
+ leased_territory:0 "Leased Territory"
+ condominium:0 "Condominium"
+ junior_partner_state:0 "Junior Partner State"
+ princely_state:0 "Princely State"
+ imperial_overseas_territory:0 "Imperial Overseas Territory"
+ imperial_member:0 "Imperial Constituent"
+ imperial_protected_state:0 "Imperial Protectorate"
+ autonomous_province:0 "Autonomous Province"
+ warlord:0 "Warlord"
+ tributary_state:0 "Tributary State"
+ us_territory:0 "Territory"
+ us_commonwealth:0 "Commonwealth"
+ soviet_autonomous_republic:0 "Autonomous Republic"
+ soviet_member_republic:0 "Republics of the Soviet Union"
+ soviet_member_federal_republic:0 "Federal Republics of the Soviet Union"
+ soviet_satellite:0 "Satellite"
+ occupied_territory:0 "Occupied Territory"
+ junior_partner_colony:0 "Junior Partner Colony"
+ mandated_territory_A:0 "Class A Mandate"
+ mandated_territory_B:0 "Class B Mandate"
+ mandated_territory_C:0 "Class C Mandate"
+ colonies_federation:0 "Colonies Federation"
+ crown_land:0 "Crown Land"
+ junior_partner_protected_territory:0 "Junior Partner Protected Territory"
