--- a/localisation/english/map/geacps_factions_l_english.yml
+++ b/localisation/english/map/geacps_factions_l_english.yml
@@ -1,33 +1,22 @@
 ﻿l_english:
-#初期陣営
- GREATER_EAST_ASIA_CO-PROSPERITY_SPHERE:0 "大東亜共栄圏"
- CHINESE_PEOPLE'S_FRONT:0 "中華人民戦線"
- COMINFORM:0 "コミンフォルム"
- WESTERN_EUROPEAN_ALLIANCE:0 "西ヨーロッパ同盟"
- WESTMINSTER_TREATY_ORGANIZATION:0 "ウェストミンスター条約機構"
- 
-#追加陣営
- ANTI-JAPANESE_NATIONAL_UNITED_FRONT:0 "抗日民族統一戦線"
- MONROE_LEAGUE:0 "モンロー連盟"
- 
- #COMMONWEALTH_OF_INDEPENDENT_STATES:0 "独立国家共同体"
- #EURASIAN_ECONOMIC_UNION:0 "ユーラシア連合"
- #NEW_HANSEATIC_LEAGUE:0 "新ハンザ同盟"
- #NORTH_ATLANTIC_TREATY_ORGANIZATION:0 "北大西洋条約機構"
- #UNION_STATE_OF_RUSSIA_AND_BELARUS:0 "ロシア・ベラルーシ連盟"
- 
-#陣営イベント
- faction.0.t:0 "陣営招待の打診"
- faction.0.d:0 "[FROM.GetAdjective]が我が国に対して[FROM.GetFactionName]へ招待する旨を打診をしてきた。"
- faction.0.0:0 "加盟することを打診せよ！"
- faction.0.1:0 "お断りしよう…"
- faction.1.t:0 "陣営加盟の打診"
- faction.1.d:0 "[FROM.GetAdjective]が[ROOT.GetFactionName]に加盟の打診をしてきた。"
- faction.1.0:0 "仲間は多い方が良いからな"
- faction.1.1:0 "それは我々の利益となるのかね？"
- faction.2.t:0 "[FROM.GetAdjective]が受諾"
- faction.2.d:0 "[FROM.GetAdjective]が受諾する旨を打診をしてきた。"
- faction.2.0:0 "喜ばしいな。"
- faction.3.t:0 "[FROM.GetAdjective]が拒否"
- faction.3.d:0 "[FROM.GetAdjective]が受諾しない旨を打診をしてきた。"
- faction.3.0:0 "んな馬鹿な……"
+ GREATER_EAST_ASIA_CO-PROSPERITY_SPHERE:0 "Greater East Asia Co-Prosperity Sphere"
+ WESTMINSTER_TREATY_ORGANIZATION:0 "Westminster Treaty Organization"
+ WESTERN_EUROPEAN_ALLIANCE:0 "Western European Alliance"
+ COMINFORM:0 "Cominform"
+ ANTI-JAPANESE_NATIONAL_UNITED_FRONT:0 "Anti-Japanese National United Front"
+ CHINESE_PEOPLE'S_FRONT:0 "Chinese People's Front"
+ MONROE_LEAGUE:0 "Monroe League"
+ faction.0.t:0 "Faction Invitation"
+ faction.0.d:0 "The [FROM.GetAdjective] have invited our nation to join the [FROM.GetFactionName]."
+ faction.0.0:0 "Petition to join!"
+ faction.0.1:0 "Let's decline..."
+ faction.1.t:0 "Join Faction Request"
+ faction.1.d:0 "The [FROM.GetAdjective] have requested to join the [ROOT.GetFactionName]."
+ faction.1.0:0 "The more, the merrier"
+ faction.1.1:0 "Is it really in our interest?"
+ faction.2.t:0 "The [FROM.GetAdjective] Accept"
+ faction.2.d:0 "The [FROM.GetAdjective] have accepted our request."
+ faction.2.0:0 "Excellent."
+ faction.3.t:0 "The [FROM.GetAdjective] Decline"
+ faction.3.d:0 "The [FROM.GetAdjective] have declined our request."
+ faction.3.0:0 "Unbelievable..."
