--- a/localisation/english/technology/geacps_artillery_l_english.yml
+++ b/localisation/english/technology/geacps_artillery_l_english.yml
@@ -1,105 +1,92 @@
 ﻿l_english:
-#野戦砲装備
- artillery_equipment_4:0 "高度改良型砲兵"
- artillery_equipment_4_desc:0 "輸送時の分解が可能な軽量砲は、 以前では不可能だった地域への砲兵支援を可能にします。 "
- artillery_equipment_5:0 "準現代型砲兵"
- artillery_equipment_5_desc:0 "輸送時の分解が可能な軽量砲は、 以前では不可能だった地域への砲兵支援を可能にします。 "
- artillery_equipment_6:0 "現代型砲兵"
- artillery_equipment_6_desc:0 "輸送時の分解が可能な軽量砲は、 以前では不可能だった地域への砲兵支援を可能にします。 "
- 
- artillery5:0 "発展型砲兵改良 I"
- artillery6:0 "発展型砲兵改良 II"
- artillery6_desc:0 "野戦砲を改良します。"
- artillery8:0 "高度改良型砲兵改良 I"
- artillery8_desc:0 "野戦砲を改良します。"
- artillery9:0 "高度改良型砲兵改良 II"
- artillery9_desc:0 "野戦砲を改良します。"
- artillery11:0 "準現代砲兵型改良 I"
- artillery11_desc:0 "野戦砲を改良します。"
- artillery12:0 "準現代砲兵改良 II"
- artillery12_desc:0 "野戦砲を改良します。"
- artillery14:0 "現代砲兵改良 I"
- artillery14_desc:0 "野戦砲を改良します。"
- artillery15:0 "現代砲兵改良 II"
- artillery15_desc:0 "野戦砲を改良します。"
- 
-#噴進砲装備
- rocket_artillery_equipment_3:0 "高度改良型噴進砲兵"
- rocket_artillery_equipment_3_desc:0 "回転により弾道が安定した噴進砲弾の装備は、 軽砲兵部隊の長射程化を可能にします。 "
- rocket_artillery_equipment_4:0 "準現代型噴進砲兵"
- rocket_artillery_equipment_4_desc:0 "回転により弾道が安定した噴進砲弾の装備は、 軽砲兵部隊の長射程化を可能にします。 "
- rocket_artillery_equipment_5:0 "現代型型噴進砲兵"
- rocket_artillery_equipment_5_desc:0 "回転により弾道が安定した噴進砲弾の装備は、 軽砲兵部隊の長射程化を可能にします。 "
- 
- rocket_artillery5:0 "改良型噴進砲兵改良 I"
- rocket_artillery5_desc:0 "噴進砲兵を改良します。"
- rocket_artillery6:0 "改良型噴進砲兵改良 II"
- rocket_artillery6_desc:0 "噴進砲兵を改良します。"
- rocket_artillery8:0 "発展型噴進砲兵改良 I"
- rocket_artillery8_desc:0 "噴進砲兵を改良します。"
- rocket_artillery9:0 "発展型噴進砲兵改良 II"
- rocket_artillery9_desc:0 "噴進砲兵を改良します。"
- rocket_artillery11:0 "準現代噴進砲兵型改良 I"
- rocket_artillery11_desc:0 "噴進砲兵を改良します。"
- rocket_artillery12:0 "準現代噴進砲兵改良 II"
- rocket_artillery12_desc:0 "噴進砲兵を改良します。"
- rocket_artillery14:0 "現代噴進砲兵改良 I"
- rocket_artillery14_desc:0 "噴進砲兵を改良します。"
- 
-#対空砲装備
- anti_air_equipment_4:0 "高度改良型対空火器"
- anti_air_equipment_4_desc:1 "高射程化され高い発射速度を持つ先進的な移動式対空砲は、 高高度を高速で飛ぶ航空機も攻撃する事を可能にします。 "
- anti_air_equipment_5:0 "準現代型対空火器"
- anti_air_equipment_5_desc:1 "高射程化され高い発射速度を持つ先進的な移動式対空砲は、 高高度を高速で飛ぶ航空機も攻撃する事を可能にします。 "
- anti_air_equipment_6:0 "現代型対空火器"
- anti_air_equipment_6_desc:1 "高射程化され高い発射速度を持つ先進的な移動式対空砲は、 高高度を高速で飛ぶ航空機も攻撃する事を可能にします。 "
- 
- antiair6:0 "発展型対空火器改良 I"
- antiair6_desc:0 "対空火器を改良します。"
- antiair7:0 "発展型対空火器改良 II"
- antiair7_desc:0 "対空火器を改良します。"
- antiair9:0 "高度改良型対空火器改良 I"
- antiair9_desc:0 "対空火器を改良します。"
- antiair10:0 "高度改良型対空火器改良 II"
- antiair10_desc:0 "対空火器を改良します。"
- antiair12:0 "準現代対空火器型改良 I"
- antiair12_desc:0 "対空火器を改良します。"
- antiair13:0 "準現代対空火器改良 II"
- antiair13_desc:0 "対空火器を改良します。"
- antiair15:0 "現代対空火器改良 I"
- antiair15_desc:0 "対空火器を改良します。"
- 
- antiairbuilding1:0 "対空砲 I"
- antiairbuilding1_desc:0 "対空砲を拡充可能にします。"
- antiairbuilding2:0 "対空砲 II"
- antiairbuilding2_desc:0 "対空砲を拡充可能にします。"
- antiairbuilding3:0 "対空砲 III"
- antiairbuilding3_desc:0 "対空砲を拡充可能にします。"
- antiairbuilding4:0 "対空砲 IV"
- antiairbuilding4_desc:0 "対空砲を拡充可能にします。"
- antiairbuilding5:0 "対空砲 V"
- antiairbuilding5_desc:0 "対空砲を拡充可能にします。"
- 
-#対戦車砲装備
- anti_tank_equipment_4:0 "高度改良型対戦車火器"
- anti_tank_equipment_4_desc:0 "我々の敵が開発するかもしれない新型の装甲に対抗し得る対戦車砲を、 高い砲口初速を持つ砲と様々な新型弾薬技術を組み合わせる事で準備します。 "
- anti_tank_equipment_5:0 "準現代型対戦車火器"
- anti_tank_equipment_5_desc:0 "我々の敵が開発するかもしれない新型の装甲に対抗し得る対戦車砲を、 高い砲口初速を持つ砲と様々な新型弾薬技術を組み合わせる事で準備します。 "
- anti_tank_equipment_6:0 "現代型対戦車火器"
- anti_tank_equipment_6_desc:0 "我々の敵が開発するかもしれない新型の装甲に対抗し得る対戦車砲を、 高い砲口初速を持つ砲と様々な新型弾薬技術を組み合わせる事で準備します。 "
- 
- antitank6:0 "発展型対戦車火器改良 I"
- antitank6_desc:0 "対戦車火器を改良します。"
- antitank7:0 "発展型対戦車火器改良 II"
- antitank7_desc:0 "対戦車火器を改良します。"
- antitank9:0 "高度改良型対戦車火器改良 I"
- antitank9_desc:0 "対戦車火器を改良します。"
- antitank10:0 "高度改良型対戦車火器改良 II"
- antitank10_desc:0 "対戦車火器を改良します。"
- antitank12:0 "準現代対戦車火器型改良 I"
- antitank12_desc:0 "対戦車火器を改良します。"
- antitank13:0 "準現代対戦車火器改良 II"
- antitank13_desc:0 "対戦車火器を改良します。"
- antitank15:0 "現代対戦車火器改良 I"
- antitank15_desc:0 "対戦車火器を改良します。"
- 
+ artillery_equipment_4:0 "Progressed Artillery"
+ artillery_equipment_4_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
+ artillery_equipment_5:0 "Semi-Modern Artillery"
+ artillery_equipment_5_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
+ artillery_equipment_6:0 "Modern Artillery"
+ artillery_equipment_6_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
+ artillery5:0 "Advanced Artillery Upgrade I"
+ artillery6:0 "Advanced Artillery Upgrade II"
+ artillery6_desc:0 "Improve Artillery."
+ artillery8:0 "Progressed Artillery Upgrade I"
+ artillery8_desc:0 "Improve Artillery."
+ artillery9:0 "Progressed Artillery Upgrade II"
+ artillery9_desc:0 "Improve Artillery."
+ artillery11:0 "Semi-Modern Artillery Upgrade I"
+ artillery11_desc:0 "Improve Artillery."
+ artillery12:0 "Semi-Modern Artillery Upgrade II"
+ artillery12_desc:0 "Improve Artillery."
+ artillery14:0 "Modern Artillery Upgrade I"
+ artillery14_desc:0 "Improve Artillery."
+ artillery15:0 "Modern Artillery Upgrade II"
+ artillery15_desc:0 "Improve Artillery."
+ rocket_artillery_equipment_3:0 "Progressed Rocket Artillery"
+ rocket_artillery_equipment_3_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
+ rocket_artillery_equipment_4:0 "Semi-Modern Rocket Artillery"
+ rocket_artillery_equipment_4_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
+ rocket_artillery_equipment_5:0 "Modern Rocket Artillery"
+ rocket_artillery_equipment_5_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
+ rocket_artillery5:0 "Advanced Rocket Artillery Upgrade I"
+ rocket_artillery5_desc:0 "Improve Rocket Artillery."
+ rocket_artillery6:0 "Advanced Rocket Artillery Upgrade II"
+ rocket_artillery6_desc:0 "Improve Rocket Artillery."
+ rocket_artillery8:0 "Progressed Rocket Artillery Upgrade I"
+ rocket_artillery8_desc:0 "Improve Rocket Artillery."
+ rocket_artillery9:0 "Progressed Rocket Artillery Upgrade II"
+ rocket_artillery9_desc:0 "Improve Rocket Artillery."
+ rocket_artillery11:0 "Semi-Modern Rocket Artillery Upgrade I"
+ rocket_artillery11_desc:0 "Improve Rocket Artillery."
+ rocket_artillery12:0 "Semi-Modern Rocket Artillery Upgrade II"
+ rocket_artillery12_desc:0 "Improve Rocket Artillery."
+ rocket_artillery14:0 "Modern Rocket Artillery Upgrade I"
+ rocket_artillery14_desc:0 "Improve Rocket Artillery."
+ anti_air_equipment_4:0 "Progressed Anti-Air"
+ anti_air_equipment_4_desc:1 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets."
+ anti_air_equipment_5:0 "Semi-Modern Anti-Air"
+ anti_air_equipment_5_desc:1 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets."
+ anti_air_equipment_6:0 "Modern Anti-Air"
+ anti_air_equipment_6_desc:1 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets."
+ antiair6:0 "Advanced Anti-Air Upgrade I"
+ antiair6_desc:0 "Improve Anti-Air."
+ antiair7:0 "Advanced Anti-Air Upgrade II"
+ antiair7_desc:0 "Improve Anti-Air."
+ antiair9:0 "Progressed Anti-Air Upgrade I"
+ antiair9_desc:0 "Improve Anti-Air."
+ antiair10:0 "Progressed Anti-Air Upgrade II"
+ antiair10_desc:0 "Improve Anti-Air."
+ antiair12:0 "Semi-Modern Anti-Air Upgrade I"
+ antiair12_desc:0 "Improve Anti-Air."
+ antiair13:0 "Semi-Modern Anti-Air Upgrade II"
+ antiair13_desc:0 "Improve Anti-Air."
+ antiair15:0 "Modern Anti-Air Upgrade I"
+ antiair15_desc:0 "Improve Anti-Air."
+ antiairbuilding1:0 "Anti-Air I"
+ antiairbuilding1_desc:0 "Enabling expansion of Anti-Air."
+ antiairbuilding2:0 "Anti-Air II"
+ antiairbuilding2_desc:0 "Enabling expansion of Anti-Air."
+ antiairbuilding3:0 "Anti-Air III"
+ antiairbuilding3_desc:0 "Enabling expansion of Anti-Air."
+ antiairbuilding4:0 "Anti-Air IV"
+ antiairbuilding4_desc:0 "Enabling expansion of Anti-Air."
+ antiairbuilding5:0 "Anti-Air V"
+ antiairbuilding5_desc:0 "Enabling expansion of Anti-Air."
+ anti_tank_equipment_4:0 "Progressed Anti-Tank"
+ anti_tank_equipment_4_desc:0 "Artillery specialized in defeating armored targets like Tanks, it generally fires armor piercing shells."
+ anti_tank_equipment_5:0 "Semi-Modern Anti-Tank"
+ anti_tank_equipment_5_desc:0 "Artillery specialized in defeating armored targets like Tanks, it generally fires armor piercing shells."
+ anti_tank_equipment_6:0 "Modern Anti-Tank"
+ anti_tank_equipment_6_desc:0 "Artillery specialized in defeating armored targets like Tanks, it generally fires armor piercing shells."
+ antitank6:0 "Advanced Anti-Tank Upgrade I"
+ antitank6_desc:0 "Improve Anti-Tank."
+ antitank7:0 "Advanced Anti-Tank Upgrade II"
+ antitank7_desc:0 "Improve Anti-Tank."
+ antitank9:0 "Progressed Anti-Tank Upgrade I"
+ antitank9_desc:0 "Improve Anti-Tank."
+ antitank10:0 "Progressed Anti-Tank Upgrade II"
+ antitank10_desc:0 "Improve Anti-Tank."
+ antitank12:0 "Semi-Modern Anti-Tank Upgrade I"
+ antitank12_desc:0 "Improve Anti-Tank."
+ antitank13:0 "Semi-Modern Anti-Tank Upgrade II"
+ antitank13_desc:0 "Improve Anti-Tank."
+ antitank15:0 "Modern Anti-Tank Upgrade I"
+ antitank15_desc:0 "Improve Anti-Tank."
