--- a/localisation/english/technology/geacps_doctrine_l_english.yml
+++ b/localisation/english/technology/geacps_doctrine_l_english.yml
@@ -1,319 +1,305 @@
 ﻿l_english:
-#陸軍戦闘教義
- mobile_warfare001:0 "市民レジスタンス"
+ mobile_warfare001:0 "Civil Resistance"
  mobile_warfare001_desc:0 ""
- mobile_warfare002:0 "都市ゲリラ作戦"
+ mobile_warfare002:0 "Urban Guerrilla Warfare"
  mobile_warfare002_desc:0 ""
- mobile_warfare003:0 "都市戦闘戦術"
+ mobile_warfare003:0 "Urban Fighting Tactics"
  mobile_warfare003_desc:0 ""
- mobile_warfare004:0 "速成訓練"
+ mobile_warfare004:0 "Fast Training"
  mobile_warfare004_desc:0 ""
- mobile_warfare005:0 "防衛的ゲリラ戦術"
+ mobile_warfare005:0 "Defensive Guerrilla Tactics"
  mobile_warfare005_desc:0 ""
- mobile_warfare006:0 "本土防衛"
+ mobile_warfare006:0 "Homeland Defense"
  mobile_warfare006_desc:0 ""
- mobile_warfare007:0 "愛国心"
+ mobile_warfare007:0 "Patriotism"
  mobile_warfare007_desc:0 ""
- mobile_warfare008:0 "待ち伏せ作戦"
+ mobile_warfare008:0 "Ambush"
  mobile_warfare008_desc:0 ""
- mobile_warfare009:0 "戦術的撤退"
+ mobile_warfare009:0 "Tactical Withdrawal"
  mobile_warfare009_desc:0 ""
- mobile_warfare010:0 "捨て身の攻撃"
+ mobile_warfare010:0 "Desperate Attack"
  mobile_warfare010_desc:0 ""
- mobile_warfare101:0 "突破集中"
+ mobile_warfare101:0 "Breakthrough-Focus"
  mobile_warfare101_desc:0 ""
- mobile_warfare111:0 "包囲集中"
+ mobile_warfare111:0 "Encirclement-Focus"
  mobile_warfare111_desc:0 ""
- mobile_warfare112:0 "追い込み殲滅"
+ mobile_warfare112:0 "Pocket Destroyers"
  mobile_warfare112_desc:0 ""
- mobile_warfare121:0 "ハンター集団"
+ mobile_warfare121:0 "Hunter-Groups"
  mobile_warfare121_desc:0 ""
- mobile_warfare122:0 "迅速な制圧"
+ mobile_warfare122:0 "Rapid Domination"
  mobile_warfare122_desc:0 ""
- mobile_warfare102:0 "現代型先鋒"
+ mobile_warfare102:0 "Modern Spearheads"
  mobile_warfare102_desc:0 ""
- mobile_warfare103:0 "都市戦闘部隊"
+ mobile_warfare103:0 "Urban Combat Section"
  mobile_warfare103_desc:0 ""
- mobile_warfare104:0 "特殊部隊運用"
+ mobile_warfare104:0 "Specialist Usage"
  mobile_warfare104_desc:0 ""
- mobile_warfare105:0 "戦闘車両管理"
+ mobile_warfare105:0 "Combat Vehicle Management"
  mobile_warfare105_desc:0 ""
- mobile_warfare113:0 "機動予備兵力"
+ mobile_warfare113:0 "Mobile Reserves"
  mobile_warfare113_desc:0 ""
- mobile_warfare114:0 "機械化歩兵戦術"
+ mobile_warfare114:0 "Mechanized Infantry Tactics"
  mobile_warfare114_desc:0 ""
- mobile_warfare115:0 "大都市包囲"
+ mobile_warfare115:0 "Huge City-Encirclements"
  mobile_warfare115_desc:0 ""
- mobile_warfare123:0 "戦車集団"
+ mobile_warfare123:0 "Tank Group"
  mobile_warfare123_desc:0 ""
- mobile_warfare124:0 "退却中の敵軍の殲滅"
+ mobile_warfare124:0 "Destruction of retreating enemy Forces"
  mobile_warfare124_desc:0 ""
- mobile_warfare125:0 "対パルチザン任務"
+ mobile_warfare125:0 "Anti-Partisan-Duties"
  mobile_warfare125_desc:0 ""
- 
- superior_firepower001:0 "機械化波状攻撃"
+ superior_firepower001:0 "Mechanized Wave"
  superior_firepower001_desc:0 ""
- superior_firepower002:0 "大規模装甲ドクトリン"
+ superior_firepower002:0 "Massed Armor Doctrine"
  superior_firepower002_desc:0 ""
- superior_firepower003:0 "暗視戦術"
+ superior_firepower003:0 "Night Vision Tactics"
  superior_firepower003_desc:0 ""
- superior_firepower004:0 "過酷地戦"
+ superior_firepower004:0 "Battle in a Tough Field"
  superior_firepower004_desc:0 ""
- superior_firepower005:0 "武器規格統一"
+ superior_firepower005:0 "Arms Standardization"
  superior_firepower005_desc:0 ""
- superior_firepower006:0 "戦闘工学"
+ superior_firepower006:0 "Combat Engineering"
  superior_firepower006_desc:0 ""
- superior_firepower011:0 "広域攻勢"
+ superior_firepower011:0 "Wide Area Attacks"
  superior_firepower011_desc:0 ""
- superior_firepower012:0 "地域保安"
+ superior_firepower012:0 "Area Securing"
  superior_firepower012_desc:0 ""
- superior_firepower013:0 "周辺制圧"
+ superior_firepower013:0 "Rural Pacification"
  superior_firepower013_desc:0 ""
- superior_firepower014:0 "圧倒的攻撃"
+ superior_firepower014:0 "Overwhelming Attacks"
  superior_firepower014_desc:0 ""
- superior_firepower021:0 "機動予備兵力"
+ superior_firepower021:0 "Mobile Reserves"
  superior_firepower021_desc:0 ""
- superior_firepower022:0 "機械化兵による攻勢"
+ superior_firepower022:0 "Mechanized Offensive"
  superior_firepower022_desc:0 ""
- superior_firepower023:0 "自動車化歩兵集中"
+ superior_firepower023:0 "Motorized Infantry Focus"
  superior_firepower023_desc:0 ""
- superior_firepower024:0 "発展型旅団"
+ superior_firepower024:0 "Advanced Brigades"
  superior_firepower024_desc:0 ""
- 
- grand_battle_plan001:0 "現代型歩兵ドクトリン"
+ grand_battle_plan001:0 "Modern Infantry Doctrine"
  grand_battle_plan001_desc:0 ""
- grand_battle_plan002:0 "現代型縦深浸透"
+ grand_battle_plan002:0 "Modern Infiltration in Depth"
  grand_battle_plan002_desc:0 ""
- grand_battle_plan003:0 "現代型強襲突破"
+ grand_battle_plan003:0 "Modern Assault Breakthrough"
  grand_battle_plan003_desc:0 ""
- grand_battle_plan004:0 "段階的作戦遂行ドクトリン"
+ grand_battle_plan004:0 "Operational Stages Doctrine"
  grand_battle_plan004_desc:0 ""
- grand_battle_plan011:0 "多目的歩兵"
+ grand_battle_plan011:0 "Multipurpose Infantry"
  grand_battle_plan011_desc:0 ""
- grand_battle_plan012:0 "機動火力ドクトリン"
+ grand_battle_plan012:0 "Mobile Firepower Doctrine"
  grand_battle_plan012_desc:0 ""
- grand_battle_plan013:0 "戦車使用"
+ grand_battle_plan013:0 "Armor Usage"
  grand_battle_plan013_desc:0 ""
- grand_battle_plan021:0 "戦術訓練"
+ grand_battle_plan021:0 "Tactics Training"
  grand_battle_plan021_desc:0 ""
- grand_battle_plan022:0 "防衛計画事前策定ドクトリン"
+ grand_battle_plan022:0 "Pre-planned Defense Doctrine"
  grand_battle_plan022_desc:0 ""
- grand_battle_plan023:0 "現代型防衛"
+ grand_battle_plan023:0 "Modern Defense"
  grand_battle_plan023_desc:0 ""
- grand_battle_plan005:0 "統合火力"
+ grand_battle_plan005:0 "Integrated Firepower"
  grand_battle_plan005_desc:0 ""
- grand_battle_plan006:0 "特殊部隊"
+ grand_battle_plan006:0 "Special Forces"
  grand_battle_plan006_desc:0 ""
- grand_battle_plan014:0 "機械化歩兵戦術"
+ grand_battle_plan014:0 "Mechanized Infantry Tactics"
  grand_battle_plan014_desc:0 ""
- grand_battle_plan024:0 "本土防衛"
+ grand_battle_plan024:0 "Homeland Defense"
  grand_battle_plan024_desc:0 ""
- 
- mass_assault001:0 "局地防衛ドクトリン"
+ mass_assault001:0 "Pocket Defense Doctrine"
  mass_assault001_desc:0 ""
- mass_assault002:0 "心理戦"
+ mass_assault002:0 "Psychological Warfare"
  mass_assault002_desc:0 ""
- mass_assault003:0 "波状攻撃"
+ mass_assault003:0 "Wavy Attack"
  mass_assault003_desc:0 ""
- mass_assault004:0 "拡張補給管理"
+ mass_assault004:0 "Extended Supply Management"
  mass_assault004_desc:0 ""
- mass_assault005:0 "消耗戦"
+ mass_assault005:0 "a War of Attrition"
  mass_assault005_desc:0 ""
- mass_assault011:0 "機械化波状攻撃"
+ mass_assault011:0 "Mechanized Wave"
  mass_assault011_desc:0 ""
- mass_assault012:0 "自動車化歩兵集中"
+ mass_assault012:0 "Motorized Infantry Focus"
  mass_assault012_desc:0 ""
- mass_assault013:0 "重砲支援"
+ mass_assault013:0 "Support Heavy Artillery"
  mass_assault013_desc:0 ""
- mass_assault014:0 "統合型航空支援"
+ mass_assault014:0 "Integrated Air Support"
  mass_assault014_desc:0 ""
- mass_assault015:0 "大都市包囲"
+ mass_assault015:0 "Huge City-Encirclements"
  mass_assault015_desc:0 ""
- mass_assault021:0 "宣撫教育手法"
+ mass_assault021:0 "Praising Education Method"
  mass_assault021_desc:0 ""
- mass_assault022:0 "攻勢的ゲリラ戦術"
+ mass_assault022:0 "Offensive Guerrilla Tactics"
  mass_assault022_desc:0 ""
- mass_assault023:0 "防衛的ゲリラ戦術"
+ mass_assault023:0 "Defensive Guerrilla Tactics"
  mass_assault023_desc:0 ""
- mass_assault024:0 "天然の防衛線"
+ mass_assault024:0 "Natural Defenses"
  mass_assault024_desc:0 ""
- mass_assault025:0 "速成訓練"
+ mass_assault025:0 "Fast Training"
  mass_assault025_desc:0 ""
- mass_assault901:0 "浸透強襲"
+ mass_assault901:0 "Infiltration Assault"
  mass_assault901_desc:0 ""
- mass_assault902:0 "歩兵突破"
+ mass_assault902:0 "Infantry Breakthrough"
  mass_assault902_desc:0 ""
- 
-#海軍戦闘教義
- new_doctrine:0 "新時代ドクトリン"
+ new_doctrine:0 "New era Doctrine"
  new_doctrine_desc:0 ""
- 
- fleet_in_being001:0 "海軍火力ドクトリン"
+ fleet_in_being001:0 "Naval Firepower Doctrine"
  fleet_in_being001_desc:0 ""
- fleet_in_being011:0 "艦隊決戦重視"
+ fleet_in_being011:0 "Decisive Engagement Focus"
  fleet_in_being011_desc:0 ""
- fleet_in_being012:0 "艦載機の補助的運用"
+ fleet_in_being012:0 "Subsidiary Carrier-Based Aircraft Role"
  fleet_in_being012_desc:0 ""
- fleet_in_being013:0 "レーダーによる対空監視"
+ fleet_in_being013:0 "Air Monitoring by Radar"
  fleet_in_being013_desc:0 ""
- fleet_in_being014:0 "火器管制システム"
+ fleet_in_being014:0 "Firearm Control System"
  fleet_in_being014_desc:0 ""
- fleet_in_being015:0 "海上警備行動"
+ fleet_in_being015:0 "Maritime Security Behavior"
  fleet_in_being015_desc:0 ""
- fleet_in_being016:0 "海上決戦"
+ fleet_in_being016:0 "Surface Combat Engagement Prioritization"
  fleet_in_being016_desc:0 ""
- fleet_in_being021:0 "航空船団防衛"
+ fleet_in_being021:0 "Air Force Defense"
  fleet_in_being021_desc:0 ""
- fleet_in_being022:0 "対潜掃討部隊"
+ fleet_in_being022:0 "Anti-Submarine Force"
  fleet_in_being022_desc:0 ""
- fleet_in_being023:0 "通商防衛"
+ fleet_in_being023:0 "Trade Defense"
  fleet_in_being023_desc:0 ""
- fleet_in_being024:0 "ソナー運用訓練"
+ fleet_in_being024:0 "Sonar Operation Training"
  fleet_in_being024_desc:0 ""
- fleet_in_being031:0 "艦隊補助潜水艦"
+ fleet_in_being031:0 "Fleet Assistant Submarine"
  fleet_in_being031_desc:0 ""
- fleet_in_being032:0 "諜報活動"
+ fleet_in_being032:0 "Intelligence Activity"
  fleet_in_being032_desc:0 ""
- fleet_in_being033:0 "現代型潜水艦作戦"
+ fleet_in_being033:0 "Modern Submariine Warfare"
  fleet_in_being033_desc:0 ""
- fleet_in_being034:0 "沈黙の軍隊"
+ fleet_in_being034:0 "Silent Service"
  fleet_in_being034_desc:0 ""
- 
- trade_interdiction001:0 "海軍戦力投入ドクトリン"
+ trade_interdiction001:0 "Maritime Power Projection Doctrine"
  trade_interdiction001_desc:0 ""
- trade_interdiction011:0 "海上警備行動"
+ trade_interdiction011:0 "Maritime Security Behavior"
  trade_interdiction011_desc:0 ""
- trade_interdiction012:0 "レーダーによる対空監視"
+ trade_interdiction012:0 "Air Monitoring by Radar"
  trade_interdiction012_desc:0 ""
- trade_interdiction013:0 "火器管制システム"
+ trade_interdiction013:0 "Firearm Control System"
  trade_interdiction013_desc:0 ""
- trade_interdiction014:0 "対潜掃討部隊"
+ trade_interdiction014:0 "Anti-Submarine Force"
  trade_interdiction014_desc:0 ""
- trade_interdiction021:0 "艦隊兵站"
+ trade_interdiction021:0 "Fleet Logistics"
  trade_interdiction021_desc:0 ""
- trade_interdiction022:0 "小型艦重視"
+ trade_interdiction022:0 "Screen Ship Focus"
  trade_interdiction022_desc:0 ""
- trade_interdiction023:0 "進攻阻止"
+ trade_interdiction023:0 "Preventing Progress"
  trade_interdiction023_desc:0 ""
- trade_interdiction024:0 "通商防衛"
+ trade_interdiction024:0 "Trade Defense"
  trade_interdiction024_desc:0 ""
- trade_interdiction031:0 "通商破壊"
+ trade_interdiction031:0 "Trade Destruction"
  trade_interdiction031_desc:0 ""
- trade_interdiction032:0 "待ち伏せ"
+ trade_interdiction032:0 "Ambush"
  trade_interdiction032_desc:0 ""
- trade_interdiction033:0 "潜水艦回避技術"
+ trade_interdiction033:0 "Submarine Avoidance Technique"
  trade_interdiction033_desc:0 ""
- trade_interdiction034:0 "諜報活動"
+ trade_interdiction034:0 "Intelligence Activity"
  trade_interdiction034_desc:0 ""
- trade_interdiction035:0 "現代型潜水艦作戦"
+ trade_interdiction035:0 "Modern Submariine Warfare"
  trade_interdiction035_desc:0 ""
- trade_interdiction036:0 "沈黙の軍隊"
+ trade_interdiction036:0 "Silent Service"
  trade_interdiction036_desc:0 ""
- 
- base_strike001:0 "海外展開ドクトリン"
+ base_strike001:0 "Overseas Deployment Doctrine"
  base_strike001_desc:0 ""
- base_strike011:0 "対潜掃討部隊"
+ base_strike011:0 "Anti-Submarine Force"
  base_strike011_desc:0 ""
- base_strike012:0 "レーダーによる対空監視"
+ base_strike012:0 "Air Monitoring by Radar"
  base_strike012_desc:0 ""
- base_strike013:0 "ソナー運用訓練"
+ base_strike013:0 "Sonar Operation Training"
  base_strike013_desc:0 ""
- base_strike014:0 "通商防衛"
+ base_strike014:0 "Trade Defense"
  base_strike014_desc:0 ""
- base_strike021:0 "艦隊補助潜水艦"
+ base_strike021:0 "Fleet Assistant Submarine"
  base_strike021_desc:0 ""
- base_strike022:0 "諜報活動"
+ base_strike022:0 "Intelligence Activity"
  base_strike022_desc:0 ""
- base_strike023:0 "現代型潜水艦作戦"
+ base_strike023:0 "Modern Submariine Warfare"
  base_strike023_desc:0 ""
- base_strike024:0 "沈黙の軍隊"
+ base_strike024:0 "Silent Service"
  base_strike024_desc:0 ""
- base_strike031:0 "艦載機の集中運用"
+ base_strike031:0 "Subsidiary Carrier-Based Aircraft Role"
  base_strike031_desc:0 ""
- base_strike032:0 "航空船団防衛"
+ base_strike032:0 "Air Force Defense"
  base_strike032_desc:0 ""
- base_strike033:0 "火器管制システム"
+ base_strike033:0 "Firearm Control System"
  base_strike033_desc:0 ""
- base_strike034:0 "対地火力投射"
+ base_strike034:0 "Ground-Fired Projection"
  base_strike034_desc:0 ""
- base_strike035:0 "海空空間支配"
+ base_strike035:0 "Domination of the Sea and Sky"
  base_strike035_desc:0 ""
- base_strike036:0 "外洋の支配者"
+ base_strike036:0 "Ruler of the Open Ocean"
  base_strike036_desc:0 ""
- 
- 
-#空軍戦闘教義
- strategic_destruction001:0 "戦略空軍指令"
+ strategic_destruction001:0 "Strategic Air Command"
  strategic_destruction001_desc:0 ""
- strategic_destruction002:0 "集中空間監視"
+ strategic_destruction002:0 "Intensive Airspace Surveillance"
  strategic_destruction002_desc:0 ""
- strategic_destruction011:0 "航空無敵艦隊"
+ strategic_destruction011:0 "Flying Armada Doctrine"
  strategic_destruction011_desc:0 ""
- strategic_destruction021:0 "長距離戦闘機護衛"
+ strategic_destruction021:0 "Long Range Fighter Escorts"
  strategic_destruction021_desc:0 ""
- strategic_destruction003:0 "戦略爆撃機集中"
+ strategic_destruction003:0 "Strategic Bomber Focus"
  strategic_destruction003_desc:0 ""
- strategic_destruction004:0 "全天候訓練"
+ strategic_destruction004:0 "Rough Weather Training"
  strategic_destruction004_desc:0 ""
- strategic_destruction005:0 "防空優勢"
+ strategic_destruction005:0 "Defensive Air Superiority"
  strategic_destruction005_desc:0 ""
- strategic_destruction006:0 "航空作戦の立案"
+ strategic_destruction006:0 "Preplanned Air Operations"
  strategic_destruction006_desc:0 ""
- strategic_destruction007:0 "戦場破壊"
+ strategic_destruction007:0 "Battlefield Destruction"
  strategic_destruction007_desc:0 ""
- strategic_destruction008:0 "クラスター爆弾使用"
+ strategic_destruction008:0 "Cluster Bomb Use"
  strategic_destruction008_desc:0 ""
- strategic_destruction012:0 "戦場阻止"
+ strategic_destruction012:0 "Battlefield Interdiction Doctrine"
  strategic_destruction012_desc:0 ""
- strategic_destruction022:0 "高高度爆撃"
+ strategic_destruction022:0 "High Altitude Bombing"
  strategic_destruction022_desc:0 ""
- 
- battlefield_support001:0 "常時即応ドクトリン"
+ battlefield_support001:0 "Constant Readiness Doctrine"
  battlefield_support001_desc:0 ""
- battlefield_support002:0 "重点爆撃"
+ battlefield_support002:0 "Keypoint Bombardment Doctrine"
  battlefield_support002_desc:0 ""
- battlefield_support011:0 "迎撃機最適化"
+ battlefield_support011:0 "Interceptor Optimization"
  battlefield_support011_desc:0 ""
- battlefield_support012:0 "悪天候下戦闘"
+ battlefield_support012:0 "Bad Weather Combat"
  battlefield_support012_desc:0 ""
- battlefield_support021:0 "航空攻勢優勢"
+ battlefield_support021:0 "Offensive Air Superiority"
  battlefield_support021_desc:0 ""
- battlefield_support022:0 "近接支援機集中"
+ battlefield_support022:0 "CAS Focus"
  battlefield_support022_desc:0 ""
- battlefield_support003:0 "航空戦闘理論"
+ battlefield_support003:0 "Air Combat Theory"
  battlefield_support003_desc:0 ""
- battlefield_support004:0 "戦場阻止"
+ battlefield_support004:0 "Battlefield Interdiction Doctrine"
  battlefield_support004_desc:0 ""
- battlefield_support005:0 "歩兵殲滅集中"
+ battlefield_support005:0 "Infantry Destruction Focus"
  battlefield_support005_desc:0 ""
- battlefield_support006:0 "精密誘導弾"
+ battlefield_support006:0 "Precision Guided Munitions"
  battlefield_support006_desc:0 ""
- battlefield_support007:0 "戦車破壊ドクトリン"
+ battlefield_support007:0 "Armor Destruction Doctrine"
  battlefield_support007_desc:0 ""
- battlefield_support008:0 "柔軟な目標選択"
+ battlefield_support008:0 "Opportunistic Target Selection"
  battlefield_support008_desc:0 ""
- 
- operational_integrity001:0 "中央戦闘機指令"
+ operational_integrity001:0 "Central Fighter Command"
  operational_integrity001_desc:0 ""
- operational_integrity002:0 "防衛体制"
+ operational_integrity002:0 "Defensive Systems"
  operational_integrity002_desc:0 ""
- operational_integrity003:0 "重点破壊優先"
+ operational_integrity003:0 "Heavy Target Destruction Priority"
  operational_integrity003_desc:0 ""
- operational_integrity011:0 "戦闘機集中"
+ operational_integrity011:0 "Fighter Focus"
  operational_integrity011_desc:0 ""
- operational_integrity012:0 "制空権"
+ operational_integrity012:0 "Air Control"
  operational_integrity012_desc:0 ""
- operational_integrity021:0 "精密誘導弾"
+ operational_integrity021:0 "Precision Guided Munitions"
  operational_integrity021_desc:0 ""
- operational_integrity022:0 "戦場阻止"
+ operational_integrity022:0 "Battlefield Interdiction Doctrine"
  operational_integrity022_desc:0 ""
- operational_integrity004:0 "迎撃機集中"
+ operational_integrity004:0 "Interceptor Focus"
  operational_integrity004_desc:0 ""
- operational_integrity005:0 "先制攻撃ドクトリン"
+ operational_integrity005:0 "Preemptive Strike Doctrine"
  operational_integrity005_desc:0 ""
- operational_integrity006:0 "迅速航空優勢"
+ operational_integrity006:0 "Rapid Air Superiority"
  operational_integrity006_desc:0 ""
- operational_integrity007:0 "高性能爆薬"
+ operational_integrity007:0 "High Yield Explosives"
  operational_integrity007_desc:0 ""
- operational_integrity008:0 "航空予備兵力"
+ operational_integrity008:0 "Air Reserve Doctrine"
  operational_integrity008_desc:0 ""
